Rest zum vorigen Commit
Ich hatte vorhin nur eine Datei committet. Diese Änderungen sind ebenfalls dazu da, um die anderen Mitschriften zu unseren Vorlagen kompatibler zu machen.

git-svn-id: https://svn.lug-jena.de/uni-skripte@2341 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/Kapitel6.tex
+++ b/kuelshammer-algebra1/Kapitel6.tex
@@ -37,7 +37,7 @@ Für $\alpha \in K[X]$ und $0 \neq \in K[X]$ sind äquivalent:
 \begin{enumerate}[(1)]
 	\item $\alpha + (\varphi)$ ist in $K[X] / (\varphi)$ invertierbar
 	\item Es existiert ein $\beta \in K[X]$ mit $\alpha\beta \equiv 1 \pmod{p}$
-	\item $\ggT(\alpha, \varphi) = 1$
+	\item $\ggt(\alpha, \varphi) = 1$
 \end{enumerate}
 \end{satz}
 
@@ -52,7 +52,7 @@ Analog zu $\ZmZ{m}$.
 % Bemerkung 6.3
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:6.3}
-Für $0 \neq \varphi \in K[X]$ gilt nach \autoref{satz:6.1}: \[U\left(K[X] / (\varphi)\right) = \left\{\alpha + (\varphi) \colon \alpha \in K[X], \ggT(\alpha, \varphi) = 1\right\}.\] Der erweiterte euklidische Algorithmus liefert zu $\alpha \in K[X]$ mit $\ggT(\alpha, \varphi) = 1$, Polynome $\beta, \gamma \in K[X]$ mit $\alpha\beta + \varphi\gamma = 1$. Dann: $\alpha\beta \equiv 1 \pmod{\varphi}$, d.\,h. $\left[\alpha + (\varphi)\right]\left[\beta + (\varphi)\right] = 1 + (\varphi).$ Also ist $\left[\alpha + (\varphi)\right]^{-1} = \beta + (\varphi)$.
+Für $0 \neq \varphi \in K[X]$ gilt nach \autoref{satz:6.1}: \[U\left(K[X] / (\varphi)\right) = \left\{\alpha + (\varphi) \colon \alpha \in K[X], \ggt(\alpha, \varphi) = 1\right\}.\] Der erweiterte euklidische Algorithmus liefert zu $\alpha \in K[X]$ mit $\ggt(\alpha, \varphi) = 1$, Polynome $\beta, \gamma \in K[X]$ mit $\alpha\beta + \varphi\gamma = 1$. Dann: $\alpha\beta \equiv 1 \pmod{\varphi}$, d.\,h. $\left[\alpha + (\varphi)\right]\left[\beta + (\varphi)\right] = 1 + (\varphi).$ Also ist $\left[\alpha + (\varphi)\right]^{-1} = \beta + (\varphi)$.
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
@@ -70,7 +70,7 @@ Sei $0 \neq \varphi \in K[X]$ normiert, dann gilt: \[K[X] / (\varphi) \text{ Kör
 \item["`$\Rightarrow$"'] Sei $K[X] / (\varphi)$ Körper. Wegen $K[X] / (\varphi) \neq \left\{0\right\} ist \deg\varphi > 0$.\\
 Wäre $\varphi$ reduzibel, so wäre $\varphi = \alpha\beta$ mit $\alpha, \beta \in K[X]$, $\deg\alpha < \deg\varphi$, $\deg\beta < \deg\varphi$. Dann wäre $\alpha + (\varphi) \neq 0 \neq \beta + (\varphi)$, aber $\left[\alpha + (\varphi)\right]\left[\beta + (\varphi)\right] = \alpha\beta + (\varphi) = \varphi + (\varphi) = 0 + (\varphi) \Rightarrow$ Widersprich!\\
 \item["`$\Leftarrow$"'] Sei $\varphi$ irreduzibel. Dann $\deg\varphi > 0$ und $K[X] / (\varphi) \neq \left\{0\right\}$. Sei $0 \neq \alpha \in K[X]$ mit $\deg\alpha < \deg\varphi$.\\
-Dann: $\varphi\not\mid\alpha$, also $\ggT(\alpha, \varphi) = 1$\\
+Dann: $\varphi\not\mid\alpha$, also $\ggt(\alpha, \varphi) = 1$\\
 Folglich: $\alpha + (\varphi) \in U\left(K[X]/(\varphi)\right)$. Also $K[X] / (\varphi)$ Körper.
 \end{itemize}
 \end{beweis}
@@ -240,7 +240,7 @@ Es gibt also keine Körper mit $6$ oder $10$ Elementen. Anzahl kann nur $p^n \ \l
 Für ein Element $a$ einer Gruppe $G$ nennt man $ord(a) := \min{\left\{n \in \N \colon a^n = 1\right\}}$ die Ordnung von $a$. Existiert das Minimum nicht, so sagt man, dass $a$ unendliche Ordnung hat, und schreibt: $ord(a) = \infty$. Ist $G$ endlich, so hat jedes Element in $G$ endliche Ordnung (ÜA 10).\\
 Im Folgenden sei $ord(a) = n < \infty$.\\
 Nach ÜA 10 enthält dann \[\left\{a^m \colon m \in \Z\right\} = \left\{1, a, a^2, \ldots, a^{n-1}\right\}\] genau $n$ verschiedene Elemente.
-Genauer gilt: $a^k = a^l \Leftrightarrow k \equiv l \pmod{n}$. Insbesondere gilt für $m \in \Z \colon a^m = 1 \Leftrightarrow n\mid m$. Für $i \in \Z$ folgt daraus: $ord(a^i) = \nicefrac{n}{\ggT(i, n)}$.
+Genauer gilt: $a^k = a^l \Leftrightarrow k \equiv l \pmod{n}$. Insbesondere gilt für $m \in \Z \colon a^m = 1 \Leftrightarrow n\mid m$. Für $i \in \Z$ folgt daraus: $ord(a^i) = \nicefrac{n}{\ggt(i, n)}$.
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
