--- a/kuelshammer-algebra1/Kapitel1.tex
+++ b/kuelshammer-algebra1/Kapitel1.tex
@@ -103,28 +103,28 @@ Dieses Verfahren heißt euklidischer Algorithmus (\textsc{Euklid} 365--300).
 \index{Größter gemeinsamer Teiler}
 \begin{defi}\label{defi:1.4}
 Seien $a_{1}, \ldots, a_{n} \in \Z$.\\
-Ein $d \in \N_{0} \cap gT(a_{1}, \ldots, a_{n})$ heißt \emph{größter gemeinsamer Teiler} von $a_{1}, \ldots, a_{n}$ ($\ggT$), falls d durch jeden gemeinsamen Teiler von $a_{1}, \ldots, a_{n}$ teilbar ist.
+Ein $d \in \N_{0} \cap gT(a_{1}, \ldots, a_{n})$ heißt \emph{größter gemeinsamer Teiler} von $a_{1}, \ldots, a_{n}$ ($\ggt$), falls d durch jeden gemeinsamen Teiler von $a_{1}, \ldots, a_{n}$ teilbar ist.
 \end{defi}
 
 %%%%%%%%%%%%%%%%%%%
 % Satz 1.3
 %%%%%%%%%%%%%%%%%%%
-\begin{satz}[Existenz ggT]\label{satz:1.3}
-Zu $a_{1}, \ldots, a_{n} \in \Z$ existiert stets genau ein $\ggT \ d$.
+\begin{satz}[Existenz ggt]\label{satz:1.3}
+Zu $a_{1}, \ldots, a_{n} \in \Z$ existiert stets genau ein $\ggt \ d$.
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Nach \autoref{bem:1.1} ist $gT(a_{1}, \ldots, a_{n}) = gT(b)$ für ein $b \in \N_{0}$. Dann ist $b$ ein $\ggT$ von $a_{1}, \ldots, a_{n}$. Ist $b' \in \N_{0}$ ein weiterer $\ggT$ von $a_{1}, \ldots, a_{n}$, so gilt:\[b\mid b'\ und\ b'\mid b,\] also $b = \pm b'$ nach \autoref{satz:1.2}. Wegen $b, b' \in \N_{0}$ folgt $b = b'$.
+Nach \autoref{bem:1.1} ist $gT(a_{1}, \ldots, a_{n}) = gT(b)$ für ein $b \in \N_{0}$. Dann ist $b$ ein $\ggt$ von $a_{1}, \ldots, a_{n}$. Ist $b' \in \N_{0}$ ein weiterer $\ggt$ von $a_{1}, \ldots, a_{n}$, so gilt:\[b\mid b'\ und\ b'\mid b,\] also $b = \pm b'$ nach \autoref{satz:1.2}. Wegen $b, b' \in \N_{0}$ folgt $b = b'$.
 \end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
 % Bemerkung 1.2
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}
-Man schreibt $d = \ggT(a_{1}, \ldots, a_{n})$ und zeigt leicht:\[d = \ggT(a_{1}, \ggT(a_{2}, \ldots, a_{n})).\] Daher genügt es meist, den $\ggT$ von zwei Zahlen zu berechnen.
+Man schreibt $d = \ggt(a_{1}, \ldots, a_{n})$ und zeigt leicht:\[d = \ggt(a_{1}, \ggt(a_{2}, \ldots, a_{n})).\] Daher genügt es meist, den $\ggt$ von zwei Zahlen zu berechnen.
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
@@ -135,7 +135,7 @@ Man schreibt $d = \ggT(a_{1}, \ldots, a_{n})$ und zeigt leicht:\[d = \ggT(a_{1},
 Seien $a, b \in \N$. Setze \[\begin{array}{lll}(x_{0}, y_{0}, z_{0}) & := & (1, 0, a),\\ (x_{1}, y_{1}, z_{1}) & := & (0, 1, b)\\\end{array}\] und $i := 1$.\\
 Im Fall $z_{i} = 0$ brechen wir ab.\\
 Im Fall $z_{i} \neq 0$ liefert Division mit Rest $q_{i}, r_{i} \in \Z$ mit $z_{i-1} = q_{i}z_{i} + r_{i}, 0 \leq r_{i} < z_{i}$.\\
-Wir setzen \[(x_{i+1}, y_{i+1}, z_{i+1}) := (x_{i+1} - q_{i}x_{i}, y_{i-1} - q_{i}y_{i}, z_{i-1} - q_{i}z_{i}),\] erhöhen i um 1 und iterieren. Dieses Verfahren bricht ab, und am Ende ist \[\ggT(a, b) = z_{i-1} = x_{i-1}a + y_{i-1}b.\]
+Wir setzen \[(x_{i+1}, y_{i+1}, z_{i+1}) := (x_{i+1} - q_{i}x_{i}, y_{i-1} - q_{i}y_{i}, z_{i-1} - q_{i}z_{i}),\] erhöhen i um 1 und iterieren. Dieses Verfahren bricht ab, und am Ende ist \[\ggt(a, b) = z_{i-1} = x_{i-1}a + y_{i-1}b.\]
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
@@ -152,7 +152,7 @@ x_{i} & y_{i} & z_{i} & q_{i}\\
 2 & -3 & 13 & 3\\
 & & 0 \\
 \end{array}\]
-Also $\ggT(143, 91) = 13 = 2 \times 143 - 3 \times 91$!
+Also $\ggt(143, 91) = 13 = 2 \times 143 - 3 \times 91$!
 \end{bsp}
 
 %%%%%%%%%%%%%%%%%%%
@@ -160,8 +160,8 @@ Also $\ggT(143, 91) = 13 = 2 \times 143 - 3 \times 91$!
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
 Wegen $b = z_{1} > z_{2} > \ldots > z_{i-1} > z_{i} = 0$ bricht das Verfahren ab.\\
-Am Anfang $(i = 1)$ ist $\ggT(a, b) = \ggT(z_{i-1}, z_{i})$, und das bleibt während des Verfahrens erhalten. $\left[\text{beachte: } \ggT(z_{i-1}, z_{i}) = \ggT(z_{i}, \underbrace{z_{i+1}}_{z_{i-1} - q_{i}z_{i}})\right]$\\
-Am Ende ist $z_{i} = 0$, also $\ggT(a, b) = \ggT(z_{i-1}, z_{i}) = z_{i-1}$.\\
+Am Anfang $(i = 1)$ ist $\ggt(a, b) = \ggt(z_{i-1}, z_{i})$, und das bleibt während des Verfahrens erhalten. $\left[\text{beachte: } \ggt(z_{i-1}, z_{i}) = \ggt(z_{i}, \underbrace{z_{i+1}}_{z_{i-1} - q_{i}z_{i}})\right]$\\
+Am Ende ist $z_{i} = 0$, also $\ggt(a, b) = \ggt(z_{i-1}, z_{i}) = z_{i-1}$.\\
 Am Anfang $(i = 0, 1)$ ist $x_{i}a + y_{i}b = z_{i}$, und das bleibt während des Verfahrens erhalten:
 \[\begin{array}{lcl}
 x_{i+1}a + y_{i+1}b & = & (x_{i-1} - q_{i}x_{i})a + (y_{i-1} - q_{i}y_{i})b\\
@@ -174,7 +174,7 @@ x_{i+1}a + y_{i+1}b & = & (x_{i-1} - q_{i}x_{i})a + (y_{i-1} - q_{i}y_{i})b\\
 % Bemerkung
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}
-Der erweiterte euklidische Algorithmus liefert also nicht nur $d := \ggT(a, b)$, somdern auch $x, y \in \Z$ mit $d = ax + by$.\\
+Der erweiterte euklidische Algorithmus liefert also nicht nur $d := \ggt(a, b)$, somdern auch $x, y \in \Z$ mit $d = ax + by$.\\
 Ist man an $x, y$ nicht interessiert, so kann man bei der Iteration die $x_{i}, y_{i}$ weglassen.
 \end{bem}
 
@@ -182,7 +182,7 @@ Ist man an $x, y$ nicht interessiert, so kann man bei der Iteration die $x_{i}, 
 % Satz 1.5
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:1.5}
-Für $a_{1}, \ldots a_{n}, b \in \Z$ gilt:\[\exists\ x_{1}, \ldots, x_{n} \in \Z \colon b = x_{1}a_{1} + \ldots + x_{n}a_{n} \Leftrightarrow \ggT(a_{1}, \ldots, a_{n})\mid b.\]
+Für $a_{1}, \ldots a_{n}, b \in \Z$ gilt:\[\exists\ x_{1}, \ldots, x_{n} \in \Z \colon b = x_{1}a_{1} + \ldots + x_{n}a_{n} \Leftrightarrow \ggt(a_{1}, \ldots, a_{n})\mid b.\]
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
@@ -191,17 +191,17 @@ Für $a_{1}, \ldots a_{n}, b \in \Z$ gilt:\[\exists\ x_{1}, \ldots, x_{n} \in \Z 
 \begin{beweis}
 \begin{itemize}
 \item["`$\Rightarrow$"'] Sei $b = x_{1}a_{1} + \ldots + x_{n}a_{n} (x_{1}, \ldots, x_{n} \in \Z).$\\
-Für $t \in gT(a_{1}, \ldots, a_{n})$ gilt dann $t\mid x_{1}a_{1} + \ldots + x_{n}a_{n} = b$. Insbesondere $\ggT(a_{1}, \ldots, a_{n})\mid b$.\\\\
-\item["`$\Leftarrow$"'] Sei $d := \ggT(a_{1}, \ldots, a_{n}\mid b)$, etwa $b = cd$.\\
+Für $t \in gT(a_{1}, \ldots, a_{n})$ gilt dann $t\mid x_{1}a_{1} + \ldots + x_{n}a_{n} = b$. Insbesondere $\ggt(a_{1}, \ldots, a_{n})\mid b$.\\\\
+\item["`$\Leftarrow$"'] Sei $d := \ggt(a_{1}, \ldots, a_{n}\mid b)$, etwa $b = cd$.\\
 Es genügt zu zeigen, dass $y_{1}, \ldots, y_{n} \in \Z$ existieren mit $d = y_{1}a_{1} + \ldots + y_{n}a_{n}$, denn dann ist $b = cd = \underbrace{cy_{1}}_{x_{1}}a_{1} + \ldots + \underbrace{cy_{n}}_{x_{n}}a_{n}$.\\
 Die Existenz von $y_{1}, \ldots, y_{n}$ zeigen wir induktiv.\\ 
 Im Fall $n = 1$ ist $d = \pm a_{1}$.\\
 Im Fall $n = 2$ folgt die Existenz von $y_{1}, y_{2}$ aus \autoref{satz:1.4}.\\
-Im Fall $n > 2$ existieren nach Induktion $z_{1}, \ldots, z_{n} \in \Z$ mit \[\ggT(a_{2}, \ldots, a_{n}) = z_{2}a_{2} + \ldots + z_{n}a_{n}.\]
+Im Fall $n > 2$ existieren nach Induktion $z_{1}, \ldots, z_{n} \in \Z$ mit \[\ggt(a_{2}, \ldots, a_{n}) = z_{2}a_{2} + \ldots + z_{n}a_{n}.\]
 Außerdem existieren $v_{1}, v_{2} \in \Z$ mit 
 \[\begin{array}{lcl}
-d & = & \ggT(a_{1}, \ggT(a_{2}, \ldots, a_{n}))\\ 
-& \stackrel{\autoref{satz:1.5}}{=} & v_{1}a_{1} + v_{2}\ggT(a_{2}, \ldots, a_{n})\\
+d & = & \ggt(a_{1}, \ggt(a_{2}, \ldots, a_{n}))\\ 
+& \stackrel{\autoref{satz:1.5}}{=} & v_{1}a_{1} + v_{2}\ggt(a_{2}, \ldots, a_{n})\\
 & = & v_{1}a_{1} + v_{2}z_{2}a_{2} + \ldots + v_{2}z_{n}a_{n}.
 \end{array}\]
 \end{itemize}
@@ -211,7 +211,7 @@ d & = & \ggT(a_{1}, \ggT(a_{2}, \ldots, a_{n}))\\
 % Bemerkung
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}
-Daher gilt: \[\ggT(a_{1}, \ldots, a_{n}) = 1 \Leftrightarrow \exists\ x_{1}, \ldots, x_{n} \in \Z \colon x_{1}a_{1} + \ldots + x_{n}a_{n} = 1.\]
+Daher gilt: \[\ggt(a_{1}, \ldots, a_{n}) = 1 \Leftrightarrow \exists\ x_{1}, \ldots, x_{n} \in \Z \colon x_{1}a_{1} + \ldots + x_{n}a_{n} = 1.\]
 Gegebenenfalls heißen $a_{1}, \ldots, a_{n}$ \highl{Teilerfremd}{teilerfremd}.
 \end{bem}
 
@@ -281,7 +281,7 @@ Für $a, b \in \Z$ ist jeder Primteiler $p$ von $ab$ ein Teiler von $a$ oder $b$.
 \begin{beweis}
 Im Fall $p\mid a$ sind wir fertig.\\
 Sei also $p \nmid a$.\\ 
-Dann: $1 = \ggT(p, a) = xp + ya$ mit geeigneten $x, y \in \Z.$\\
+Dann: $1 = \ggt(p, a) = xp + ya$ mit geeigneten $x, y \in \Z.$\\
 Folglich: $p\mid xpb + yab = (xp + ya)b = 1b = b$
 \end{beweis}
 
@@ -317,7 +317,7 @@ Zu jeder natürlichen Zahl $m \neq \ 1$ existieren $p_1, \ldots, p_r \in \PZ$ mit
 	
 	\item Die Teiler von $m = \prod\limits_{p \in \PZ}p^{b_p}$ sind genau die Zahlen $\pm \prod\limits_{p \in \PZ}p^{t_p}$ mit $t_p \leq b_p$ für alle $p \in \PZ$.
 	
-	\item Die gemeinsamen Teiler von $m = \prod\limits_{p \in \PZ}p^{b_p}$ und $n = \prod\limits_{p \in \PZ}p^{c_p}$ sind also genau die Zahlen $\pm \prod\limits_{p \in \PZ}p^{t_p}$ mit $t_p \leq min \left\{b_p, c_p\right\}$ für alle $p \in \PZ$. Daher ist $\ggT(a, b) = \prod\limits_{p \in \PZ}p^{min\left\{b_p, c_p\right\}}$.
+	\item Die gemeinsamen Teiler von $m = \prod\limits_{p \in \PZ}p^{b_p}$ und $n = \prod\limits_{p \in \PZ}p^{c_p}$ sind also genau die Zahlen $\pm \prod\limits_{p \in \PZ}p^{t_p}$ mit $t_p \leq min \left\{b_p, c_p\right\}$ für alle $p \in \PZ$. Daher ist $\ggt(a, b) = \prod\limits_{p \in \PZ}p^{min\left\{b_p, c_p\right\}}$.
 	
 	\item Die Konstruktion großer Primzahlen und die Primfaktorzerlegung großer natürlicher Zahlen sind von erheblicher Bedeutung für die Kryptographie, d.\,h. die Lehre vom Ver- sowie Entschlüsseln geheimer Nachrichten.
 \end{enumerate}
