--- a/kuelshammer-algebra1/Kapitel13.tex
+++ b/kuelshammer-algebra1/Kapitel13.tex
@@ -4,7 +4,7 @@
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:13.1}
 Offenbar ist $\Z\left[X\right] := \left\{\sum\limits_{i=0}^{\infty}a_iX^i\Q\left[X\right]\colon a_0, a_1, a_2, \ldots \in \Z\right\}$ ein Ring bezüglich der üblichen Addition und Multiplikation von Polynomen.\\
-Ein Polynom $\alpha = \sum\limits_{i=0}^{\infty}a_iX^i \in \Z\left[X\right]$ mit $\ggT{\left(a_0, \ldots, a_n\right)} = 1$ heißt \highl{Polynom!primitiv}{primitiv}.\\
+Ein Polynom $\alpha = \sum\limits_{i=0}^{\infty}a_iX^i \in \Z\left[X\right]$ mit $\ggt{\left(a_0, \ldots, a_n\right)} = 1$ heißt \highl{Polynom!primitiv}{primitiv}.\\
 Insbesondere ist jedes normierte Polynom $\alpha \in \Z\left[X\right]\backslash\left\{0\right\}$ primitiv.
 \end{bem}
 
@@ -23,14 +23,14 @@ Dabei sind $q, \alpha$ bis auf das Vorzeichen eindeutig bestimmt.
 Sei $0 \neq \varphi \in \Q\left[X\right]$.
 Sei $n$ das Produkt der Nenner der Koeffizienten von $\varphi$.
 Dann: $n\varphi \in \Z\left[X\right]$.
-Sei $d$ der $\ggT$ der Koeffizienten von $n\varphi$.
+Sei $d$ der $\ggt$ der Koeffizienten von $n\varphi$.
 Dann $\alpha := \frac{n\varphi}{d}\in \Z\left[X\right]$ primitiv, und $\varphi = q\alpha$ mit $q := \frac{d}{n} \in \Q$.\\
 Sei auch $\varphi = r\beta \ \ \left(r \in \Q, \beta \in \Z\left[X\right] \text{ primitiv}\right)$.\\
-Schreibe $q = \frac{a}{b}, r = \frac{s}{t} \ \ \left(a, b, s, t \in \Z, \ggT{\left(a, b\right)} = 1 = \ggT\left(s, t\right) = 1\right)$.\\
+Schreibe $q = \frac{a}{b}, r = \frac{s}{t} \ \ \left(a, b, s, t \in \Z, \ggt{\left(a, b\right)} = 1 = \ggt\left(s, t\right) = 1\right)$.\\
 Dann: $\frac{a}{b}\alpha = \frac{s}{t}\beta$, d.\,h. $ta\alpha = bs\beta$;
 insbesondere teilt $t$ jeden Koeffizienten von $ta\alpha = bs\beta$.
 Da $\beta$ primitiv ist, folgt: $t\mid bs$.
-Wegen $\ggT\left(s, t\right) = 1$ ist also $t\mid b$.
+Wegen $\ggt\left(s, t\right) = 1$ ist also $t\mid b$.
 Analog: $b\mid t$, d.\,h. $t = \pm b$, \OE{} $t = b$.\\
 Dann: $a\alpha = b\beta$; insbesondere teilt $a$ jeden Koeffizienten von $a\alpha = b\beta$.
 Da $\beta$ primitiv ist, folgt: $a\mid s$.
@@ -69,7 +69,7 @@ Dann existieren $\beta, \gamma \in \Z\left[X\right]$ mit $\alpha = \beta\gamma$,
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Sei $d$ der $\ggT$ der Koeffizienten von $\alpha$.
+Sei $d$ der $\ggt$ der Koeffizienten von $\alpha$.
 Dann $\alpha = \alpha\overline{\alpha} \ \ \left(\overline{\alpha} \in \Z\left[X\right] \text{ primitiv}\right)$.\\
 Da $\alpha$ in $\Q\left[X\right]$ reduzibel ist, existieren $\varphi, \psi \in \Q\left[X\right]$ mit $\alpha = \varphi\psi$, $\deg\varphi < \deg\alpha$, $\deg\psi < \deg\alpha$.\\
 Schreibe $\varphi = q\beta$, $\psi = r\gamma$ $\left(q, r \in \Q, \ \beta, \gamma \in \Z\left[X\right] \text{ primitiv}\right)$.\\
@@ -132,10 +132,10 @@ Da $\C$ algebraisch abgeschlossen ist, enthält $\C$ also genau $n$ verschiedene 
 Diese bilden eine Untergruppe $W_n$ von $\C\backslash\left\{0\right\}$.
 Als solche ist sie zyklisch, d.\,h. $W_n = \left\langle \zeta\right\rangle$ für eine primitive n--te Einheitswurzel $\zeta$.\\
 Für $k\in\N$ gilt dabei: 
-\[\ord\left(\zeta^k\right) = n \Leftrightarrow \ggT\left(k, n\right) = 1\]
+\[\ord\left(\zeta^k\right) = n \Leftrightarrow \ggt\left(k, n\right) = 1\]
 Daher enthält $\C$ genau $\varphi\left(n\right)$ \randbem{Eulerische $\varphi$--Funktion} primitive n--te Einheitswurzel.\\
 Es ist $X^n-1 = \prod\limits_{k=1}^{n}\left(X-\zeta^k\right)$.\\
-Man nennt \[\Phi_n := \prod_{\mystackrel{k=1}{\ggT\left(k, n\right)=1}}^{n}\left(X-\zeta^k\right) \in \C\left[X\right]\]
+Man nennt \[\Phi_n := \prod_{\mystackrel{k=1}{\ggt\left(k, n\right)=1}}^{n}\left(X-\zeta^k\right) \in \C\left[X\right]\]
 das \highl{Kreisteilungspolynom}{n--te Kreisteilungspolynom}.\\
 Also $\deg\Phi_n = \varphi\left(n\right)$.
 Da jede n--te Einheitswurzel eine primitive d--te Einheitswurzel für genau einen Teiler $d$ von $n$ ist, gilt: $X^n-1 = \prod\limits_{d\mid n}\Phi_d\left(X\right)$, d.\,h. $\Phi_n = \frac{X^n-1}{\prod\limits_{\mystackrel{d\mid n}{d\neq n}}\Phi_d}$.\\
@@ -172,7 +172,7 @@ Sei $\zeta \in\C$ Nullstelle von $\beta$, d.\,h. $\zeta$ ist eine primitive n--t
 Sei $p \in \PZ$ mit $p \nmid n$.
 Wir zeigen, dass $\zeta^p$ auch Nullstelle von $\beta$.\\
 (Dann folgt, dass jede primitive n--te Einheitswurzel Nullstelle von $\beta$ ist;
-denn jede solche hat die Form $\zeta^k$ für ein $k\in\N$ mit $\ggT\left(k, n\right)$, und $k$ läßt sich als Produkt von Primfaktoren $p_i$ mit $p_i \nmid n$ schreiben)\\
+denn jede solche hat die Form $\zeta^k$ für ein $k\in\N$ mit $\ggt\left(k, n\right)$, und $k$ läßt sich als Produkt von Primfaktoren $p_i$ mit $p_i \nmid n$ schreiben)\\
 Wir nehmen an: $\zeta^p$ keine Nullstelle von $\beta$.
 Da $\zeta^p$ eine primitive n--te Einheitswurzel ist, folgt $\gamma\left(\zeta^p\right) = 0$.
 Da $\beta$ das Minimalpolynom von $\zeta$ über $\Q$ ist, folgt $\beta\mid\gamma\left(X^p\right)$.
@@ -186,7 +186,7 @@ Für $\omega\in\Z\left[X\right]$ ist dann natürlich $\overline{\psi\omega} = \ove
 & = & X^{pm} + \left(c_{m-1}+p\Z\right)^pX^{\left(m-1\right)p} + \ldots + \left(c_1+p\Z\right)^pX^p+\left(c_0+p\Z\right)^p\\
 & = & \overline{\gamma}^p
 \end{array}\]
-Daher $\ggT\left(\overline{\beta}, \overline{\gamma}\right) \neq 1$.
+Daher $\ggt\left(\overline{\beta}, \overline{\gamma}\right) \neq 1$.
 Wegen $\overline{\Phi}_n = \overline{\beta}\overline{\gamma}$ existiert also ein irreduzibles Polynom $\overline{\pi} \in \F_p\left[X\right]$ mit $\overline{\pi}^2\mid \overline{\Phi}_n\mid X^n-1$.
 Dann ist aber $\overline{\pi}\mid \left(X^n-1\right)' = nX^{n-1}\neq 0$, d.\,h. $\overline{\pi} = X$.
 Widerspruch wegen $X \nmid X^n-1$ in $\F_p\left[X\right]$.
@@ -221,12 +221,12 @@ Für $\alpha \in \Gal\left(\Q\left(\zeta\right)\mid \Q\right)$ ist
 \Phi_n\left(\alpha\left(\zeta\right)\right) & = & \alpha\left(\zeta\right)^m + a_{m-1}\alpha\left(\zeta\right)^{m-1} + \ldots + a_1\alpha\left(\zeta\right)+a_0\\
 & = & \alpha\left(\underbrace{\zeta^m + a_{m-1}\zeta^{m-1}+\ldots+a_1\zeta+a_0}_{\Phi_n\left(\zeta\right) = 0}\right) = 0
 \end{array},\]
-d.\,h. $\alpha\left(\zeta\right) = \zeta^k$ für ein $k\in\Z$ mit $\ggT\left(k,n\right) = 1$;
+d.\,h. $\alpha\left(\zeta\right) = \zeta^k$ für ein $k\in\Z$ mit $\ggt\left(k,n\right) = 1$;
 dabei ist $k$ modulo $n$ eindeutig bestimmt.\\
 Durch $\Gal\left(\Q\left(\zeta\right)\mid\Q\right)\mapsto U\left(\ZmZ{n}\right)$, $\alpha \mapsto k + n\Z$ erhalten wir also eine wohldefinierte Abbildung.
 Da $\alpha$ durch $\alpha\left(\zeta\right)$ eindeutig bestimmt ist, ist die Abbildung injektiv.\\
 Sei auch $\beta \in \Gal\left(\Q\left(\zeta\right)\mid \Q\right)$.
-Dann: $\beta\left(\zeta\right) = \zeta^l$ mit $l\in\Z$, $\ggT\left(l,n\right) = 1$.
+Dann: $\beta\left(\zeta\right) = \zeta^l$ mit $l\in\Z$, $\ggt\left(l,n\right) = 1$.
 Dann $\alpha \circ\beta \in \Gal\left(\Q\left(\zeta\right)\mid \Q\right)$ mit $\left(\alpha\circ\beta\right)\left(\zeta\right) = \alpha\left(\beta\left(\zeta\right)\right) = \alpha\left(\zeta^l\right) = \alpha\left(\zeta\right)^l = \left(\zeta^k\right)^l = \zeta^{kl}$.
 Dies zeigt, dass unsere Abbildung ein Homomorphismus ist.\\
 Wegen $\abs{\Gal\left(\Q\left(\zeta\right)\mid \Q\right)} = \left[\Q\left(\zeta\right):\Q\right] = \varphi\left(n\right) = \abs{U\left(\ZmZ{n}\right)}$ folgt aus der Injektivität die Surjektivität.
