--- a/kuelshammer-algebra1/Kapitel14.tex
+++ b/kuelshammer-algebra1/Kapitel14.tex
@@ -291,12 +291,12 @@ Es genügt zu zeigen, dass $\Gal\left(M\mid K\right)$ auflösbar ist;
 denn dann ist auch $\Gal\left(L\mid K\right) \stackrel{\autoref{satz:11.4}}{\cong} \Gal\left(M\mid K\right) / \Gal\left(M\mid L\right)$.
 
 Zunächst ist $K\left(\zeta\right)\mid K$ eine Galoiserweiterung, da $K\left(\zeta\right)$ Zerfällungskörper von $X^n-1$ über $K$ ist.
-Für $\sigma\in\Gal\left(K\left(\zeta\right)\mid K\right)$ ist $\sigma\left(\zeta\right)^n = \sigma\left(\zeta^n\right) = \sigma\left(1\right) = 1$, d.\,h. $\sigma\left(\zeta\right) = \zeta^i$ für ein $i\in\Z$ mit $\ggT\left(i, n\right) = 1$.
+Für $\sigma\in\Gal\left(K\left(\zeta\right)\mid K\right)$ ist $\sigma\left(\zeta\right)^n = \sigma\left(\zeta^n\right) = \sigma\left(1\right) = 1$, d.\,h. $\sigma\left(\zeta\right) = \zeta^i$ für ein $i\in\Z$ mit $\ggt\left(i, n\right) = 1$.
 Dabei ist $i$ modulo $n$ eindeutig bestimmt.\\
 Durch $\sigma\mapsto i+n\Z$ erhalten wir eine wohldefinierte Abbildung
 \[f\colon\Gal\left(K\left(\zeta\right)\mid K\right)\mapsto U\left(\ZmZ{n}\right).\]
 Diese ist injektiv, da $\sigma$ durch $\sigma\left(\zeta\right) = \zeta^i$ eindeutig bestimmt ist.\\
-Sei nun auch $\tau\in\Gal\left(K\left(\sigma\right)\mid K\right)$, und sei $j\in\Z$ mit $\ggT\left(j,n\right) = 1$ und $\tau\left(\zeta\right) = \zeta^j$.
+Sei nun auch $\tau\in\Gal\left(K\left(\sigma\right)\mid K\right)$, und sei $j\in\Z$ mit $\ggt\left(j,n\right) = 1$ und $\tau\left(\zeta\right) = \zeta^j$.
 Dann: $\left(\sigma\circ\tau\right)\left(\zeta\right) = \sigma\left(\tau\left(\zeta\right)\right) = \sigma\left(\zeta^j\right) = \sigma\left(\zeta\right)^j = \left(\zeta^i\right)^j = \zeta^{ij}$, d.\,h. $f\left(\sigma\circ\tau\right) = ij+n\Z = \left(i+n\Z\right)\left(j+n\Z\right) = f\left(\sigma\right)f\left(\tau\right)$.
 Also ist $f$ ein Monomorphismus, insbesondere ist $\Gal\left(K\left(\zeta\right)\mid K\right) \cong \Bld\left(f\right) \leq U\left(\ZmZ{n}\right)$ abelsch.
 Daher ist $\Gal\left(M\mid K\left(\zeta\right)\right) \taleq \Gal\left(M\mid K\right)$ und $\Gal\left(M\mid K\right) / \Gal\left(M\mid K\left(\zeta\right)\right) \cong \Gal\left(K\left(\zeta\right)\mid K\right)$ abelsch.
@@ -494,19 +494,19 @@ Auf diese Weise erhalten wir einen Monomorphismus:
 dabei ist $5 = \deg\varphi = \left[\Q\left(b_1\right):\Q\right]\mid\left[L':\Q\right] = \abs{G}$.
 Nach Cauchy (\autoref{satz:14.8}) entahlten $G$ und $\Gamma\left(G\right)$ ein Element der Ordnung $5$.
 Man zeigt leicht, dass die Elemente der Ordnung $5$ in $\Sym\left(5\right)$ die folgende Form haben:\\
-\InitGraph{3}{3}{0.5}{0.5}{0.5cm}
-\TextAt(0, 1.2)[c]{e}
-\TextAt(0.3, 0)[c]{d}
-\TextAt(1.7, 0)[c]{c}
-\TextAt(1, 2)[c]{a}
-\TextAt(2, 1.2)[c]{b}
-\ArrowAt(1.2, 1.8, 1.8, 1.4) % a -> b
-\ArrowAt(2, 0.9, 1.8, 0.3) % b -> c
-\ArrowAt(1.4, 0.1, 0.6, 0.1) % c -> d
-\ArrowAt(0.2, 0.2, 0.1, 0.9) % d -> e
-\ArrowAt(0.2, 1.4, 0.8, 1.9) % e -> a
-\CloseGraph
-$=:\left(a, b, c, d, e\right)$, dabei ist $\left\{a, b, c, d, e\right\} = \left\{1, 2, 3, 4, 5\right\}$\\
+% \InitGraph{3}{3}{0.5}{0.5}{0.5cm}
+% \TextAt(0, 1.2)[c]{e}
+% \TextAt(0.3, 0)[c]{d}
+% \TextAt(1.7, 0)[c]{c}
+% \TextAt(1, 2)[c]{a}
+% \TextAt(2, 1.2)[c]{b}
+% \ArrowAt(1.2, 1.8, 1.8, 1.4) % a -> b
+% \ArrowAt(2, 0.9, 1.8, 0.3) % b -> c
+% \ArrowAt(1.4, 0.1, 0.6, 0.1) % c -> d
+% \ArrowAt(0.2, 0.2, 0.1, 0.9) % d -> e
+% \ArrowAt(0.2, 1.4, 0.8, 1.9) % e -> a
+% \CloseGraph
+% $=:\left(a, b, c, d, e\right)$, dabei ist $\left\{a, b, c, d, e\right\} = \left\{1, 2, 3, 4, 5\right\}$\\
 Sei also $\left(a, b, c, d, e\right) \in \Gamma\left(G\right)$.
 Die komplexe Konjugation liefert ein weiteres Element in $G$.
 Das entsprechende Element in $\Gamma\left(G\right)$ hat die Form:
