Warnungen und Fehler des skript-check übearbeitet
git-svn-id: https://svn.lug-jena.de/uni-skripte@2345 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/Kapitel15.tex
+++ b/kuelshammer-algebra1/Kapitel15.tex
@@ -40,7 +40,7 @@ Die Behauptung folgt.
 \begin{satz}\label{satz:15.2}
 Seien $G$ eine Gruppe, $\Omega$ eine Menge und $\tau\colon G\mapsto\Sym\left(\Omega\right)$ ein Homomorphismus.\\
 Dann erhält man durch
-\[{}^g\alpha:=\left(\tau\left(g\right)\right)\left(\alpha\right) \ \ \text{ für } g\in G,\alpha\in\Omega\]
+\[{}^g\alpha:=\left(\tau\left(g\right)\right)\left(\alpha\right) \qquad \text{ für } g\in G,\alpha\in\Omega\]
 eine Operation von $G$ auf $\Omega$.
 \end{satz}
 
@@ -69,7 +69,7 @@ Die Sätze \autoref{satz:15.1} und \autoref{satz:15.2} zeigen, dass Gruppenoperat
 %%%%%%%%%%%%%%%%%%%
 \begin{bsp}\label{bsp:15.1}
 Für jede Menge $\Omega$ operiert jede Untergruppe $G$ von $\Sym\left(\Omega\right)$ auf $\Omega$ durch
-\[{}^g\alpha:= g\left(\alpha\right) \ \ \text{ für } g\in G, \alpha\in\Omega.\]
+\[{}^g\alpha:= g\left(\alpha\right) \qquad \text{ für } g\in G, \alpha\in\Omega.\]
 (Dies ist der Spezialfall $\tau\colon G\mapsto\Sym\left(\Omega\right), g\mapsto g$.)
 \end{bsp}
 
@@ -79,7 +79,7 @@ Für jede Menge $\Omega$ operiert jede Untergruppe $G$ von $\Sym\left(\Omega\righ
 \begin{defi}\label{defi:15.2}
 Sei $\Omega$ eine $G$--Menge und $\tau\colon G\mapsto\Sym\left(\Omega\right)$ der entsprechende Homomorphismus.
 Dann heißt:
-\[\Ker\left(\tau\right) = \left\{g\in G\colon\tau_g=id_{\Omega}\right\} = \left\{g\in G\colon {}^g\alpha=\alpha  \ \ \text{ für alle } \alpha\in\Omega\right\}\]
+\[\Ker\left(\tau\right) = \left\{g\in G\colon\tau_g=id_{\Omega}\right\} = \left\{g\in G\colon {}^g\alpha=\alpha  \qquad  \text{ für alle } \alpha\in\Omega\right\}\]
 der \highl{Gruppe!Operation!Kern}{Kern} der Operation.
 
 Ist $\Ker\left(\tau\right) = G$ [d.\,h. ${}^g\alpha=\alpha$ für alle $g\in G$, $x\in\Omega$], so nennt man die Operation \highl{Gruppe!Operation!trivial}{trivial}.
@@ -141,7 +141,7 @@ Dann ist $\sim$ eine Äquivalenzrelation.
 	\item Sind $\Omega_1,\ldots,\Omega_n$ die verschiedenen Bahnen von $G$ auf $\Omega$, so ist
 	\[\begin{array}{lcl}
 	\Omega & = & \bigcup\limits_{i=1}^{n}\Omega_i \text{, also}\\
-	\abs{\Omega} & = & \abs{\Omega_1} + \ldots + \abs{\Omega_n} \ \ \text{ (\highl{Gruppe!Bahn!Bahnengleichung}{Bahnengleichung})}
+	\abs{\Omega} & = & \abs{\Omega_1} + \dotsc + \abs{\Omega_n} \quad \text{ (\highl{Gruppe!Bahn!Bahnengleichung}{Bahnengleichung})}
 	\end{array}.\]
 	Für $i=1,\ldots,n$ heißt $\abs{\Omega_i}$ die \highl{Gruppe!Bahn!Länge}{Länge} der Bahn $\Omega_i$.
 \end{enumerate}
@@ -183,8 +183,8 @@ Insbesondere ist $\abs{G:G_\alpha}=\abs{\Orb_G\left(\alpha\right)}$.
 %%%%%%%%%%%%%%%%%%%
 \begin{bsp}\label{bsp:15.2}
 Jede Gruppe $G$ operiert auf sich selbst durch Konjugation:
-\[{}^gx = gxg^{-1} \ \ \left(g,x\in G\right),\]
-denn ${}^1x = 1x1^{-1} = x$ und ${}^g\left({}^hx\right) = {}^g\left(hxh^{-1}\right) = ghxh^{-1}g^{-1} = \left(gh\right)x\left(gh\right)^{-1} = {}^{gh}x \ \ \left(g,h,x\in G\right)$
+\[{}^gx = gxg^{-1} \qquad \left(g,x\in G\right),\]
+denn ${}^1x = 1x1^{-1} = x$ und ${}^g\left({}^hx\right) = {}^g\left(hxh^{-1}\right) = ghxh^{-1}g^{-1} = \left(gh\right)x\left(gh\right)^{-1} = {}^{gh}x \qquad \left(g,h,x\in G\right)$
 
 Die Bahn von $x\in G$ ist dabei die Konjugationsklasse $K_x = \left\{gxg^{-1}\colon g\in G\right\}$.
 Liegen $x,y\in G$ in der gleichen Konjugationsklasse [d.\,h. es existiert ein $g\in G$ mit $y=gxg^{-1}$], so heißen $x,y$ konjugiert in $G$.
@@ -193,7 +193,7 @@ Der Stabilisator von $x\in G$ unter Konjugationsoperation ist
 \[\left\{g\in G\colon gxg^{-1} = x\right\} = \left\{g\in G\colon gx=xg\right\} =: C_G\left(x\right);\]
 $C_G\left(x\right)$ heißt \highl{Gruppe!Zentralisator}{Zentralisator} von $x$ in $G$ (Übungsaufgabe 31).
 Nach \autoref{satz:15.5} ist $G_g\left(x\right)\leq G$, und $\abs{G:C_G\left(x\right)}$ ist die Länge der Konjugationsklasse von $G$ und ist $x_i\in K_i$ für $i=1,\ldots,n$, so gilt nach der Bahngleichung:
-\[\abs{G} = \abs{k_1} + \ldots+\abs{K_n}=\abs{G:C_G\left(x_1\right)}+\ldots+\abs{G:C_G\left(x_n\right)} \ \ \text{ (Klassengleichung)}\]
+\[\abs{G} = \abs{k_1} + \dotsc+\abs{K_n}=\abs{G:C_G\left(x_1\right)}+\ldots+\abs{G:C_G\left(x_n\right)} \qquad \text{ (Klassengleichung)}\]
 Dabei gilt: $\begin{array}[t]{lcl}\abs{K_i} = 1 & \Leftrightarrow & K_i = \left\{x_i\right\}\\
 & \Leftrightarrow & gx_ig^{-1} = x_i \text{ für alle } x\in G\\
 & \Leftrightarrow & gx_i = x_ig \text{ für alle } g\in G\\
@@ -221,8 +221,8 @@ Für $p\in\PZ$ und jede endliche $p$--Gruppe $P \neq \left\{1\right\}$ gilt: $Z\l
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
 Seien $K_1,\ldots,K_t$ die Konjugationklassen von $P$, \OE{} $\abs{K_i} = 1$ für $i=1\ldots,s$ und $\abs{K_i} > 1$ für $i=s+1,\ldots,t$.\\
-Dann: $K_1\cup\ldots\cup K_s = Z\left(P\right)$ und $\abs{K_i} \equiv 0\pmod{p}$ für $i=s+1,\ldots,t$.\\
-Also: $0\equiv\abs{P}=\abs{K_1}+\ldots+\abs{K_t} =\abs{Z\left(P\right)}+\abs{K_{s+1}}+\ldots+\abs{K_t}\equiv\abs{Z\left(P\right)}\pmod{p}$.\\
+Dann: $K_1\cup\dotsc\cup K_s = Z\left(P\right)$ und $\abs{K_i} \equiv 0\pmod{p}$ für $i=s+1,\ldots,t$.\\
+Also: $0\equiv\abs{P}=\abs{K_1}+\dotsc+\abs{K_t} =\abs{Z\left(P\right)}+\abs{K_{s+1}}+\dotsc+\abs{K_t}\equiv\abs{Z\left(P\right)}\pmod{p}$.\\
 Daher: $Z\left(P\right) \neq \left\{1\right\}$.
 \end{beweis}
 
