\left(\right) durch () ersetzt
Viele Vorkommen der left-right-Kombination sind unnötig und machen den Code weniger lesbar. Daher wurden die entfernt und werden nur bei Bedarf aktiviert.

git-svn-id: https://svn.lug-jena.de/uni-skripte@2356 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/Kapitel5.tex
+++ b/kuelshammer-algebra1/Kapitel5.tex
@@ -5,30 +5,30 @@ $K$ Körper
 % Bemerkung
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}[vergleiche lineare Algebra]
-Ein \highl{Polynom} mit Koeffizienten in $K$ ist eine Folge $\varphi = \left(a_0, a_1, a_2, \ldots\right)$ von Elementen $a_i \in K$ mit $\left|\left\{i \in \N_0 \colon a_i \neq 0\right\}\right| < \infty$.\\
-Diese Polynome bilden einen $K$-Vektorraum $P$ mit $\varphi + \psi := \left(a_0 + b_0, a_1 + b_1, \ldots\right)$, $r\varphi := \left(ra_0, ra_1, \ldots\right)$ für $\varphi = \left(a_0, a_1, \ldots\right)$, $\psi := \left(b_0, b_1, \ldots\right) \in P, r \in K$.\\
-Setzt man $\varphi\psi = \left(c_0, c_1, c_2, \ldots\right)$ mit $c_0 = a_0b_0$, $c_1 = a_0b_1 + a_1b_0, \ldots, c_i := \sum\limits_{j + k = i}a_jb_k, \ldots$, so wird $P$ zu einem kommutativen Ring (\highl{Polynomring}) mit $r\left(\varphi\psi\right) = \left(r\varphi\right)\psi = \varphi\left(r\psi\right)$ für $r \in K, \ \varphi, \psi \in P$.\\
+Ein \highl{Polynom} mit Koeffizienten in $K$ ist eine Folge $\varphi = (a_0, a_1, a_2, \ldots)$ von Elementen $a_i \in K$ mit $\left|\left\{i \in \N_0 \colon a_i \neq 0\right\}\right| < \infty$.\\
+Diese Polynome bilden einen $K$-Vektorraum $P$ mit $\varphi + \psi := (a_0 + b_0, a_1 + b_1, \ldots)$, $r\varphi := (ra_0, ra_1, \ldots)$ für $\varphi = (a_0, a_1, \ldots)$, $\psi := (b_0, b_1, \ldots) \in P, r \in K$.\\
+Setzt man $\varphi\psi = (c_0, c_1, c_2, \ldots)$ mit $c_0 = a_0b_0$, $c_1 = a_0b_1 + a_1b_0, \ldots, c_i := \sum\limits_{j + k = i}a_jb_k, \ldots$, so wird $P$ zu einem kommutativen Ring (\highl{Polynomring}) mit $r(\varphi\psi) = (r\varphi)\psi = \varphi(r\psi)$ für $r \in K, \ \varphi, \psi \in P$.\\
 Nullelement in $P$ ist das Nullpolynom $(0, 0, \ldots)$, Einselement das Einspolynom $(1, 0, 0, \ldots)$.\\
-Ferner heißt $X := (0, 1, 0, \ldots)$ Unbestimmte oder Variable. Für $\varphi = \left(a_0, a_1, a_2, \ldots\right) \in P$ ist $\varphi X = \left(0, a_0, a_1, \ldots\right)$, insbesondere ist $X^2 = (0, 0, 1, 0, \ldots)$, $X^3 = (0, 0, 0, 1, 0, \ldots)$ u.\,s.\,w.\\
+Ferner heißt $X := (0, 1, 0, \ldots)$ Unbestimmte oder Variable. Für $\varphi = (a_0, a_1, a_2, \ldots) \in P$ ist $\varphi X = (0, a_0, a_1, \ldots)$, insbesondere ist $X^2 = (0, 0, 1, 0, \ldots)$, $X^3 = (0, 0, 0, 1, 0, \ldots)$ u.\,s.\,w.\\
 Wegen $\left|\left\{i \in \N_0 \colon a_i \neq 0\right\}\right| < \infty$ ist also $\varphi = \sum\limits_{i = 0}^{\infty}a_iX^i$, dabei ist wie üblich $X^0$ das Einspolynom. Daher kann man jedes Element in $P$ in der Form $\varphi = \sum\limits_{i = 0}^{\infty}a_iX^i$ mit eindeutig bestimmten Koeffizienten $a_i \in K$ schreiben, von denen nur endlich viele von $0$ verschieden sind. Dies werden wir in Zukunft stets tun. Für $\varphi = \sum\limits_{i = 0}^{\infty}a_iX^i$, $\psi = \sum\limits_{i = 0}^{\infty}b_iX^i \in P$ und $r \in K$ gilt dann:\\
 \begin{itemize}
 	\item $\varphi = \psi \Leftrightarrow a_i = b_i \text{ für alle } i$
-	\item $\varphi + \psi = \sum\limits_{i = 0}^{\infty}\left(a_i + b_i\right)X^i$
-	\item $r\varphi = \sum\limits_{i = 0}^{\infty}\left(ra_i\right)X^i$
-	\item $\varphi\psi = \sum\limits_{i = 0}^{\infty}\left(\sum\limits_{j + k = i}a_jb_k\right)X^i$
+	\item $\varphi + \psi = \sum\limits_{i = 0}^{\infty}(a_i + b_i)X^i$
+	\item $r\varphi = \sum\limits_{i = 0}^{\infty}(ra_i)X^i$
+	\item $\varphi\psi = \sum\limits_{i = 0}^{\infty}(\sum\limits_{j + k = i}a_jb_k)X^i$
 \end{itemize}
 Statt $P$ schreiben wir von jetzt ab $K[X]$.\\
 Ist $0 \neq \varphi = \sum\limits_{i = }^{\infty}a_iX^i \in K[X]$, so heißt $d = \deg\varphi = \max{\left\{i \in \N_0 \colon a_i \neq 0\right\}}$ Grad von $\varphi$. Dann ist $\varphi = \sum\limits_{i = 0}^da_iX^i$.\\
 Das Nullpolynom erhält den Grad $-\infty$.\\
 Für $\varphi, \psi \in K[X]$ und $0 \neq r \in K$ gilt dann:
 \begin{enumerate}[(i)]
-	\item $\deg{\left(r\varphi\right)} = \deg{\left(\varphi\right)}$
-	\item $\deg{\left(\varphi + \psi\right)} \leq \max{\left\{\deg\varphi, \deg\psi\right\}}$
-	\item $\deg{\left(\varphi\right)} \neq \deg{\left(\psi\right)} \Rightarrow \deg{\left(\varphi + \psi\right)} = \max{\left\{\deg{\left(\varphi\right)}, \deg{\left(\psi\right)}\right\}}$
-	\item $\deg{\left(\varphi\psi\right)} = \deg\varphi + \deg\psi$
+	\item $\deg{(r\varphi)} = \deg{(\varphi)}$
+	\item $\deg{(\varphi + \psi)} \leq \max{\left\{\deg\varphi, \deg\psi\right\}}$
+	\item $\deg{(\varphi)} \neq \deg{(\psi)} \Rightarrow \deg{(\varphi + \psi)} = \max{\left\{\deg{(\varphi)}, \deg{(\psi)}\right\}}$
+	\item $\deg{(\varphi\psi)} = \deg\varphi + \deg\psi$
 \end{enumerate}
-Für $r, s \in K$ ist $rX^0 \pm sX^0 = \left(r + s\right)X^0$.\\
-Daher können wir jeweils $r \in K$ mit $rX^0 \in K[X]$ identifizieren und so $K$ als Teilmenge von $K[X]$ auffassen. Dann nennt man die Elemente in $K$ auch die konstanten Polynome von $K[X]$. Ist $0 \neq \varphi = \sum\limits_{i = 0}^{\infty}a_iX^i \in K[X]$, $d = \deg{\left(\varphi\right)}$ und $a_d = 1$, so heißt $\varphi$ normiert. Außerdem betrachtet man das Nullpolynom als normiert. Wir für $\Z$ hat man:
+Für $r, s \in K$ ist $rX^0 \pm sX^0 = (r + s)X^0$.\\
+Daher können wir jeweils $r \in K$ mit $rX^0 \in K[X]$ identifizieren und so $K$ als Teilmenge von $K[X]$ auffassen. Dann nennt man die Elemente in $K$ auch die konstanten Polynome von $K[X]$. Ist $0 \neq \varphi = \sum\limits_{i = 0}^{\infty}a_iX^i \in K[X]$, $d = \deg{(\varphi)}$ und $a_d = 1$, so heißt $\varphi$ normiert. Außerdem betrachtet man das Nullpolynom als normiert. Wir für $\Z$ hat man:
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
@@ -49,7 +49,7 @@ $\kappa$ Quotient, $\rho$ Rest. Im Fall $\rho = 0$ schreibt man $\kappa = \frac{
 % Beispiel
 %%%%%%%%%%%%%%%%%%%
 \begin{bsp}
-$X^5 + X^4 + X^3 + X^2 + X + 1 = \left(X^3 - X^2 - 1\right)\underbrace{\left(X^2 + 2X + 3\right)}_{\kappa} + \underbrace{\left(4X^2 + 3X + 4\right)}_{\rho}$
+$X^5 + X^4 + X^3 + X^2 + X + 1 = (X^3 - X^2 - 1)\underbrace{(X^2 + 2X + 3)}_{\kappa} + \underbrace{(4X^2 + 3X + 4)}_{\rho}$
 \end{bsp}
 
 %%%%%%%%%%%%%%%%%%%
@@ -64,7 +64,7 @@ Dabei gilt wie in $\Z$:
 	\item $\varphi\mid\psi \Rightarrow c\varphi\mid d\psi \ \ (c, d \in \kappa\backslash\left\{0\right\})$
 	\item $\varphi\mid\psi \wedge \psi\mid\varphi \Rightarrow \exists \ c \in \kappa \backslash \left\{0\right\} = \varphi = c\psi$
 	\item $0\mid\varphi \Leftrightarrow \varphi = 0$
-	\item $\varphi\mid\psi \wedge \varphi\mid\omega \Rightarrow \varphi\mid\alpha\psi + \beta\omega \ \ \left(\alpha, \beta \in K[X]\right)$
+	\item $\varphi\mid\psi \wedge \varphi\mid\omega \Rightarrow \varphi\mid\alpha\psi + \beta\omega \ \ (\alpha, \beta \in K[X])$
 \end{enumerate}
 Seien $\varphi_1, \ldots, \varphi_n \in K[X]$. Ein $\tau \in K[X]$ mit $\tau\mid\varphi_1, \ldots, \tau\mid\varphi_n$ heißt \highl{Gemeinsamer Teiler}{gemeinsamer Teiler} von $\varphi_1, \ldots, \varphi_n$.\\
 Mit $gT(\varphi_1, \ldots, \varphi_n)$ bezeichnen wir die Menge aller gemeinsamer Teiler von $\varphi_1, \ldots, \varphi_n$. Ein normiertes Polynom $\delta \in gT(\varphi_1, \ldots, \varphi_n)$ heißt \highl{Größter gemeinsamer Teiler}{größter gemeinsamer Teiler} ($\ggt$), von $\varphi_1, \ldots, \varphi_n$, falls $\tau\mid\delta$ für alle $\tau \in gT(\varphi_1, \ldots, \varphi_n)$ gilt.\\
@@ -85,7 +85,7 @@ Erweiterter euklidischer Algorithmus:\\
 -\frac{1}{2}X + \frac{1}{2} & \frac{1}{2}X + \frac{1}{2} & X^2 + 1 & \\
  & & 0 & 
 \end{array}\]
-Also $X^2 + 1 = \ggt(\varphi, \psi) = \left(-\frac{1}{2}X + \frac{1}{2}\right)\varphi + \left(\frac{1}{2}X + \frac{1}{2}\right)\psi$
+Also $X^2 + 1 = \ggt(\varphi, \psi) = (-\frac{1}{2}X + \frac{1}{2})\varphi + (\frac{1}{2}X + \frac{1}{2})\psi$
 \end{bsp}
 
 %%%%%%%%%%%%%%%%%%%
@@ -122,7 +122,7 @@ Ein normiertes Polynom $\pi \in K[X] \backslash K$ heißt \highl{Irreduzibel}{irr
 \begin{bsp}
 \begin{enumerate}[(i)]
 	\item Normierte Polynome vom Grad $1$ sind stets irreduzibel
-	\item $X^2 + 1 \left(X - i\right)\left(X + i\right)$ ist irreduzibel in $\C[X]$, aber irreduzibel in $\R[X]$.
+	\item $X^2 + 1 (X - i)(X + i)$ ist irreduzibel in $\C[X]$, aber irreduzibel in $\R[X]$.
 \end{enumerate}
 \end{bsp}
 
@@ -142,8 +142,8 @@ Dabei können verschiedene $\varphi_1, \varphi_2 \in K[X]$ die gleiche Funktion d
 Daher ist wichtig zwischen Polynomen und den durch sie definierten Funktionen zu unterscheiden.\\
 Für $a, b \in K$ und $\varphi, \psi \in K[X]$ gilt offenbar:
 \begin{enumerate}[(i)]
-	\item $\left(\varphi \mystackrel{\pm}{\cdot} \psi\right)(b) = \varphi(b) \mystackrel{\pm}{\cdot} \psi(b)$
-	\item $\left(a\varphi\right)(b) = a\varphi(b)$
+	\item $(\varphi \mystackrel{\pm}{\cdot} \psi)(b) = \varphi(b) \mystackrel{\pm}{\cdot} \psi(b)$
+	\item $(a\varphi)(b) = a\varphi(b)$
 \end{enumerate}
 Ist $\varphi(b) = 0$, so heißt $b$ \highl{Nullstelle} von $\varphi$.
 \end{bem}
@@ -159,7 +159,7 @@ Für $\varphi \in K[X]$ und $b \in K$ ist $\varphi(b)$ der Rest bei der Division 
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Division mit Rest liefert $\kappa, \rho \in K[X]$ mit $\varphi = \left(X - b\right)\kappa + \rho$ und $\rho \in K$.\\
+Division mit Rest liefert $\kappa, \rho \in K[X]$ mit $\varphi = (X - b)\kappa + \rho$ und $\rho \in K$.\\
 Einsetzen ergibt:\\
 $\varphi(b) = \underbrace{(b - b)}_{= 0}\kappa(b) + \rho = \rho$. Daher gilt die erste Behauptung. Im Fall $\varphi(b) = 0$ ist also $\varphi = (X - b)\kappa$, d.\,h. $X - b\mid\varphi$. Umgekehrt gilt im Fall $\varphi = (X - b)\kappa \colon \varphi(b) = \underbrace{(b - b)}_{= 0}\kappa(b) = 0$.
 \end{beweis}
@@ -191,8 +191,8 @@ Für $\varphi = \sum\limits_{i = 0}^{\infty}a_iX^i \in K[X]$ definiert man die (\
 \begin{bem}
 Dann gelten die folgende Rechenregeln (Übungs-Aufgabe):
 \begin{enumerate}[(i)]
-	\item $\left(\varphi + \psi\right)' = \varphi' + \psi'$
-	\item $\left(\varphi\psi\right)' = \varphi'\psi + \varphi\psi'$
-	\item $\left(\varphi \circ \psi\right)' = \left(\varphi' \circ \psi\right)\psi'$; dabei ist $\varphi \circ \psi$ für $\varphi = \sum\limits_{i = 0}^{\infty}a_iX^i$ definiert durch $\varphi \circ \psi := \sum\limits_{i = 0}^{\infty}a_i\psi^i$.
+	\item $(\varphi + \psi)' = \varphi' + \psi'$
+	\item $(\varphi\psi)' = \varphi'\psi + \varphi\psi'$
+	\item $(\varphi \circ \psi)' = (\varphi' \circ \psi)\psi'$; dabei ist $\varphi \circ \psi$ für $\varphi = \sum\limits_{i = 0}^{\infty}a_iX^i$ definiert durch $\varphi \circ \psi := \sum\limits_{i = 0}^{\infty}a_i\psi^i$.
 \end{enumerate}
 \end{bem}
