--- a/kuelshammer-algebra1/Kapitel10.tex
+++ b/kuelshammer-algebra1/Kapitel10.tex
@@ -5,18 +5,18 @@
 \begin{bem}\label{bem:10.1}
 (Wir wiederholen ohne Beweis grundlegende Tatsachen über Gruppen aus den Grundvorlesungen, Beweise z.\,B. im Lineare Algebra II Skript)\\
 Eine \highl{Gruppe} ist eine Menge $G$ mit einer \emph{assoziativen Verknüpfung} [d.\,h. $a(bc) = (ab)c$ für alle $a, b, c \in G$], die (genau) ein \emph{neutrales Element} $e = 1$ [d.\,h. $1a = a = a1$ für alle $a \in G$] enthält und zu jedem $g \in G$ (genau) ein \emph{inverses Element} $g^{-1}$ [d.\,h. $gg^{-1} = 1 = g^{-1}g$].
-Bekanntlich gilt: \[1^{-1} = 1, \left(a^{-1}\right)^{-1}=a, \left(ab\right)^{-1} = b^{-1}a^{-1} \qquad \left(a, b \in G\right)\]
+Bekanntlich gilt: \[1^{-1} = 1, (a^{-1})^{-1}=a, (ab)^{-1} = b^{-1}a^{-1} \qquad (a, b \in G)\]
 Die Anzahl $\abs{G}$ der Elemente von $G$ heißt \emph{Ordnung} von $G$.
 Ist $ab = ba$ für alle $a, b \in G$, so heiße $G$ \emph{kommutativ} oder \emph{abelsch}.\\
-Bekannte Gruppen sind $\left(\C, +\right)$, $\left(\C\backslash\left\{0\right\}, \cdot\right)$.
-Für jede Menge $X$ ist \[Sym\left(X\right) := \left\{f \colon X \mapsto X \left|f \text{ bijektiv}\right.\right\}\]
+Bekannte Gruppen sind $(\C, +)$, $(\C\backslash\left\{0\right\}, \cdot)$.
+Für jede Menge $X$ ist \[Sym(X) := \left\{f \colon X \mapsto X \left|f \text{ bijektiv}\right.\right\}\]
 eine Gruppe bezüglich der Komposition von Abbildungen.
-Man nennt $Sym\left(X\right)$ die \highl{Gruppe!symmetrisch}{Symmetrische Gruppe} auf $X$ und ihre Elemente \highl{Permutationen}.\\
-Für $n \in \N$ und jeden Körper $K$ ist \[GL\left(n, K\right) = \left\{A \in K^{n \times n}\colon A \text{ invertierbar}\right\}\]
+Man nennt $Sym(X)$ die \highl{Gruppe!symmetrisch}{Symmetrische Gruppe} auf $X$ und ihre Elemente \highl{Permutationen}.\\
+Für $n \in \N$ und jeden Körper $K$ ist \[GL(n, K) = \left\{A \in K^{n \times n}\colon A \text{ invertierbar}\right\}\]
 eine Gruppe bezüglich der Multiplikation von Matrizen und heißt \highl{Gruppe!Allgemeine Lineare (GL)}{Allgemeine lineare Gruppe (GL)} des Grades $n$ über $K$.\\
 Für Gruppen $G_1, \ldots, G_n$ ist auch das direkte Produkt $G_1 \times \cdots \times G_n$ wieder eine Gruppe mit
-\[\left(a_1, \ldots, a_n\right)\left(b_1, \ldots, b_n\right) = \left(a_1b_1, \ldots, a_nb_n\right) \qquad \left(a_i \in G\right)\]
-Neutrales Element ist $\left(1, \ldots, 1\right)$, und $\left(a_1, \ldots, a_n\right)^{-1} = \left(a_1^{-1}, \ldots, a_n^{-1}\right)$.
+\[(a_1, \ldots, a_n)(b_1, \ldots, b_n) = (a_1b_1, \ldots, a_nb_n) \qquad (a_i \in G)\]
+Neutrales Element ist $(1, \ldots, 1)$, und $(a_1, \ldots, a_n)^{-1} = (a_1^{-1}, \ldots, a_n^{-1})$.
 Analog kann man auch direkte Produkte von unendlichen vielen Gruppen definieren.
 \end{bem}
 
@@ -27,23 +27,23 @@ Analog kann man auch direkte Produkte von unendlichen vielen Gruppen definieren.
 Eine nichtleere Teilmenge $H$ einer Gruppe $G$ heißt
 \highl{Gruppe!Untergruppe}{Untergruppe}\index{Untergruppe} von $G$,
 falls gilt: \todo{Der \ ast muss ein Verweis sein.}
-\[\left(\ast\right) \quad a, b \in H \Rightarrow ab \in H, a^{-1} \in H.\]
+\[(\ast) \quad a, b \in H \Rightarrow ab \in H, a^{-1} \in H.\]
 Man schreibt dann: $H \leq G$, im Fall $H \neq G$ auch $H < G$.
-Die Bedingung $\left(\ast\right)$ ist äquivalent zu der Bedingung:
-\[\left(\ast\ast\right) \quad a, b \in H \Rightarrow ab^{-1} \in H\]
+Die Bedingung $(\ast)$ ist äquivalent zu der Bedingung:
+\[(\ast\ast) \quad a, b \in H \Rightarrow ab^{-1} \in H\]
 Jede Untergruppe $H$ von $G$ enthält das neutrale Element von $G$ \randbem{Untergruppen sind nicht leer!} \[1_G = 1_H\]
 Jede Untergruppe von $G$ wird mit der entsprechend eingeschränkten Verknüpfung selbst eine Gruppe.\\
 Aus $H \leq G$ und $K \leq G$ folgt: $H \cap K \leq K$; allgemeiner ist der Durchschnitt von beliebigen vielen Untergruppen von $G$ wieder eine Untergruppe von $G$.\\
-Bekanntlich ist \[\left(\Z, +\right) \leq \left(\Q, +\right) \leq \left(\R, +\right) \leq \left(\C, +\right)\] und
-\[\left(\Q \backslash \left\{0\right\}, \cdot\right) \leq \left(\R \backslash \left\{0\right\}, \cdot\right) \leq \left(\C \backslash \left\{0\right\}, \cdot\right).\]
+Bekanntlich ist \[(\Z, +) \leq (\Q, +) \leq (\R, +) \leq (\C, +)\] und
+\[(\Q \backslash \left\{0\right\}, \cdot) \leq (\R \backslash \left\{0\right\}, \cdot) \leq (\C \backslash \left\{0\right\}, \cdot).\]
 Für jeden Körper $K$ und jeden $K$--Vektorraum $V$ ist 
-\[GL\left(V\right) := \left\{f \colon V \mapsto V \left|f \text{ linear und bijektiv}\right.\right\} \leq Sym\left(V\right).\]
-$GL\left(V\right)$ heißt \highl{Gruppe!Allgemeine Lineare (GL)}{Allgemeine lineare Gruppe} von $V$.
+\[GL(V) := \left\{f \colon V \mapsto V \left|f \text{ linear und bijektiv}\right.\right\} \leq Sym(V).\]
+$GL(V)$ heißt \highl{Gruppe!Allgemeine Lineare (GL)}{Allgemeine lineare Gruppe} von $V$.
 
 Jede Gruppe $G$ besitzt die triviale Untergruppe $\left\{1_G\right\} =: 1$; Untergruppen $H < G$ heißen \highl{Gruppe!Echte Untergruppe}{Echte Untergruppen}.\\
 Für jedes Element $a$ in einer Gruppe $G$ ist \[\left\langle a\right\rangle\ := \left\{a^n \colon n \in \Z\right\} \leq G\]
 Man nennt $\left\langle a\right\rangle$ die von $a$ erzeugte zyklische Untergruppe von $G$.
-Für $G = \left(\Z, +\right)$ und $a = 5$ ist z.\,B. $\left\langle a\right\rangle = \left\{0, \pm 5, \pm 10\right\} = 5\Z$.\\
+Für $G = (\Z, +)$ und $a = 5$ ist z.\,B. $\left\langle a\right\rangle = \left\{0, \pm 5, \pm 10\right\} = 5\Z$.\\
 Sei $G$ Gruppe, $H \leq G$ und $a \in G$. Dann heißt $aH := \left\{ah \colon h \in H\right\}$ \highl{Linksnebenklasse} und $Ha$ \highl{Rechtsnebenklasse} von $a$ nach $H$. Man setzt 
 \[\begin{array}{lcl}
 	\overbrace{G / H}^{G \ modulo \ H} & = & \left\{aH \colon a \in G\right\} \text{ Menge aller Linksnebenklassen}\\
@@ -52,7 +52,7 @@ Sei $G$ Gruppe, $H \leq G$ und $a \in G$. Dann heißt $aH := \left\{ah \colon h \
 Für $a \in G$ ist die Abbildung \[H \mapsto aH, h \mapsto ah,\]
 bijektiv, insbesondere ist $\abs{aH} = \abs{H}$. Analog für Rechtsnebenklassen.\\
 Ferner ist die Abbildung \[G/H \mapsto H \backslash G, X \mapsto X^{-1} := \left\{x^{-1} \colon x \in X\right\},\]
-bijektiv mit $\left(aH\right)^{-1} = Ha^{-1}$ für $a \in G$. Daher ist \[\abs{G/H} = \abs{H \backslash G} =: \abs{G:H};\]
+bijektiv mit $(aH)^{-1} = Ha^{-1}$ für $a \in G$. Daher ist \[\abs{G/H} = \abs{H \backslash G} =: \abs{G:H};\]
 man nennt $\abs{G:H}$ den Index \randbem{Anzahl Rechts- und Linksnebenklassen} von $H$ in $G$.\\
 Für $a, b \in G$ gilt: 
 \[\begin{array}{lcl}
@@ -118,7 +118,7 @@ Gegebenenfalls heißt $H$ normal in $G$ oder \highl{Normalteiler} in $G$; man sch
 	
 	\item Jede Untergruppe $H$ einer Gruppe $G$ mit $\abs{G:H} = 2$ ist normal, denn die einzigen Linksnebenklassen (Rechtsnebenklassen) sind $H$ und $G\backslash H$.
 	
-	\item Für $G := Sym\left(\left\{1, 2, 3\right\}\right) =: Sym\left(3\right)$, $a := \begin{pmatrix}1 & 2 & 3\\ 2 & 3 & 1\end{pmatrix}$, $b := \begin{pmatrix}1 & 2 & 3\\ 2 & 1 & 3\end{pmatrix}$ gilt:
+	\item Für $G := Sym(\left\{1, 2, 3\right\}) =: Sym(3)$, $a := \begin{pmatrix}1 & 2 & 3\\ 2 & 3 & 1\end{pmatrix}$, $b := \begin{pmatrix}1 & 2 & 3\\ 2 & 1 & 3\end{pmatrix}$ gilt:
 	\[\left\langle a\right\rangle \unlhd G,  \left\langle b\right\rangle \not\unlhd G.\]
 \end{enumerate}
 \end{bsp}
@@ -127,10 +127,10 @@ Gegebenenfalls heißt $H$ normal in $G$ oder \highl{Normalteiler} in $G$; man sch
 % Bemerkung 10.3
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:10.3}
-Sei $G$ Gruppe und $N \unlhd G$. Dann wird $G/N \left(= N\backslash G\right)$ eine Gruppe mit
-\[\left(aN\right)\left(bN\right) := abN \qquad \left(a, b \in G\right)\]
+Sei $G$ Gruppe und $N \unlhd G$. Dann wird $G/N (= N\backslash G)$ eine Gruppe mit
+\[(aN)(bN) := abN \qquad (a, b \in G)\]
 Diese heißt \highl{Gruppe!Faktorgruppe}{Faktorgruppe}\index{Faktorgruppe} von $G$ nach $N$.
-Dabei $1_{G/N} = 1N = N$, $\left(aN\right)^{-1} = a^{-1}N$ $\left(a \in G\right)$.
+Dabei $1_{G/N} = 1N = N$, $(aN)^{-1} = a^{-1}N$ $(a \in G)$.
 Im Fall $G = \Z$, $H = 5\Z$ ist z.\,B.
 \[G/H = \ZmZ{5} = \left\{0 + 5\Z, \ldots, 4 + 5\Z\right\}\]
 \end{bem}
@@ -139,18 +139,18 @@ Im Fall $G = \Z$, $H = 5\Z$ ist z.\,B.
 % Definition 10.2
 %%%%%%%%%%%%%%%%%%%
 \begin{defi}\label{defi:10.2}
-Seien $G, H$ Gruppen. Eine Abbildung $f\colon G\mapsto H$ mit $f\left(ab\right) = f\left(a\right)f\left(b\right)$ für alle $a, b \in G$ heißt \highl{Homomorphismus}.\\
-Wir setzen $Hom\left(G, H\right) := \left\{f\colon G\mapsto H \left|f \text{ Homomorphismus}\right.\right\}$.
+Seien $G, H$ Gruppen. Eine Abbildung $f\colon G\mapsto H$ mit $f(ab) = f(a)f(b)$ für alle $a, b \in G$ heißt \highl{Homomorphismus}.\\
+Wir setzen $Hom(G, H) := \left\{f\colon G\mapsto H \left|f \text{ Homomorphismus}\right.\right\}$.
 \end{defi}
 
 %%%%%%%%%%%%%%%%%%%
 % Bemerkung 10.4
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:10.4}
-Gegebenenfalls ist $f\left(1_G\right) = 1_H$ und $f\left(a^{-1}\right) = f\left(a\right)^{-1}$ für $a \in G$.\\
-Für Gruppen $G, H, K$ und $f \in Hom\left(G, H\right)$, $g \in Hom\left(H, K\right)$ ist $g \circ f \in Hom\left(G, K\right)$.\\
+Gegebenenfalls ist $f(1_G) = 1_H$ und $f(a^{-1}) = f(a)^{-1}$ für $a \in G$.\\
+Für Gruppen $G, H, K$ und $f \in Hom(G, H)$, $g \in Hom(H, K)$ ist $g \circ f \in Hom(G, K)$.\\
 Für jede Gruppe $G$ sind die identische Abbildung $id_G\colon G\mapsto G$, $a\mapsto a$ und die konstante Abbildung $G\mapsto G$, $a\mapsto 1$, ein Homomorphismus.\\
-Für $n \in \N$ und jeden Körper $K$ ist $det\colon GL\left(n, K\right)\mapsto K\backslash \left\{0\right\}, A \mapsto det\left(A\right)$ ein Homomorphismus.
+Für $n \in \N$ und jeden Körper $K$ ist $det\colon GL(n, K)\mapsto K\backslash \left\{0\right\}, A \mapsto det(A)$ ein Homomorphismus.
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
@@ -159,10 +159,10 @@ Für $n \in \N$ und jeden Körper $K$ ist $det\colon GL\left(n, K\right)\mapsto K\
 \begin{satz}\label{satz:10.3}
 Für jeden Homomorphismus von Gruppen $f\colon G\mapsto H$ gilt:
 \begin{enumerate}[(i)]
-	\item $U \leq G \Rightarrow f\left(U\right) \leq H$; insbesondere ist $Bld\left(f\right) = f\left(g\right) \leq H$
-	\item $U \unlhd G \Rightarrow f\left(U\right) \unlhd f\left(G\right)$; aber nicht unbedingt $f\left(U\right) \unlhd H$
-	\item $V \leq H \Rightarrow f^{-1}\left(V\right) \leq G$
-	\item $V \unlhd H \Rightarrow f^{-1}\left(V\right) \unlhd G$
+	\item $U \leq G \Rightarrow f(U) \leq H$; insbesondere ist $Bld(f) = f(g) \leq H$
+	\item $U \unlhd G \Rightarrow f(U) \unlhd f(G)$; aber nicht unbedingt $f(U) \unlhd H$
+	\item $V \leq H \Rightarrow f^{-1}(V) \leq G$
+	\item $V \unlhd H \Rightarrow f^{-1}(V) \unlhd G$
 \end{enumerate}
 \end{satz}
 
@@ -171,20 +171,20 @@ Für jeden Homomorphismus von Gruppen $f\colon G\mapsto H$ gilt:
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:10.5}
 Für jeden Homomorphismus von Gruppen $f\colon G\mapsto H$ gilt nach \autoref{satz:10.3}
-\[Ker\left(f\right) = f^{-1}\left(\left\{1_H\right\}\right) = \left\{a \in G\colon f\left(a\right) = 1\right\} \unlhd G\]
-$Ker\left(f\right)$ heißt \highl{Kern} von $f$.
+\[Ker(f) = f^{-1}(\left\{1_H\right\}) = \left\{a \in G\colon f(a) = 1\right\} \unlhd G\]
+$Ker(f)$ heißt \highl{Kern} von $f$.
 Für $n \in \N$ und jeden Körper $K$ ist
-\[SL\left(n, K\right) := \left\{A \in GL\left(n, K\right)\colon det\left(A\right) = 1\right\} = Ker\left(det\left(A\right)\right) \unlhd GL\left(n, K\right)\]
-$SL\left(n, K\right)$ heißt \highl{Gruppe!spezielle lineare, SL}{Spezielle lineare Gruppe (SL)} des Grades $n$ über $K$.
+\[SL(n, K) := \left\{A \in GL(n, K)\colon det(A) = 1\right\} = Ker(det(A)) \unlhd GL(n, K)\]
+$SL(n, K)$ heißt \highl{Gruppe!spezielle lineare, SL}{Spezielle lineare Gruppe (SL)} des Grades $n$ über $K$.
 
-Ein Homomorphismus von Gruppen $f\colon G\mapsto H$ ist genau dann injektiv, wenn $Ker\left(f\right) = \left\{1_G\right\}$ ist.
+Ein Homomorphismus von Gruppen $f\colon G\mapsto H$ ist genau dann injektiv, wenn $Ker(f) = \left\{1_G\right\}$ ist.
 
 Ein injektiver Homomorphismus heißt \highl{Monomorphismus}, ein surjektiver Homomorphismus \highl{Epimorphismus}, ein bijektiver Homomorphismus \highl{Isomorphismus}.
 
 Für jede Untergruppe $H$ einer Gruppe $G$ ist die Inklusionsabbildung $H\mapsto G$, $a\mapsto a$, ein Monomorphismus.
 Für $N \unlhd G$ ist $f\colon G\mapsto G/N$, $a\mapsto aN$, ein Epimorphismus, man nennt $f$ den \highl{Epimorphismus!kanonisch}{kanonischen Epimorphismus} von $G$ nach $G/N$.
-Offensichtlich ist $Ker\left(f\right) = N$.
-Daher ist eine Untergruppe $N$ einer Gruppe $G$ genau dann normal in $G$, wenn eine Gruppe $H$ und ein Homomorphismus $f\colon G\mapsto H$ mit $Ker\left(f\right) = N$ existiert.
+Offensichtlich ist $Ker(f) = N$.
+Daher ist eine Untergruppe $N$ einer Gruppe $G$ genau dann normal in $G$, wenn eine Gruppe $H$ und ein Homomorphismus $f\colon G\mapsto H$ mit $Ker(f) = N$ existiert.
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
@@ -192,24 +192,24 @@ Daher ist eine Untergruppe $N$ einer Gruppe $G$ genau dann normal in $G$, wenn e
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:10.4}
 Für jeden Homomorphismus von Gruppen $f\colon G\mapsto H$ ist die Abbildung
-\[\left\{U\colon Ker\left(f\right) \leq U \leq G\right\} \mapsto \left\{V\colon V \leq Bld\left(f\right)\right\}, \quad U\mapsto f\left(U\right),\]
-bijektiv mit Umkehrabbildung $V\mapsto f^{-1}\left(V\right)$
+\[\left\{U\colon Ker(f) \leq U \leq G\right\} \mapsto \left\{V\colon V \leq Bld(f)\right\}, \quad U\mapsto f(U),\]
+bijektiv mit Umkehrabbildung $V\mapsto f^{-1}(V)$
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Für $U \leq G$ mit $Ker\left(f\right) \leq U$ ist $f\left(U\right) \leq f\left(G\right) = Bld\left(f\right)$, und für $V \leq Bld\left(f\right)$, ist $f^{-1}\left(V\right) \leq G$ mit $Ker\left(f\right) = f^{-1}\left(\left\{1_H\right\}\right) \subseteq f^{-1}\left(V\right)$.\\
-Noch zu zeigen: $f^{-1}\left(f\left(U\right)\right) = U$ und $f\left(f^{-1}\left(V\right)\right) = V$.\\
-Für $x \in f^{-1}\left(f\left(U\right)\right)$ ist $f\left(x\right) \in f\left(U\right)$, d.\,h. $f\left(x\right) = f\left(u\right)$ für ein $u \in U$.\\
-Dann: $f\left(x^{-1}u\right) = f\left(x^{-1}\right)f\left(u\right) = 1$, d.\,h. $x^{-1}u \in Ker\left(f\right) \leq U$ und $x^{-1}, x \in U$.\\
-Also: $f^{-1}\left(f\left(U\right)\right) \subseteq U$.
-Sicher ist $U \subseteq f^{-1}\left(f\left(U\right)\right)$.\\
-Sicher ist $f\left(f^{-1}\left(V\right)\right) \subseteq V$.\\
-Sei $v \in V \leq Bld\left(f\right)$.
-Schreibe $v = f\left(y\right) \in f\left(f^{-1}\left(V\right)\right)$.\\
-Also: $V \subseteq f\left(f^{-1}\left(V\right)\right)$.
+Für $U \leq G$ mit $Ker(f) \leq U$ ist $f(U) \leq f(G) = Bld(f)$, und für $V \leq Bld(f)$, ist $f^{-1}(V) \leq G$ mit $Ker(f) = f^{-1}(\left\{1_H\right\}) \subseteq f^{-1}(V)$.\\
+Noch zu zeigen: $f^{-1}(f(U)) = U$ und $f(f^{-1}(V)) = V$.\\
+Für $x \in f^{-1}(f(U))$ ist $f(x) \in f(U)$, d.\,h. $f(x) = f(u)$ für ein $u \in U$.\\
+Dann: $f(x^{-1}u) = f(x^{-1})f(u) = 1$, d.\,h. $x^{-1}u \in Ker(f) \leq U$ und $x^{-1}, x \in U$.\\
+Also: $f^{-1}(f(U)) \subseteq U$.
+Sicher ist $U \subseteq f^{-1}(f(U))$.\\
+Sicher ist $f(f^{-1}(V)) \subseteq V$.\\
+Sei $v \in V \leq Bld(f)$.
+Schreibe $v = f(y) \in f(f^{-1}(V))$.\\
+Also: $V \subseteq f(f^{-1}(V))$.
 \end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
@@ -233,9 +233,9 @@ Also: $V \subseteq f\left(f^{-1}\left(V\right)\right)$.
 %%%%%%%%%%%%%%%%%%%
 \begin{bsp}\label{bsp:10.3}
 Für jeden Körper $K$ und jeden $K$--Vektoraum $V$ mit Basis $b_1, \ldots, b_n$ ist die Abbildung
-\[F\colon GL\left(V\right)\mapsto GL\left(n, K\right),\]
+\[F\colon GL(V)\mapsto GL(n, K),\]
 die jedem Vektorraum--Isomorphismus $f\colon V\mapsto V$ seine Matrix bezüglich $b_1, \ldots, b_n$ zuordnet, ein Gruppenisomorphismus.\\
-Daher gilt: $GL\left(V\right) \cong GL\left(n, K\right)$.
+Daher gilt: $GL(V) \cong GL(n, K)$.
 \end{bsp}
 
 %%%%%%%%%%%%%%%%%%%
@@ -243,9 +243,9 @@ Daher gilt: $GL\left(V\right) \cong GL\left(n, K\right)$.
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}[Homomorphiesatz]\label{satz:10.5}
 Für jeden Homomorphismus von Gruppen $f\colon G\mapsto H$ ist
-\[F\colon G/Ker\left(f\right)\mapsto Bld\left(f\right), \quad aKer\left(f\right)\mapsto f\left(a\right),\]
+\[F\colon G/Ker(f)\mapsto Bld(f), \quad aKer(f)\mapsto f(a),\]
 ein Isomorphismus.\\
-Insbesondere gilt: $G/Ker\left(f\right) \cong Bld\left(f\right)$.
+Insbesondere gilt: $G/Ker(f) \cong Bld(f)$.
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
@@ -253,7 +253,7 @@ Insbesondere gilt: $G/Ker\left(f\right) \cong Bld\left(f\right)$.
 %%%%%%%%%%%%%%%%%%%
 \begin{bsp}\label{bsp:10.4}
 Für $n \in N$ und jedem Körper $K$ folgt aus dem Homomorphiesatz:
-\[GL\left(n, K\right)/SL\left(n, K\right) \cong K\backslash \left\{0\right\}.\]
+\[GL(n, K)/SL(n, K) \cong K\backslash \left\{0\right\}.\]
 \end{bsp}
 
 %%%%%%%%%%%%%%%%%%%
@@ -263,8 +263,8 @@ Für $n \in N$ und jedem Körper $K$ folgt aus dem Homomorphiesatz:
 Ein Endomorphismus (Automorphismus) einer Gruppe $G$ ist ein Homomorphismus (bzw. Isomorphismus) $f\colon G\mapsto G$.\\
 Wir setzen 
 \[\begin{array}{lcl}
-	\End\left(G\right) & := & \left\{f\colon G\mapsto G \left|f \text{ Endomorphismus}\right.\right\}\\
-	\Aut\left(G\right) & := & \left\{f\colon G\mapsto G \left|f \text{ Automorphismus}\right.\right\}
+	\End(G) & := & \left\{f\colon G\mapsto G \left|f \text{ Endomorphismus}\right.\right\}\\
+	\Aut(G) & := & \left\{f\colon G\mapsto G \left|f \text{ Automorphismus}\right.\right\}
 	\end{array}\]
 \end{defi}
 
@@ -273,31 +273,31 @@ Wir setzen
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:10.7}
 \begin{enumerate}[(i)]
-	\item Man zeigt leicht: $\Aut\left(G\right) \leq Sym\left(G\right)$, man nennt $\Aut\left(G\right)$ \highl{Automorphismengruppe} von $G$.
+	\item Man zeigt leicht: $\Aut(G) \leq Sym(G)$, man nennt $\Aut(G)$ \highl{Automorphismengruppe} von $G$.
 	
-	\item Für jedes Element $x$ einer Gruppe $G$ ist $f_x\colon G\mapsto G$, $a\mapsto xax^{-1}$ ein Automorphismus, denn für $a, b \in G$ gilt: \[f_x\left(a\right)f_x\left(b\right) = xax^{-1} \cdot xbx^{-1} = xabx^{-1} = f_x\left(ab\right).\]
+	\item Für jedes Element $x$ einer Gruppe $G$ ist $f_x\colon G\mapsto G$, $a\mapsto xax^{-1}$ ein Automorphismus, denn für $a, b \in G$ gilt: \[f_x(a)f_x(b) = xax^{-1} \cdot xbx^{-1} = xabx^{-1} = f_x(ab).\]
 	Man nennt $f_x$ den von $x$ \highl{Automorphismus!induzierter innerer}{induzierten inneren Automorphismus} von $G$.
 	
-	\item Für jede Gruppe $G$ ist die Abbildung \[F\colon G\mapsto \Aut\left(G\right), \quad x\mapsto f_x,\] ein Homomorphismus, denn für $x,y \in G$ gilt:
-	\[\left(f_x \circ f_y\right)\left(a\right) = x\left(yay^{-1}\right)x^{-1} = \left(xy\right)a\left(xy\right)^{-1} = f_{xy}\left(a\right)\]
-	d.\,h. $F\left(x\right)F\left(y\right) = f_x \circ f_y = f_{xy} = F\left(xy\right)$.\\
-	Dabei gilt: \[\begin{array}{lcl}x \in Ker\left(F\right) \Leftrightarrow f_x = id_G & \Leftrightarrow & xax^{-1} = a \quad \forall a \in G\\ & \Leftrightarrow & xa = ax \qquad \forall a \in G\end{array}\]
-	Daher gilt: $Ker\left(F\right) = \left\{x \in G\colon xa = ax \quad \forall a \in G\right\} =: Z\left(G\right)$\\
-	Man nenn $Z\left(G\right)$ das \highl{Gruppe!Zentrum}{Zentrum} von $G$.
-	Stets ist $Z\left(G\right) \unlhd G$.
+	\item Für jede Gruppe $G$ ist die Abbildung \[F\colon G\mapsto \Aut(G), \quad x\mapsto f_x,\] ein Homomorphismus, denn für $x,y \in G$ gilt:
+	\[(f_x \circ f_y)(a) = x(yay^{-1})x^{-1} = (xy)a(xy)^{-1} = f_{xy}(a)\]
+	d.\,h. $F(x)F(y) = f_x \circ f_y = f_{xy} = F(xy)$.\\
+	Dabei gilt: \[\begin{array}{lcl}x \in Ker(F) \Leftrightarrow f_x = id_G & \Leftrightarrow & xax^{-1} = a \quad \forall a \in G\\ & \Leftrightarrow & xa = ax \qquad \forall a \in G\end{array}\]
+	Daher gilt: $Ker(F) = \left\{x \in G\colon xa = ax \quad \forall a \in G\right\} =: Z(G)$\\
+	Man nenn $Z(G)$ das \highl{Gruppe!Zentrum}{Zentrum} von $G$.
+	Stets ist $Z(G) \unlhd G$.
 	
-	\item Wir setzen $Inn\left(G\right) := Bld\left(F\right) = \left\{f_x\colon x \in G\right\}$.\\
+	\item Wir setzen $Inn(G) := Bld(F) = \left\{f_x\colon x \in G\right\}$.\\
 	Aus dem Homomorphiesatz (\autoref{satz:10.5}) folgt:
-	\[G/Z\left(G\right) \cong Inn\left(G\right).\]
-	Dabei ist $Inn\left(G\right) \unlhd \Aut\left(G\right)$; denn für $x, a \in G$, $\alpha \in \Aut\left(G\right)$ folgt:
+	\[G/Z(G) \cong Inn(G).\]
+	Dabei ist $Inn(G) \unlhd \Aut(G)$; denn für $x, a \in G$, $\alpha \in \Aut(G)$ folgt:
 	\[\begin{array}{lcl}
-	\left(\alpha \circ f_x \circ \alpha^{-1}\right)\left(a\right) & = & \alpha\left(x\alpha^{-1}\left(a\right)x^{-1}\right)\\
-	& = & \alpha\left(x\right)a\alpha\left(x\right)^{-1}\\
-	& = & f_{\alpha\left(x\right)}\left(a\right),
+	(\alpha \circ f_x \circ \alpha^{-1})(a) & = & \alpha(x\alpha^{-1}(a)x^{-1})\\
+	& = & \alpha(x)a\alpha(x)^{-1}\\
+	& = & f_{\alpha(x)}(a),
 	\end{array}\]
-	d.\,h. $\alpha \circ f_x \circ \alpha^{-1} = f_{\alpha\left(x\right)}$
+	d.\,h. $\alpha \circ f_x \circ \alpha^{-1} = f_{\alpha(x)}$
 	
-	\item Man nennt $Out\left(G\right) := \Aut\left(G\right)/Inn\left(G\right)$ die \highl{Automorphismengruppe!äußere}{äußere Automorphismengruppe} von $G$
+	\item Man nennt $Out(G) := \Aut(G)/Inn(G)$ die \highl{Automorphismengruppe!äußere}{äußere Automorphismengruppe} von $G$
 \end{enumerate}
 \end{bem}
 
@@ -308,7 +308,7 @@ Wir setzen
 Für jede Untergruppe $U$ einer Gruppe $G$ und jeden Normalteiler $N \unlhd G$ ist
 \[UN := \left\{un\colon u \in U, n \in N\right\} \leq G\]
 mit $N \unlhd UN$ und $U \cap N \unlhd U$, und die Abbildung
-\[F\colon U/U \cap N\mapsto UN/N, \quad u\left(U\cap N\right) \mapsto uN,\]
+\[F\colon U/U \cap N\mapsto UN/N, \quad u(U\cap N) \mapsto uN,\]
 ist ein Isomorphismus, insbesondere gilt:
 \[U/U\cap N \cong UN/N.\]
 \end{satz}
@@ -319,21 +319,21 @@ ist ein Isomorphismus, insbesondere gilt:
 \begin{beweis}
 Für $u_1, u_2 \in U$, $n_1, n_2 \in N$ gilt:
 \[\begin{array}{lcl}
-\left(u_1n_2\right)\left(u_2n_2\right)^{-1} & = & u_1n_1n_2^{-1}u_2^{-1}\\
+(u_1n_2)(u_2n_2)^{-1} & = & u_1n_1n_2^{-1}u_2^{-1}\\
 & = & \underbrace{u_1u_2^{-1}}_{\in U}\underbrace{u_2\underbrace{n_1n_2^{-1}}_{\in N}u_2^{-1}}_{\in N} \in UN
 \end{array}\]
 Wegen $UN \neq \varnothing$ ist $UN \leq G$.
 Wegen $N \unlhd G$ ist auch $N \unlhd UN$.\\
 Die Abbildung $f\colon U\mapsto G/N$, $u\mapsto uN$ ist eine Homomorphismus wegen
 \[\begin{array}{lcl}
-f\left(u_1\right)f\left(u_2\right) & = & \left(u_1N\right)\left(u_2N\right)\\
+f(u_1)f(u_2) & = & (u_1N)(u_2N)\\
 & = & u_1u_2N\\
-& = & f\left(u_1u_2\right) \text{ für } u_1, u_2 \in U
+& = & f(u_1u_2) \text{ für } u_1, u_2 \in U
 \end{array}\]
-Für $u \in U$ gilt dabei: $\begin{array}{lcl}f\left(u\right) = 1 & \Leftrightarrow & uN = N\\ & \Leftrightarrow & u \in N\end{array}$.
-Daher ist $Ker\left(f\right) = U \cap N$.\\
+Für $u \in U$ gilt dabei: $\begin{array}{lcl}f(u) = 1 & \Leftrightarrow & uN = N\\ & \Leftrightarrow & u \in N\end{array}$.
+Daher ist $Ker(f) = U \cap N$.\\
 Insbesondere ist $U \cap N \unlhd U$.\\
-Ferner ist $Bld\left(f\right) = \left\{uN\colon u \in U\right\} = \left\{unN\colon u \in U, \quad n \in N\right\} = UN/N$.\\
+Ferner ist $Bld(f) = \left\{uN\colon u \in U\right\} = \left\{unN\colon u \in U, \quad n \in N\right\} = UN/N$.\\
 Jetzt folgt alles aus dem Homomorphiesatz (\autoref{satz:10.5}).
 \end{beweis}
 
@@ -342,9 +342,9 @@ Jetzt folgt alles aus dem Homomorphiesatz (\autoref{satz:10.5}).
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}[2. Isomorphiesatz]\label{satz:10.7}
 Seien $G$ eine Gruppe und $M, N \unlhd G$ mit $N \subseteq M$. Dann ist
-\[G/M \mapsto \left(G/N\right)/\left(M/N\right), \quad aM \mapsto \left(aN\right)\left(M/N\right),\]
+\[G/M \mapsto (G/N)/(M/N), \quad aM \mapsto (aN)(M/N),\]
 ein Isomorphismus; insbesondere gilt:
-\[\left(G/N\right)/\left(M/N\right) \cong G/M\]
+\[(G/N)/(M/N) \cong G/M\]
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
@@ -352,14 +352,14 @@ ein Isomorphismus; insbesondere gilt:
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
 Nach \autoref{bem:10.7}(i) ist $M/N \unlhd G/N$.\\
-Seien $f\colon G\mapsto G/N$, $a\mapsto aN$, und $g\colon G/N\mapsto \left(G/N\right)/\left(M/N\right)$, $bN\mapsto \left(bN\right)\left(M/N\right)$ der kanonischen Epimorphismus.\\
-Dann ist $h := g \circ f\colon G\mapsto \left(G/N\right)\left(M/N\right)$, $a\mapsto \left(aN\right)\left(M/N\right)$, ein Epimorphismus, und für $a\in G$ gilt:
+Seien $f\colon G\mapsto G/N$, $a\mapsto aN$, und $g\colon G/N\mapsto (G/N)/(M/N)$, $bN\mapsto (bN)(M/N)$ der kanonischen Epimorphismus.\\
+Dann ist $h := g \circ f\colon G\mapsto (G/N)(M/N)$, $a\mapsto (aN)(M/N)$, ein Epimorphismus, und für $a\in G$ gilt:
 \[\begin{array}{lcl}
-a \in Ker\left(h\right) & \Leftrightarrow & \left(aN\right)\left(M/N\right) = 1\\
+a \in Ker(h) & \Leftrightarrow & (aN)(M/N) = 1\\
 & \Leftrightarrow & aN \in M/N\\
 & \Leftrightarrow & a \in M.
 \end{array}\]
-Daher ist $Ker\left(h\right) = M$, und aus dem Homomorphiesatz (\autoref{satz:10.5}) folgt die Behauptung.
+Daher ist $Ker(h) = M$, und aus dem Homomorphiesatz (\autoref{satz:10.5}) folgt die Behauptung.
 \end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
@@ -392,7 +392,7 @@ Daher ist $Ker\left(h\right) = M$, und aus dem Homomorphiesatz (\autoref{satz:10
 	
 	\item Nach \autoref{bem:10.7}(i) hat jede Untergruppe $V \subset \ZmZ{n}$ die Form $U/n\Z$, wobei $U$ eine Untergruppe von $\Z$ mit $n\Z \subseteq U$ ist. 
 	Nach (i) ist $U = d\Z$ für ein $d \in \N_0$. Wegen $n \in n\Z \subseteq U = d\Z ist d\mid m$. Nach \autoref{satz:10.8} ist 
-	\[\left(\ZmZ{n}\right)/\left(d\ZmZ{n}\right) \cong \ZmZ{d}.\]
+	\[(\ZmZ{n})/(d\ZmZ{n}) \cong \ZmZ{d}.\]
 	Folglich gilt:
 	\[\abs{\ZmZ{n}:d\ZmZ{n}} = \abs{\ZmZ{d}} \stackrel{(i)}{=} d.\]
 \end{enumerate}
@@ -406,17 +406,17 @@ Eine Gruppe $G$ heißt \highl{Gruppe!Zyklisch}{zyklisch}, falls ein $a \in G$ mit
 Gegebenenfalls ist die Abbildung
 \[f\colon \Z\mapsto G, \quad k\mapsto a^k,\]
 ein Epimorphismus von Gruppen.
-Nach dem obigen Satz ist $Ker\left(f\right) = n\Z$ für ein $n \in \N_0$.
+Nach dem obigen Satz ist $Ker(f) = n\Z$ für ein $n \in \N_0$.
 Aus dem Homomorphiesatz (\autoref{satz:10.5}) folgt also:
 \[G \cong \ZmZ{n}.\]
 Daher ist jede zyklische Gruppe $G$ zu $\ZmZ{n}$ für ein $n \in N_0$ isomorph.\\
 Im Fall $n = 0$ ist also $G \cong \Z$.
 Für $k \in \N$ enthält $G$ dann genau eine Untergruppe vom Index $k$, nämlich
-\[U = f\left(k\Z\right) = \left\{a^{km}\colon m \in \Z\right\} = \left\langle a^k\right\rangle.\]
+\[U = f(k\Z) = \left\{a^{km}\colon m \in \Z\right\} = \left\langle a^k\right\rangle.\]
 Außerdem enthält $G$ genau eine Untergruppe von unendlichem Index nämlich $1$.\\
 Im Fall $n \neq 0$ ist $\abs{G} = n$.
 Zu jedem Teiler $d$ von $n$ existiert dann genau eine Untergruppe vom Index $d$, nämlich:
-\[U = f\left(d\Z\right) = \left\{a^{dm}\colon m \in \Z\right\} = \left\langle a^d\right\rangle,\]
+\[U = f(d\Z) = \left\{a^{dm}\colon m \in \Z\right\} = \left\langle a^d\right\rangle,\]
 und auf diese Weise erhält man alle Untergruppen von $G$.
 Man sieht auch, dass jede Untergruppe einer zyklischen Gruppe wieder zyklisch ist.
 \end{bem}
