--- a/kuelshammer-algebra1/Kapitel13.tex
+++ b/kuelshammer-algebra1/Kapitel13.tex
@@ -4,7 +4,7 @@
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:13.1}
 Offenbar ist $\Z\left[X\right] := \left\{\sum\limits_{i=0}^{\infty}a_iX^i\Q\left[X\right]\colon a_0, a_1, a_2, \ldots \in \Z\right\}$ ein Ring bezüglich der üblichen Addition und Multiplikation von Polynomen.\\
-Ein Polynom $\alpha = \sum\limits_{i=0}^{\infty}a_iX^i \in \Z\left[X\right]$ mit $\ggt{\left(a_0, \ldots, a_n\right)} = 1$ heißt \highl{Polynom!primitiv}{primitiv}.\\
+Ein Polynom $\alpha = \sum\limits_{i=0}^{\infty}a_iX^i \in \Z\left[X\right]$ mit $\ggt{(a_0, \ldots, a_n)} = 1$ heißt \highl{Polynom!primitiv}{primitiv}.\\
 Insbesondere ist jedes normierte Polynom $\alpha \in \Z\left[X\right]\backslash\left\{0\right\}$ primitiv.
 \end{bem}
 
@@ -25,12 +25,12 @@ Sei $n$ das Produkt der Nenner der Koeffizienten von $\varphi$.
 Dann: $n\varphi \in \Z\left[X\right]$.
 Sei $d$ der $\ggt$ der Koeffizienten von $n\varphi$.
 Dann $\alpha := \frac{n\varphi}{d}\in \Z\left[X\right]$ primitiv, und $\varphi = q\alpha$ mit $q := \frac{d}{n} \in \Q$.\\
-Sei auch $\varphi = r\beta \qquad \left(r \in \Q, \beta \in \Z\left[X\right] \text{ primitiv}\right)$.\\
-Schreibe $q = \frac{a}{b}, r = \frac{s}{t} \qquad \left(a, b, s, t \in \Z, \ggt{\left(a, b\right)} = 1 = \ggt\left(s, t\right) = 1\right)$.\\
+Sei auch $\varphi = r\beta \qquad (r \in \Q, \beta \in \Z\left[X\right] \text{ primitiv})$.\\
+Schreibe $q = \frac{a}{b}, r = \frac{s}{t} \qquad (a, b, s, t \in \Z, \ggt{(a, b)} = 1 = \ggt(s, t) = 1)$.\\
 Dann: $\frac{a}{b}\alpha = \frac{s}{t}\beta$, d.\,h. $ta\alpha = bs\beta$;
 insbesondere teilt $t$ jeden Koeffizienten von $ta\alpha = bs\beta$.
 Da $\beta$ primitiv ist, folgt: $t\mid bs$.
-Wegen $\ggt\left(s, t\right) = 1$ ist also $t\mid b$.
+Wegen $\ggt(s, t) = 1$ ist also $t\mid b$.
 Analog: $b\mid t$, d.\,h. $t = \pm b$, \OE{} $t = b$.\\
 Dann: $a\alpha = b\beta$; insbesondere teilt $a$ jeden Koeffizienten von $a\alpha = b\beta$.
 Da $\beta$ primitiv ist, folgt: $a\mid s$.
@@ -49,7 +49,7 @@ $\alpha, \beta \in \Z\left[X\right]$ primitiv $\Rightarrow \quad \alpha\beta \in
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Schreibe $\alpha = \sum\limits_{i=0}^{\infty}a_iX^i$, $\beta = \sum\limits_{j=0}^{\infty}b_jX^j$ $\left(a_i, b_j \in \Z\right)$.\\
+Schreibe $\alpha = \sum\limits_{i=0}^{\infty}a_iX^i$, $\beta = \sum\limits_{j=0}^{\infty}b_jX^j$ $(a_i, b_j \in \Z)$.\\
 Annahme: $\alpha\beta$ nicht primitiv.
 Dann existiert ein $p \in \PZ$, dass alle Koeffizienten von $\alpha\beta$ teilt.
 Seien $r, s$ minimal mit $p \nmid a_r$, $p \nmid b_s$.\\
@@ -70,12 +70,12 @@ Dann existieren $\beta, \gamma \in \Z\left[X\right]$ mit $\alpha = \beta\gamma$,
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
 Sei $d$ der $\ggt$ der Koeffizienten von $\alpha$.
-Dann $\alpha = \alpha\overline{\alpha} \qquad \left(\overline{\alpha} \in \Z\left[X\right] \text{ primitiv}\right)$.\\
+Dann $\alpha = \alpha\overline{\alpha} \qquad (\overline{\alpha} \in \Z\left[X\right] \text{ primitiv})$.\\
 Da $\alpha$ in $\Q\left[X\right]$ reduzibel ist, existieren $\varphi, \psi \in \Q\left[X\right]$ mit $\alpha = \varphi\psi$, $\deg\varphi < \deg\alpha$, $\deg\psi < \deg\alpha$.\\
-Schreibe $\varphi = q\beta$, $\psi = r\gamma$ $\left(q, r \in \Q, \quad \beta, \gamma \in \Z\left[X\right] \text{ primitiv}\right)$.\\
-Dann: $d\widetilde{\alpha} = \alpha = qr\cdot \beta\gamma$ $\left(qr \in \Q, \quad \beta, \gamma \in \Z\left[X\right] \text{ primitiv}\right)$.\\
+Schreibe $\varphi = q\beta$, $\psi = r\gamma$ $(q, r \in \Q, \quad \beta, \gamma \in \Z\left[X\right] \text{ primitiv})$.\\
+Dann: $d\widetilde{\alpha} = \alpha = qr\cdot \beta\gamma$ $(qr \in \Q, \quad \beta, \gamma \in \Z\left[X\right] \text{ primitiv})$.\\
 Aus \autoref{satz:13.1} folgt: $qr = \pm d$, $\pm\widetilde{\alpha} = \beta\gamma$, \OE{} $qr = d$, $\widetilde{\alpha} = \beta\gamma$.\\
-Dann: $\alpha = \left(d\beta\right)\gamma$ und $\deg\left(d\beta\right) < \deg\alpha$, $\deg\gamma < \deg\alpha$.
+Dann: $\alpha = (d\beta)\gamma$ und $\deg(d\beta) < \deg\alpha$, $\deg\gamma < \deg\alpha$.
 \end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
@@ -85,9 +85,9 @@ Dann: $\alpha = \left(d\beta\right)\gamma$ und $\deg\left(d\beta\right) < \deg\a
 Sei $\alpha \in \Q\left[X\right]\backslash\left\{0\right\}$, \OE{} $\alpha \in \Z\left[X\right]$ primitiv.
 Ist $\alpha$ reduzibel in $\Q\left[X\right]$, so existieren $\beta, \gamma \in \Z\left[X\right]$ mit $\alpha = \beta\gamma$ und $\deg\beta < \deg\alpha$, $\deg\gamma < \deg\alpha$.\\
 Wie findet man $\beta, \gamma$?\\
-Für $i \in \Z$ ist $\alpha\left(i\right) = \beta\left(i\right)\gamma\left(i\right)$;
-insbesondere $\beta\left(i\right)\mid\alpha\left(i\right)$.
-Außer im Fall $\alpha\left(i\right) = 0$ existieren also nur endlich viele Möglichkeiten für $\beta\left(i\right)$.
+Für $i \in \Z$ ist $\alpha(i) = \beta(i)\gamma(i)$;
+insbesondere $\beta(i)\mid\alpha(i)$.
+Außer im Fall $\alpha(i) = 0$ existieren also nur endlich viele Möglichkeiten für $\beta(i)$.
 Da ein Polynom vom Höchstgrad $n$ durch $n+1$ Werte eindeutig bestimmt ist, gibt es also nur endlich viele Möglichkeiten für $\beta$.
 Diese erhält man zum Beispiel durch Interpolation.
 Man kann dann nacheinander testen, ob einer dieser Kandidaten $\alpha$ tatsächlich teilt.
@@ -99,22 +99,22 @@ In der Praxis ist dieses Verfahren aufwendig; es gibt bessere Verfahren.
 %%%%%%%%%%%%%%%%%%%
 \begin{bsp}\label{bsp:13.1}
 Sei $\alpha = X^6-5X^5+6X^4-3X^3+15X^2-17X-3$.\\
-Ist $\alpha = \left(X - a\right)\beta$ mit $\beta \in \Z\left[X\right]$, so ist $-3 = \alpha\left(0\right) = -a\beta\left(0\right)$,also $a\mid 3$, d.\,h. $a \in \left\{\pm 1, \pm 3\right\}$.
-Einsetzen ergibt: $\alpha\left(\pm 1\right) \neq 0 = \alpha\left(3\right)$.\\
-Division ergibt: $\alpha = \left(X - 3\right)\beta$ mit $\beta = X^5-2X^4-3X^2+6X+1$.\\
-Ist $\beta = \left(X-a\right)\gamma$ mit $\gamma \in \Z\left[X\right]$, so ist $1 = \beta\left(0\right) = -a\gamma\left(0\right)$, d.\,h. $a\mid 1$, also $a = \left\{\pm 1\right\}$.\\
-Einsetzen ergibt $\beta\left(\pm 1\right) \neq 0$. Folglich hat $\beta$ keine Linearfaktoren.\\
-Ist $\beta = \left(X^2 + aX + b\right)\gamma$ mit $\gamma \in \Z\left[X\right]$, so gilt:
+Ist $\alpha = (X - a)\beta$ mit $\beta \in \Z\left[X\right]$, so ist $-3 = \alpha(0) = -a\beta(0)$,also $a\mid 3$, d.\,h. $a \in \left\{\pm 1, \pm 3\right\}$.
+Einsetzen ergibt: $\alpha(\pm 1) \neq 0 = \alpha(3)$.\\
+Division ergibt: $\alpha = (X - 3)\beta$ mit $\beta = X^5-2X^4-3X^2+6X+1$.\\
+Ist $\beta = (X-a)\gamma$ mit $\gamma \in \Z\left[X\right]$, so ist $1 = \beta(0) = -a\gamma(0)$, d.\,h. $a\mid 1$, also $a = \left\{\pm 1\right\}$.\\
+Einsetzen ergibt $\beta(\pm 1) \neq 0$. Folglich hat $\beta$ keine Linearfaktoren.\\
+Ist $\beta = (X^2 + aX + b)\gamma$ mit $\gamma \in \Z\left[X\right]$, so gilt:
 \[\begin{array}[t]{lcl}
-	1 & = & \beta\left(0\right) = \beta\gamma\left(0\right) \Rightarrow b\mid 1 \Rightarrow b \in \left\{\pm 1\right\}\\
-	1 & = & \beta\left(2\right) = \left(4+2a+b\right)\gamma\left(2\right) \Rightarrow 4+2a+b\mid 1 \Rightarrow 4+2a+b\in \left\{\pm 1\right\}
+	1 & = & \beta(0) = \beta\gamma(0) \Rightarrow b\mid 1 \Rightarrow b \in \left\{\pm 1\right\}\\
+	1 & = & \beta(2) = (4+2a+b)\gamma(2) \Rightarrow 4+2a+b\mid 1 \Rightarrow 4+2a+b\in \left\{\pm 1\right\}
 \end{array}\]
-Ist $b = 1$ und $4+2a+b=1$, so ist $a=-2$ im Widerspruch $1 = \beta\left(1\right) = 0\gamma\left(1\right)$\\
-$b=1$ und $4+2a+b=-1$, so ist $a=-3$ im Widerspruch $-87=\beta\left(-2\right)=11\gamma\left(2\right)$\\
-$b=-1$ und $4+2a+b=1$, so ist $a=-1$ im Widerspruch $-87=\beta\left(-2\right)=5\gamma\left(-2\right)$\\
-$b=-1$ und $4+2a+b=-1$, so ist $a=-2$ im Widerspruch $3 = \beta\left(1\right) = -2\gamma\left(1\right)$\\
+Ist $b = 1$ und $4+2a+b=1$, so ist $a=-2$ im Widerspruch $1 = \beta(1) = 0\gamma(1)$\\
+$b=1$ und $4+2a+b=-1$, so ist $a=-3$ im Widerspruch $-87=\beta(-2)=11\gamma(2)$\\
+$b=-1$ und $4+2a+b=1$, so ist $a=-1$ im Widerspruch $-87=\beta(-2)=5\gamma(-2)$\\
+$b=-1$ und $4+2a+b=-1$, so ist $a=-2$ im Widerspruch $3 = \beta(1) = -2\gamma(1)$\\
 Also: $\beta$ irreduzibel.
-Folglich hat $\alpha$ die Primfaktorzerlegung $\alpha = \left(X-3\right)\beta$
+Folglich hat $\alpha$ die Primfaktorzerlegung $\alpha = (X-3)\beta$
 \end{bsp}
 
 %%%%%%%%%%%%%%%%%%%
@@ -126,28 +126,28 @@ Ein $\zeta \in \C$ mit $\zeta^n = 1$ heißt \highl{Einheitswurzel}{n--te Einheits
 Gegebenenfalls ist die Ordnung $d$ von $\zeta$, d.\,h. die kleinste natürliche Zahl mit $\zeta^d = 1$, ein Teiler von $n$.
 Hat $\zeta$ die Ordnung $n$, so heißt $\zeta$ \highl{Einheitswurzel!primitive}{primitive n-te Einheitswurzel}.\\
 In $\C$ hat das Polynom $X^n-1$ höchstens $n$ verschiedene Nullstellen.
-Andererseits ist $\left(X^n-1\right)' = nx^{n-1}$ zu $X^n-1$ teilerfremd.
+Andererseits ist $(X^n-1)' = nx^{n-1}$ zu $X^n-1$ teilerfremd.
 Daher hat $X^n-1$ keine mehrfachen Nullstellen in $\C$.
 Da $\C$ algebraisch abgeschlossen ist, enthält $\C$ also genau $n$ verschiedene n--te Einheitswurzeln.
 Diese bilden eine Untergruppe $W_n$ von $\C\backslash\left\{0\right\}$.
 Als solche ist sie zyklisch, d.\,h. $W_n = \left\langle \zeta\right\rangle$ für eine primitive n--te Einheitswurzel $\zeta$.\\
 Für $k\in\N$ gilt dabei: 
-\[\ord\left(\zeta^k\right) = n \Leftrightarrow \ggt\left(k, n\right) = 1\]
-Daher enthält $\C$ genau $\varphi\left(n\right)$ \randbem{Eulerische $\varphi$--Funktion} primitive n--te Einheitswurzel.\\
-Es ist $X^n-1 = \prod\limits_{k=1}^{n}\left(X-\zeta^k\right)$.\\
-Man nennt \[\Phi_n := \prod_{\mystackrel{k=1}{\ggt\left(k, n\right)=1}}^{n}\left(X-\zeta^k\right) \in \C\left[X\right]\]
+\[\ord(\zeta^k) = n \Leftrightarrow \ggt(k, n) = 1\]
+Daher enthält $\C$ genau $\varphi(n)$ \randbem{Eulerische $\varphi$--Funktion} primitive n--te Einheitswurzel.\\
+Es ist $X^n-1 = \prod\limits_{k=1}^{n}(X-\zeta^k)$.\\
+Man nennt \[\Phi_n := \prod_{\mystackrel{k=1}{\ggt(k, n)=1}}^{n}(X-\zeta^k) \in \C\left[X\right]\]
 das \highl{Kreisteilungspolynom}{n--te Kreisteilungspolynom}.\\
-Also $\deg\Phi_n = \varphi\left(n\right)$.
-Da jede n--te Einheitswurzel eine primitive d--te Einheitswurzel für genau einen Teiler $d$ von $n$ ist, gilt: $X^n-1 = \prod\limits_{d\mid n}\Phi_d\left(X\right)$, d.\,h. $\Phi_n = \frac{X^n-1}{\prod\limits_{\mystackrel{d\mid n}{d\neq n}}\Phi_d}$.\\
+Also $\deg\Phi_n = \varphi(n)$.
+Da jede n--te Einheitswurzel eine primitive d--te Einheitswurzel für genau einen Teiler $d$ von $n$ ist, gilt: $X^n-1 = \prod\limits_{d\mid n}\Phi_d(X)$, d.\,h. $\Phi_n = \frac{X^n-1}{\prod\limits_{\mystackrel{d\mid n}{d\neq n}}\Phi_d}$.\\
 
 Daraus kann man $\Phi_n$ induktiv berechnen:
 \[\begin{array}{lcl}
 \Phi_1 & = & X-1\\
 \Phi_2 & = & \frac{X^2-1}{\Phi_1}=\frac{X^2-1}{X-1}=X+1\\
 \Phi_3 & = & \frac{X^3-1}{\Phi_1}=\frac{X^3-1}{X-1}=X^2+X+1\\
-\Phi_4 & = & \frac{X^4-1}{\Phi_1\Phi_2}=\frac{X^4-1}{\left(X-1\right)\left(X+1\right)}=\frac{X^4-1}{X^2-1}=X^2+1\\
+\Phi_4 & = & \frac{X^4-1}{\Phi_1\Phi_2}=\frac{X^4-1}{(X-1)(X+1)}=\frac{X^4-1}{X^2-1}=X^2+1\\
 \Phi_5 & = & \frac{X^5-1}{\Phi_1}=\frac{X^5-1}{X-1}=X^4+X^3+X^2+X+1\\
-\Phi_6 & = & \frac{X^6-1}{\Phi_1\Phi_2\Phi_3} = \frac{X^6-1}{\left(X-1\right)\left(X+1\right)\left(X^2+X+1\right)}=\frac{X^6-1}{\left(X^3-1\right)\left(X+1\right)} = \underbrace{\frac{X^3+1}{X+1}}_{\text{geometrische Reihe}} = X^2-X+1\\
+\Phi_6 & = & \frac{X^6-1}{\Phi_1\Phi_2\Phi_3} = \frac{X^6-1}{(X-1)(X+1)(X^2+X+1)}=\frac{X^6-1}{(X^3-1)(X+1)} = \underbrace{\frac{X^3+1}{X+1}}_{\text{geometrische Reihe}} = X^2-X+1\\
 & \vdots &
 \end{array}\]
 Induktiv erhält man: $\Phi_n \in \Q\left[X\right]$.\\
@@ -166,29 +166,29 @@ $n\in\N \Rightarrow \Phi_n$ irreduzibel in $\Q\left[X\right]$.
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
 Wir nehmen an: $\Phi_n$ reduzibel in $\Q\left[X\right]$.
-Nach \autoref{satz:13.3} existieren dann $\beta, \gamma \in \Z\left[X\right]$ mit $\Phi_n = \beta\gamma$, $\deg\beta, \deg\gamma < \deg\Phi_n = \deg\varphi\left(n\right)$.\\
+Nach \autoref{satz:13.3} existieren dann $\beta, \gamma \in \Z\left[X\right]$ mit $\Phi_n = \beta\gamma$, $\deg\beta, \deg\gamma < \deg\Phi_n = \deg\varphi(n)$.\\
 Dabei können wir \OE{} annehmen: $\beta$ irreduzibel in $\Q\left[X\right]$.\\
 Sei $\zeta \in\C$ Nullstelle von $\beta$, d.\,h. $\zeta$ ist eine primitive n--te Einheitswurzel in $\C$.
 Sei $p \in \PZ$ mit $p \nmid n$.
 Wir zeigen, dass $\zeta^p$ auch Nullstelle von $\beta$.\\
 (Dann folgt, dass jede primitive n--te Einheitswurzel Nullstelle von $\beta$ ist;
-denn jede solche hat die Form $\zeta^k$ für ein $k\in\N$ mit $\ggt\left(k, n\right)$, und $k$ läßt sich als Produkt von Primfaktoren $p_i$ mit $p_i \nmid n$ schreiben)\\
+denn jede solche hat die Form $\zeta^k$ für ein $k\in\N$ mit $\ggt(k, n)$, und $k$ läßt sich als Produkt von Primfaktoren $p_i$ mit $p_i \nmid n$ schreiben)\\
 Wir nehmen an: $\zeta^p$ keine Nullstelle von $\beta$.
-Da $\zeta^p$ eine primitive n--te Einheitswurzel ist, folgt $\gamma\left(\zeta^p\right) = 0$.
-Da $\beta$ das Minimalpolynom von $\zeta$ über $\Q$ ist, folgt $\beta\mid\gamma\left(X^p\right)$.
-Schreibe $\gamma\left(X^p\right) = \beta\delta$ mit $\delta\in\Q\left[X\right]$.\\
-Da bei Division von $\gamma\left(X^p\right)$ durch das normierte Polynom $\beta \in \Z\left[X\right]$ keine Nenner auftreten ist $\delta \in\Z\left[X\right]$.\\
-Schreibe $\gamma=X^m+c_{m-1}X^{m-1}+\dotsc +c_1X+c_0 \qquad \left(c_i\in\Z\right)$.\\
-Für jedes $\psi = \sum\limits_{i=0}^{\infty}a_iX^i\in\Z\left[X\right]$ sei $\overline{\psi} := \sum\limits_{i=0}^{\infty}\left(a_i+p\Z\right)X^i\in\F_p\left[X\right]$.\\
+Da $\zeta^p$ eine primitive n--te Einheitswurzel ist, folgt $\gamma(\zeta^p) = 0$.
+Da $\beta$ das Minimalpolynom von $\zeta$ über $\Q$ ist, folgt $\beta\mid\gamma(X^p)$.
+Schreibe $\gamma(X^p) = \beta\delta$ mit $\delta\in\Q\left[X\right]$.\\
+Da bei Division von $\gamma(X^p)$ durch das normierte Polynom $\beta \in \Z\left[X\right]$ keine Nenner auftreten ist $\delta \in\Z\left[X\right]$.\\
+Schreibe $\gamma=X^m+c_{m-1}X^{m-1}+\dotsc +c_1X+c_0 \qquad (c_i\in\Z)$.\\
+Für jedes $\psi = \sum\limits_{i=0}^{\infty}a_iX^i\in\Z\left[X\right]$ sei $\overline{\psi} := \sum\limits_{i=0}^{\infty}(a_i+p\Z)X^i\in\F_p\left[X\right]$.\\
 Für $\omega\in\Z\left[X\right]$ ist dann natürlich $\overline{\psi\omega} = \overline{\psi} \cdot \overline{\omega}$; insbesondere ist
 \[\begin{array}{lcl}
-\overline{\beta}\overline{\delta} & = & \overline{\gamma}\left(X^p\right) = X^{pm} + \left(c_{m-1}+p\Z\right)X^{p\left(m-1\right)} + \dotsc + \left(c_1+p\Z\right)X^p + \left(c_0+p\Z\right)\\
-& = & X^{pm} + \left(c_{m-1}+p\Z\right)^pX^{\left(m-1\right)p} + \dotsc + \left(c_1+p\Z\right)^pX^p+\left(c_0+p\Z\right)^p\\
+\overline{\beta}\overline{\delta} & = & \overline{\gamma}(X^p) = X^{pm} + (c_{m-1}+p\Z)X^{p(m-1)} + \dotsc + (c_1+p\Z)X^p + (c_0+p\Z)\\
+& = & X^{pm} + (c_{m-1}+p\Z)^pX^{(m-1)p} + \dotsc + (c_1+p\Z)^pX^p+(c_0+p\Z)^p\\
 & = & \overline{\gamma}^p
 \end{array}\]
-Daher $\ggt\left(\overline{\beta}, \overline{\gamma}\right) \neq 1$.
+Daher $\ggt(\overline{\beta}, \overline{\gamma}) \neq 1$.
 Wegen $\overline{\Phi}_n = \overline{\beta}\overline{\gamma}$ existiert also ein irreduzibles Polynom $\overline{\pi} \in \F_p\left[X\right]$ mit $\overline{\pi}^2\mid \overline{\Phi}_n\mid X^n-1$.
-Dann ist aber $\overline{\pi}\mid \left(X^n-1\right)' = nX^{n-1}\neq 0$, d.\,h. $\overline{\pi} = X$.
+Dann ist aber $\overline{\pi}\mid (X^n-1)' = nX^{n-1}\neq 0$, d.\,h. $\overline{\pi} = X$.
 Widerspruch wegen $X \nmid X^n-1$ in $\F_p\left[X\right]$.
 \end{beweis}
 
@@ -197,46 +197,46 @@ Widerspruch wegen $X \nmid X^n-1$ in $\F_p\left[X\right]$.
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:13.4}
 Sei $n\in\N$ und $\zeta$ eine primitive n--te Einheitswurzel in $\C$ (z.\,B.: $\zeta = e^{\frac{2\pi i}{n}}$).
-Dann enthält $\Q\left(\zeta\right)$ alle n--ten Einheitswurzeln $1, \zeta, \zeta^2, \ldots, \zeta^{n-1}$.\\
-Daher ist $\Q\left(\zeta\right)$ Zerfällungskörper des Polynoms $X^n-1$ (und des Polynoms $\Phi_n$) über $\Q$; $\Q\left(\zeta\right)$ heißt \highl{Kreisteilungskörper}{n--ter Kreisteilungskörper}.
+Dann enthält $\Q(\zeta)$ alle n--ten Einheitswurzeln $1, \zeta, \zeta^2, \ldots, \zeta^{n-1}$.\\
+Daher ist $\Q(\zeta)$ Zerfällungskörper des Polynoms $X^n-1$ (und des Polynoms $\Phi_n$) über $\Q$; $\Q(\zeta)$ heißt \highl{Kreisteilungskörper}{n--ter Kreisteilungskörper}.
 Nach \autoref{satz:13.4} ist $\Phi_n$ das Minimalpolynom von $\zeta$ über $\Q$.
-Daher ist $\left[\Q\left(\zeta\right):\Q\right] = \deg\Phi_n = \deg\varphi\left(n\right)$.
+Daher ist $\left[\Q(\zeta):\Q\right] = \deg\Phi_n = \deg\varphi(n)$.
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
 % Satz 13.5
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:13.5}
-$\Q\left(\zeta\right)\mid \Q$ ist Galoiserweiterung, und $\Gal\left(\Q\left(\zeta\right)\mid \Q\right) \cong U\left(\ZmZ{n}\right)$.
+$\Q(\zeta)\mid \Q$ ist Galoiserweiterung, und $\Gal(\Q(\zeta)\mid \Q) \cong U(\ZmZ{n})$.
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Nach \autoref{satz:11.8} ist $\Q\left(\zeta\right)\mid \Q$ Galoiserweiterung.\\
-Schreibe $\Phi_n = X^m + a_{m-1}X^{m-1}+ \dotsc +a_1X+a_0 \qquad \left(a_i \in\Z, m = \varphi\left(n\right)\right)$.
-Für $\alpha \in \Gal\left(\Q\left(\zeta\right)\mid \Q\right)$ ist
+Nach \autoref{satz:11.8} ist $\Q(\zeta)\mid \Q$ Galoiserweiterung.\\
+Schreibe $\Phi_n = X^m + a_{m-1}X^{m-1}+ \dotsc +a_1X+a_0 \qquad (a_i \in\Z, m = \varphi(n))$.
+Für $\alpha \in \Gal(\Q(\zeta)\mid \Q)$ ist
 \[\begin{array}{lcl}
-\Phi_n\left(\alpha\left(\zeta\right)\right) & = & \alpha\left(\zeta\right)^m + a_{m-1}\alpha\left(\zeta\right)^{m-1} + \dotsc + a_1\alpha\left(\zeta\right)+a_0\\
-& = & \alpha\left(\underbrace{\zeta^m + a_{m-1}\zeta^{m-1}+\dotsc+a_1\zeta+a_0}_{\Phi_n\left(\zeta\right) = 0}\right) = 0
+\Phi_n(\alpha(\zeta)) & = & \alpha(\zeta)^m + a_{m-1}\alpha(\zeta)^{m-1} + \dotsc + a_1\alpha(\zeta)+a_0\\
+& = & \alpha(\underbrace{\zeta^m + a_{m-1}\zeta^{m-1}+\dotsc+a_1\zeta+a_0}_{\Phi_n(\zeta) = 0}) = 0
 \end{array},\]
-d.\,h. $\alpha\left(\zeta\right) = \zeta^k$ für ein $k\in\Z$ mit $\ggt\left(k,n\right) = 1$;
+d.\,h. $\alpha(\zeta) = \zeta^k$ für ein $k\in\Z$ mit $\ggt(k,n) = 1$;
 dabei ist $k$ modulo $n$ eindeutig bestimmt.\\
-Durch $\Gal\left(\Q\left(\zeta\right)\mid\Q\right)\mapsto U\left(\ZmZ{n}\right)$, $\alpha \mapsto k + n\Z$ erhalten wir also eine wohldefinierte Abbildung.
-Da $\alpha$ durch $\alpha\left(\zeta\right)$ eindeutig bestimmt ist, ist die Abbildung injektiv.\\
-Sei auch $\beta \in \Gal\left(\Q\left(\zeta\right)\mid \Q\right)$.
-Dann: $\beta\left(\zeta\right) = \zeta^l$ mit $l\in\Z$, $\ggt\left(l,n\right) = 1$.
-Dann $\alpha \circ\beta \in \Gal\left(\Q\left(\zeta\right)\mid \Q\right)$ mit $\left(\alpha\circ\beta\right)\left(\zeta\right) = \alpha\left(\beta\left(\zeta\right)\right) = \alpha\left(\zeta^l\right) = \alpha\left(\zeta\right)^l = \left(\zeta^k\right)^l = \zeta^{kl}$.
+Durch $\Gal(\Q(\zeta)\mid\Q)\mapsto U(\ZmZ{n})$, $\alpha \mapsto k + n\Z$ erhalten wir also eine wohldefinierte Abbildung.
+Da $\alpha$ durch $\alpha(\zeta)$ eindeutig bestimmt ist, ist die Abbildung injektiv.\\
+Sei auch $\beta \in \Gal(\Q(\zeta)\mid \Q)$.
+Dann: $\beta(\zeta) = \zeta^l$ mit $l\in\Z$, $\ggt(l,n) = 1$.
+Dann $\alpha \circ\beta \in \Gal(\Q(\zeta)\mid \Q)$ mit $(\alpha\circ\beta)(\zeta) = \alpha(\beta(\zeta)) = \alpha(\zeta^l) = \alpha(\zeta)^l = (\zeta^k)^l = \zeta^{kl}$.
 Dies zeigt, dass unsere Abbildung ein Homomorphismus ist.\\
-Wegen $\abs{\Gal\left(\Q\left(\zeta\right)\mid \Q\right)} = \left[\Q\left(\zeta\right):\Q\right] = \varphi\left(n\right) = \abs{U\left(\ZmZ{n}\right)}$ folgt aus der Injektivität die Surjektivität.
+Wegen $\abs{\Gal(\Q(\zeta)\mid \Q)} = \left[\Q(\zeta):\Q\right] = \varphi(n) = \abs{U(\ZmZ{n})}$ folgt aus der Injektivität die Surjektivität.
 \end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
 % Satz 13.6
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}[Gauß]\label{satz:13.6}
-Ein regelmäßiges n--Eck ist genau dann mit Zirkel und Lineal konstruierbar, wenn $\varphi\left(n\right)$\footnote{Eulerische $\varphi$--Funktion} eine 2er--Potenz ist.
+Ein regelmäßiges n--Eck ist genau dann mit Zirkel und Lineal konstruierbar, wenn $\varphi(n)$\footnote{Eulerische $\varphi$--Funktion} eine 2er--Potenz ist.
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
@@ -247,11 +247,11 @@ Genau dann ist ein regelmäßiges n--Eck mit Zirkel und Lineal konstruierbar, wenn
 \begin{itemize}
 	\item["`$\Rightarrow$"':] Sei $\zeta$ aus $0, 1$ konstruierbar.
 	Nach \autoref{satz:9.3} existiert eine Folge von Teilkörpern $\Q = L_0 \subseteq L_1 \subseteq \ldots \subseteq L_m \subseteq \C$ mit $\zeta \in L_m$ und $\left[L_k:L_{k-1}\right] = 2$ für alle $k$.\\
-	Wegen $\Q\left(\zeta\right) \subseteq L_m$ folgt aus dem Gradsatz (\autoref{satz:6.3}) $\varphi\left(n\right) = \left[\Q\left(\zeta\right):\Q\right]\mid\left[L_m:\Q\right] = 2^m$, insbesondere ist $\varphi\left(n\right)$ eine Potenz von $2$.
+	Wegen $\Q(\zeta) \subseteq L_m$ folgt aus dem Gradsatz (\autoref{satz:6.3}) $\varphi(n) = \left[\Q(\zeta):\Q\right]\mid\left[L_m:\Q\right] = 2^m$, insbesondere ist $\varphi(n)$ eine Potenz von $2$.
 	
-	\item["`$\Leftarrow$"':] Sei $\varphi\left(n\right)$ eine 2er--Potenz.
-	Nach \autoref{satz:9.3} genügt zu zeigen, dass eine Folge von Teilkörpern $\Q = L_0 \subseteq L_1 \subseteq \dotsc \subseteq L_m = \Q\left(\zeta\right)$ mit $\left[L_k:L_{k-1}\right] = 2$ für alle $k$ existiert.
-	Nach \autoref{satz:13.5} ist $\Q\left(\zeta\right)\mid\Q$ eine Galoiserweiterung, und $G := \Gal\left(\Q\left(\zeta\right)\mid\Q\right)$ ist abelsch der Ordnung $\varphi\left(n\right)$.\\
+	\item["`$\Leftarrow$"':] Sei $\varphi(n)$ eine 2er--Potenz.
+	Nach \autoref{satz:9.3} genügt zu zeigen, dass eine Folge von Teilkörpern $\Q = L_0 \subseteq L_1 \subseteq \dotsc \subseteq L_m = \Q(\zeta)$ mit $\left[L_k:L_{k-1}\right] = 2$ für alle $k$ existiert.
+	Nach \autoref{satz:13.5} ist $\Q(\zeta)\mid\Q$ eine Galoiserweiterung, und $G := \Gal(\Q(\zeta)\mid\Q)$ ist abelsch der Ordnung $\varphi(n)$.\\
 	Nach dem Hauptsatz der Galoistheorie (\autoref{satz:11.4}) genügt zu zeigen, dass eine Folge von Untergruppen $G = G_0 \supseteq G_1 \supseteq \dotsc \supseteq G_m = \left\{1\right\}$ mit $\abs{G_{i-1}:G_i} = 2$ für alle $i$ existiert.
 	Dies zeigen wir allgemeiner in folgendem Satz:
 \end{itemize}
@@ -274,7 +274,7 @@ Die Ordnung $k$ von $a$ ist endlich und $k \neq 1$.
 Sei $p \in \PZ$ mit $p\mid k$.
 Dann hat $b := a^{\frac{k}{p}}$ die Ordnung $p$.
 Daher ist $G_1 := \left\langle b\right\rangle \subseteq G$ und $\abs{G_1:\left\{1\right\}} = \abs{G_1} = p$.
-Da $G$ abelsch ist, ist $G_1 \taleq G$, und $G/G_1$ ist abelsch.\\
+Da $G$ abelsch ist, ist $G_1 \unlhd G$, und $G/G_1$ ist abelsch.\\
 Nach Induktion existiert eine Folge von Untergruppen $\left\{1\right\} = H_1 \leq H_2 \leq \dotsc \leq H_n = G/G_1$ von $G/G_1$ mit $\abs{H_i:H_{i-1}} \in \PZ$ für alle $i$.\\
 Nach \autoref{bem:10.6} hat jedes $H_i$ die Form $H_i = G_i/G_1$, wobei $G_1 \leq G_i \leq G$ ist.
 Wegen $G_{i-1}/G_1 = H_{i-1} \leq H_i = G_i/G_1$ ist $G_{i-1} \leq G_i$, nach dem 2. Isomorphiesatz (\autoref{satz:10.7}) gilt: $\abs{G_i:G_{i-1}} = \abs{G_i/G_1:G_{i-1}/G_1} = \abs{H_{i-1}:H_i} \in \PZ$.\\
@@ -286,8 +286,8 @@ Also ist $\left\{1\right\} = G_0 \leq G_1 \leq G_2 \leq \dotsc \leq G_n = G$ ein
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:13.5}
 Sei $n \in \N$ mit Primfaktorzerlegung $n = 2^ap_1^{b_1}\ldots p_r^{b_r}$.
-Dann ist \[\varphi\left(n\right) = 2^{a-1}p_1^{b_1-1}\left(p_1-1\right)\dotsc p_r^{b_r-1}\left(p_r-1\right).\]
-Also ist $\varphi\left(n\right)$ genau dann eine 2er--Potenz, wenn $b_1 = \dotsc = b_r = 1$ und $p_1-1, \ldots, p_r-1$ Potenzen von $2$, d.\,h. $p_1, \ldots, p_r$ verschiedene Fermat--Primzahlen sind.
+Dann ist \[\varphi(n) = 2^{a-1}p_1^{b_1-1}(p_1-1)\dotsc p_r^{b_r-1}(p_r-1).\]
+Also ist $\varphi(n)$ genau dann eine 2er--Potenz, wenn $b_1 = \dotsc = b_r = 1$ und $p_1-1, \ldots, p_r-1$ Potenzen von $2$, d.\,h. $p_1, \ldots, p_r$ verschiedene Fermat--Primzahlen sind.
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
@@ -303,21 +303,21 @@ Dann ist $L\mid K$ Galoiserweiterung mit zyklischer Galoisgruppe.
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Da $\left(X^n-1\right)' = nX^{n-1}$ zu $X^n-1$ teilerfremd ist, hat $X^n-1$ genau $n$ verschiedene Nullstellen in $K$.\\
+Da $(X^n-1)' = nX^{n-1}$ zu $X^n-1$ teilerfremd ist, hat $X^n-1$ genau $n$ verschiedene Nullstellen in $K$.\\
 Wie in \autoref{bem:13.3} bilden diese eine zyklische Untergruppe $\left\langle \zeta\right\rangle$ der Ordnung $n$ von $K\backslash\left\{0\right\}$.\\
 Sei $b\in L$ eine Nullstelle von $X^n-a$. Dann sind $b, \zeta b, \zeta^2 b, \ldots, \zeta^{n-1}b$ die Nullstellen von $X^n-a$ in $L$.
-Also ist $L = K\left(b\right)$.
+Also ist $L = K(b)$.
 Nach \autoref{satz:11.8} ist $L\mid K$ Galoiserweiterung.\\
-Sei $\sigma \in \Gal\left(L\mid K\right) =: G$.
-Dann ist $\sigma\left(b\right)^n = \sigma\left(b^n\right) = \sigma\left(a\right) = a$, d.\,h. $\sigma\left(b\right) = \zeta^ib$ für ein $i\in\Z$.
+Sei $\sigma \in \Gal(L\mid K) =: G$.
+Dann ist $\sigma(b)^n = \sigma(b^n) = \sigma(a) = a$, d.\,h. $\sigma(b) = \zeta^ib$ für ein $i\in\Z$.
 Dabei ist $i$ eindeutig modulo $n$.
 Durch $\sigma\mapsto i+n\Z$ erhalten wir eine wohldefinierte Abbildung $f\colon G\mapsto\ZmZ{n}$.
-Diese ist injektiv, da $\sigma$ durch $\sigma\left(b\right)$ eindeutig bestimmt ist.\\
-Sei auch $\tau\in G$, und sei $j\in\Z$ mit $\tau\left(b\right) = \zeta^jb$.
-Dann: $\sigma\circ\tau\in G$, und $\left(\sigma\circ\tau\right)\left(b\right) = \sigma\left(\tau\left(b\right)\right) = \sigma\left(\zeta^jb\right) = \zeta\sigma\left(b\right) = \zeta^j\zeta^ib = \zeta^{i+j}b$.
-Daher gilt: $f\left(\sigma\circ\tau\right) = i+j+n\Z = \left(i+n\Z\right)+\left(j+n\Z\right) = f\left(\sigma\right) + f\left(\tau\right)$.
+Diese ist injektiv, da $\sigma$ durch $\sigma(b)$ eindeutig bestimmt ist.\\
+Sei auch $\tau\in G$, und sei $j\in\Z$ mit $\tau(b) = \zeta^jb$.
+Dann: $\sigma\circ\tau\in G$, und $(\sigma\circ\tau)(b) = \sigma(\tau(b)) = \sigma(\zeta^jb) = \zeta\sigma(b) = \zeta^j\zeta^ib = \zeta^{i+j}b$.
+Daher gilt: $f(\sigma\circ\tau) = i+j+n\Z = (i+n\Z)+(j+n\Z) = f(\sigma) + f(\tau)$.
 Folglich ist $f$ ein Monomorphismus;
-insbesondere $G \cong f\left(G\right) \leq \ZmZ{n}$.\\
+insbesondere $G \cong f(G) \leq \ZmZ{n}$.\\
 Da Untergruppen von zyklischen Gruppen wieder zyklisch sind, folgt die Behauptung.
 \end{beweis}
 
@@ -326,7 +326,7 @@ Da Untergruppen von zyklischen Gruppen wieder zyklisch sind, folgt die Behauptun
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}[Dedekinds Lemma]\label{satz:13.9}
 Sei $L\mid K$ Galoiserweiterung mit Galoisgruppe $G$.
-Dann sind die Elemente in $G$ linear unabhängig im $L$--Vektorraum $Abb\left(L,L\right)$
+Dann sind die Elemente in $G$ linear unabhängig im $L$--Vektorraum $Abb(L,L)$
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
@@ -336,16 +336,16 @@ Dann sind die Elemente in $G$ linear unabhängig im $L$--Vektorraum $Abb\left(L,L
 Sonst existieren paarweise verschiedene $\sigma_1,\ldots ,\sigma_n\in G$ und $a_1,\ldots ,a_n \in L\backslash\left\{0\right\}$ mit $0 = a_1\sigma_1 + \dotsc + a_n\sigma_n$.
 Wir treffen unsere Wahl so, dass $n$ möglichst klein ist.
 Dann ist sicher $n \geq 2$, d.\,h.
-\[\left(\ast\right) \qquad 0 = a_1\sigma_1\left(x\right) + \dotsc + a_n\sigma_n\left(x\right) \qquad \left(x\in L\right).\]
-Wir wählen $y\in L$ mit $\sigma_1\left(y\right) \neq \sigma_n\left(y\right)$, multiplizieren $\left(\ast\right)$ mit $\sigma_n\left(y\right)$ und erhalten:
-\[\left(\ast\ast\right) \qquad 0 = a_1\sigma_n\left(y\right)\sigma_1\left(x\right) + \dotsc + a_n\sigma_n\left(y\right)\sigma_n\left(x\right) \qquad \left(x\in L\right).\]
-Ersetzt man in $\left(\ast\right)$ $x$ durch $xy$, so ergibt sich:
-\[\left(\ast\ast\ast\right) \qquad 0 = a_1\sigma_1\left(x\right)\sigma_1\left(y\right) + \dotsc + a_n\sigma_n\left(x\right)\sigma_n\left(y\right) \qquad \left(x\in L\right).\]
-Subtraktion von $\left(\ast\ast\right)$ und $\left(\ast\ast\ast\right)$ liefert:
-\[0 = a_1\left(\sigma_1\left(y\right)-\sigma_n\left(y\right)\right)\sigma_1\left(x\right) + \dotsc + a_{n-1}\left(\sigma_{n-1}\left(y\right)-\sigma_n\left(y\right)\right)\sigma_{n-1}\left(x\right) \qquad \left(x\in L\right),\]
-d.\,h. $0 = a_1\left(\sigma_1\left(y\right)-\sigma_n\left(y\right)\right)\sigma_1 + \dotsc + a_{n-1}\left(\sigma_{n-1}\left(y\right)-\sigma_n\left(y\right)\right)\sigma_{n-1}$.\\
-Aus der Wahl von $n$ folgt: $a_i\left(\sigma_i\left(y\right)-\sigma_n\left(y\right)\right) = 0$ für $i=1,\ldots ,n-1$.\\
-Dies widerspricht $a_1\neq 1$ und $\sigma_1\left(y\right) \neq \sigma_n\left(y\right)$.
+\[(\ast) \qquad 0 = a_1\sigma_1(x) + \dotsc + a_n\sigma_n(x) \qquad (x\in L).\]
+Wir wählen $y\in L$ mit $\sigma_1(y) \neq \sigma_n(y)$, multiplizieren $(\ast)$ mit $\sigma_n(y)$ und erhalten:
+\[(\ast\ast) \qquad 0 = a_1\sigma_n(y)\sigma_1(x) + \dotsc + a_n\sigma_n(y)\sigma_n(x) \qquad (x\in L).\]
+Ersetzt man in $(\ast)$ $x$ durch $xy$, so ergibt sich:
+\[(\ast\ast\ast) \qquad 0 = a_1\sigma_1(x)\sigma_1(y) + \dotsc + a_n\sigma_n(x)\sigma_n(y) \qquad (x\in L).\]
+Subtraktion von $(\ast\ast)$ und $(\ast\ast\ast)$ liefert:
+\[0 = a_1(\sigma_1(y)-\sigma_n(y))\sigma_1(x) + \dotsc + a_{n-1}(\sigma_{n-1}(y)-\sigma_n(y))\sigma_{n-1}(x) \qquad (x\in L),\]
+d.\,h. $0 = a_1(\sigma_1(y)-\sigma_n(y))\sigma_1 + \dotsc + a_{n-1}(\sigma_{n-1}(y)-\sigma_n(y))\sigma_{n-1}$.\\
+Aus der Wahl von $n$ folgt: $a_i(\sigma_i(y)-\sigma_n(y)) = 0$ für $i=1,\ldots ,n-1$.\\
+Dies widerspricht $a_1\neq 1$ und $\sigma_1(y) \neq \sigma_n(y)$.
 \end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
@@ -354,7 +354,7 @@ Dies widerspricht $a_1\neq 1$ und $\sigma_1\left(y\right) \neq \sigma_n\left(y\r
 \begin{satz}\label{satz:13.10}
 Sei $K$ ein Körper der Charakteristik $0$, in dem das Polynom $X^n-1$ in Linearfaktoren zerfällt.
 Sei $L\mid K$ eine Galoiserweiterung des Grades $n$ mit zyklischer Galoisgruppe $G$.\\
-Dann existiert ein $b\in L$ mit $b^n\in K$ und $L = K\left(b\right)$.
+Dann existiert ein $b\in L$ mit $b^n\in K$ und $L = K(b)$.
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
@@ -364,13 +364,13 @@ Dann existiert ein $b\in L$ mit $b^n\in K$ und $L = K\left(b\right)$.
 Wie im Beweis von \autoref{satz:13.8} bilden die Nullstellen von $X^n-1$ eine zyklische Untergruppe $\left\langle \zeta\right\rangle$ der Ordnung $n$ von $K\backslash\left\{0\right\}$.
 Es ist $\abs{G} = \left[L:K\right] = n$.\\
 Schreibe $G = \left\langle \sigma\right\rangle = \left\{id_L, \sigma, \sigma^2,\ldots ,\sigma^{n-1}\right\}$.\\
-Nach \textsc{Dedekind} (\autoref{satz:13.9}) sind $id_L, \sigma, \sigma^2, \ldots, \sigma^{n-1}$ linear unabhängig in $Abb\left(L,L\right)$.
+Nach \textsc{Dedekind} (\autoref{satz:13.9}) sind $id_L, \sigma, \sigma^2, \ldots, \sigma^{n-1}$ linear unabhängig in $Abb(L,L)$.
 Daher $id_L + \zeta\sigma + \zeta^2\sigma+\dotsc+\zeta^{n-1}\sigma^{n-1}\neq 0$.\\
-Sei $x\in L$ mit $b:=x+\zeta\sigma\left(x\right)+\zeta^2\sigma^2\left(x\right)+\dotsc+\zeta^{n-1}\sigma^{n-1}\left(x\right) \neq 0$.
-Dann: $\sigma\left(b\right) = \sigma\left(x\right)+\zeta\sigma^2\left(x\right)+\zeta^2\sigma^3\left(x\right)+\dotsc+\zeta^{n-1}x = \zeta^{-1}b$.
-Nach \autoref{satz:11.6} ist $K\left(b\right)\mid K$ Galoiserweiterung.
-Durch Einschränkung von $id_L, \sigma, \ldots, \sigma^{n-1}$ erhält man $n$ verschiedene Elemente in $\Gal\left(K\left(b\right)\mid K\right)$.
-Also: \[\left[K\left(b\right):K\right] = \abs{\Gal\left(K\left(b\right)\mid K\right)} \geq n = \left[L:K\right] \geq \left[K\left(b\right):K\right],\]
-d.\,h. $\left[L:K\right] = \left[K\left(b\right):K\right]$ und damit $L = K\left(b\right)$.
-Ferner $\sigma\left(b^n\right) = \sigma\left(b\right)^n = \left(\zeta^{-1}b\right)^n = \overbrace{\zeta^{-n}}^{=1}b^n = b^n$, d.\,h. $b^n\in\Fix\left(\left\langle \sigma\right\rangle\right) = \Fix\left(\Gal\left(L\mid K\right)\right) = K$.
+Sei $x\in L$ mit $b:=x+\zeta\sigma(x)+\zeta^2\sigma^2(x)+\dotsc+\zeta^{n-1}\sigma^{n-1}(x) \neq 0$.
+Dann: $\sigma(b) = \sigma(x)+\zeta\sigma^2(x)+\zeta^2\sigma^3(x)+\dotsc+\zeta^{n-1}x = \zeta^{-1}b$.
+Nach \autoref{satz:11.6} ist $K(b)\mid K$ Galoiserweiterung.
+Durch Einschränkung von $id_L, \sigma, \ldots, \sigma^{n-1}$ erhält man $n$ verschiedene Elemente in $\Gal(K(b)\mid K)$.
+Also: \[\left[K(b):K\right] = \abs{\Gal(K(b)\mid K)} \geq n = \left[L:K\right] \geq \left[K(b):K\right],\]
+d.\,h. $\left[L:K\right] = \left[K(b):K\right]$ und damit $L = K(b)$.
+Ferner $\sigma(b^n) = \sigma(b)^n = (\zeta^{-1}b)^n = \overbrace{\zeta^{-n}}^{=1}b^n = b^n$, d.\,h. $b^n\in\Fix(\left\langle \sigma\right\rangle) = \Fix(\Gal(L\mid K)) = K$.
 \end{beweis}
