--- a/kuelshammer-algebra1/Kapitel16.tex
+++ b/kuelshammer-algebra1/Kapitel16.tex
@@ -4,28 +4,28 @@
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:16.1}
 Jede Gruppe $G$ operiert auf der Menge der Untergruppen von $G$ durch:
-\[{}^gH:= gHg^{-1}\ \left(g\in G, H\leq G\right).\]
+\[{}^gH:= gHg^{-1}\ (g\in G, H\leq G).\]
 [$gHg^{-1}$ ist als Bild von $H$ unter einem inneren Automorphismus von $G$ tatsächlich wieder eine Untergruppe von $G$.]\\
 Die Bahn einer Untergruppe $H\leq G$ ist die Konjugationsklasse
 \[\mathfrak{k}_H:=\left\{gHg^{-1}\colon g\in G\right\}.\]
 Gehören zwei Untergruppen $H_1,H_2 leq G$ zur gleichen Konjugationsklasse [d.\,h. existiert ein $g\in G$ mit $H_2=gH_1g^{-1}$], so heißen $H_1,H_2$ konjugiert in $G$.\\
 Der Stabilisator von $H\leq G$ unter der Konjugationsoperation ist
-\[\left\{g\in G\colon gHg^{-1}\right\} = \left\{g\in G\colon gH=Hg\right\}=:N_G\left(H\right)\]
-(Übungsaufgabe 31). $N_G\left(H\right)$ heißt \highl{Gruppe!Normalisator}{Normalisator} von $H$ in $G$.
-Nach \autoref{satz:15.5} ist $N_G\left(H\right)\leq G$, und $\abs{\mathfrak{k}_H}=\abs{G:N_G\left(H\right)}$.
-Nach Übungsaufgabe 31 ist $H\taleq N_G\left(H\right)$.
+\[\left\{g\in G\colon gHg^{-1}\right\} = \left\{g\in G\colon gH=Hg\right\}=:N_G(H)\]
+(Übungsaufgabe 31). $N_G(H)$ heißt \highl{Gruppe!Normalisator}{Normalisator} von $H$ in $G$.
+Nach \autoref{satz:15.5} ist $N_G(H)\leq G$, und $\abs{\mathfrak{k}_H}=\abs{G:N_G(H)}$.
+Nach Übungsaufgabe 31 ist $H\unlhd N_G(H)$.
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
 % Definition 16.1
 %%%%%%%%%%%%%%%%%%%
 \begin{defi}\label{defi:16.1}
-Sei $p\in\PZ$, und sei $G$ eine endliche Gruppe der Ordnung $p^am$ $\left(a\in\N_0,m\in\N,p\nmid m\right)$.\\
+Sei $p\in\PZ$, und sei $G$ eine endliche Gruppe der Ordnung $p^am$ $(a\in\N_0,m\in\N,p\nmid m)$.\\
 Eine \highl{Gruppe!p--Untergruppe}{$p$--Untergruppe} von $G$ ist eine Untergruppe von $G$, die gleichzeitig ein $p$--Gruppe ist.
 Eine $p$--Untergruppe $P$ von $G$ heißt
   \highl{Gruppe!p--Sylowgruppe}{$p$--Sylowgruppe} von $G$, falls $p\nmid
   \abs{G:P}$ gilt [d.\,h. $\abs{P}=p^a$].
-Die Menge aller $p$--Sylowgruppen von $G$ bezeichnet man mit $\Syl_p\left(G\right)$.
+Die Menge aller $p$--Sylowgruppen von $G$ bezeichnet man mit $\Syl_p(G)$.
 \end{defi}
 
 %%%%%%%%%%%%%%%%%%%
@@ -40,7 +40,7 @@ Seien $G$ eine endliche Gruppe und $p\in\PZ$.
 	
 	\item Jede $p$--Untergruppe von $G$ ist in einer $p$--Sylowgruppe von $G$ enthalten.
 	
-	\item Für $P\in\Syl_p\left(G\right)$ ist $\abs{\Syl_p\left(G\right)} = \abs{G:N_G\left(P\right)}\Bigl|\abs{G}$ und $\abs{\Syl_p\left(G\right)}\equiv 1\pmod{p}$.
+	\item Für $P\in\Syl_p(G)$ ist $\abs{\Syl_p(G)} = \abs{G:N_G(P)}\Bigl|\abs{G}$ und $\abs{\Syl_p(G)}\equiv 1\pmod{p}$.
 \end{enumerate}
 \end{satz}
 
@@ -50,56 +50,56 @@ Seien $G$ eine endliche Gruppe und $p\in\PZ$.
 \begin{beweis}
 \begin{enumerate}[(i)]
 	\item (Induktion nach Gruppenordnung $\abs{G}$)\\
-	Im Fall $p\nmid\abs{G}$ ist $\left\{1\right\} \in\Syl_p\left(G\right)$.
+	Im Fall $p\nmid\abs{G}$ ist $\left\{1\right\} \in\Syl_p(G)$.
 	Dann ist auch der Induktionsanfang erledigt.\\
 	Sei $p\Bigl|\abs{G}$.
 	Dei Konjugationsklassen von $G$ seien $K_1,\ldots,K_t$;
 	dabei sei $\abs{K_i} = 1$ für $i=1,\ldots,s$ und $\abs{K_i}>1$ für $i=s+1,\ldots,t$.
 	Für $i=1,\ldots,t$ sei $x_i\in K_i$.
-	Dann ist $K_1\cup\dotsc\cup K_s = Z\left(G\right)$.
+	Dann ist $K_1\cup\dotsc\cup K_s = Z(G)$.
 	Nch der Klassengleichung gilt:
-	\[\abs{G} = \abs{K_1}+\dotsc+\abs{K_t}=\abs{Z\left(G\right)}+\abs{G:C_G\left(x_{s+1}\right)}+\dotsc+\abs{G:\C_G\left(x_t\right)}.\]
-	Ist $p\nmid\abs{G:C_G\left(x_i\right)}$ für ein $i\in\left\{s+1,\ldots,t\right\}$, so enthält $C_G\left(x_i\right)$ wegen $\abs{C_G\left(x_i\right)}<\abs{G}$ nach Induktion eine $p$--Sylowgruppe $P$.
-	Wegen $\abs{G:P}=\underbrace{\abs{G:C_G\left(x_i\right)}}_{\not\equiv 0\pmod{p}}\cdot\underbrace{\abs{C_G\left(x_i\right):P}}_{\not\equiv 0\pmod{p}}\not\equiv 0\pmod{p}$ ist also $P\in\Syl_p\left(G\right)$.\\
-	Daher können wir $p\Bigl|\abs{G:C_G\left(x_i\right)}$ für $i=s+1,\ldots,t$ annehmen.\\
-	Dann: $p\Bigl|\abs{Z\left(G\right)}$.
+	\[\abs{G} = \abs{K_1}+\dotsc+\abs{K_t}=\abs{Z(G)}+\abs{G:C_G(x_{s+1})}+\dotsc+\abs{G:\C_G(x_t)}.\]
+	Ist $p\nmid\abs{G:C_G(x_i)}$ für ein $i\in\left\{s+1,\ldots,t\right\}$, so enthält $C_G(x_i)$ wegen $\abs{C_G(x_i)}<\abs{G}$ nach Induktion eine $p$--Sylowgruppe $P$.
+	Wegen $\abs{G:P}=\underbrace{\abs{G:C_G(x_i)}}_{\not\equiv 0\pmod{p}}\cdot\underbrace{\abs{C_G(x_i):P}}_{\not\equiv 0\pmod{p}}\not\equiv 0\pmod{p}$ ist also $P\in\Syl_p(G)$.\\
+	Daher können wir $p\Bigl|\abs{G:C_G(x_i)}$ für $i=s+1,\ldots,t$ annehmen.\\
+	Dann: $p\Bigl|\abs{Z(G)}$.
 	
-	Nach Cauchy (\autoref{satz:14.8}) enthält $Z\left(G\right)$ ein Element der Ordnung $p$.
-	Folglich: $Z:=\left\langle z\right\rangle \taleq G$, und $\abs{G/Z}<\abs{G}$.
+	Nach Cauchy (\autoref{satz:14.8}) enthält $Z(G)$ ein Element der Ordnung $p$.
+	Folglich: $Z:=\left\langle z\right\rangle \unlhd G$, und $\abs{G/Z}<\abs{G}$.
 	
 	Nach Induktion enthält $G/Z$ eine $p$--Sylowgruppe $P/Z$.
 	Da $\abs{P}=\abs{P/Z}\cdot\abs{Z}$ eine $p$--Potenz ist, ist $P$ eine $p$--Untergruppe von $G$.
-	Wegen $\abs{G:P}=\abs{G/Z:P/Z}\not\equiv 0\pmod{p}$ ist $P\in\Syl_p\left(G\right)$.
+	Wegen $\abs{G:P}=\abs{G/Z:P/Z}\not\equiv 0\pmod{p}$ ist $P\in\Syl_p(G)$.
 	
-	\item[(iii)] Sei $P\in\Syl_p\left(G\right)$ und $\mathfrak{P}:=\left\{gPg^{-1}\colon g\in G\right\}$ die Konjugationsklasse von $P$ in $G$ (also $\mathfrak{P}\subseteq\Syl_p\left(G\right)$).\\
+	\item[(iii)] Sei $P\in\Syl_p(G)$ und $\mathfrak{P}:=\left\{gPg^{-1}\colon g\in G\right\}$ die Konjugationsklasse von $P$ in $G$ (also $\mathfrak{P}\subseteq\Syl_p(G)$).\\
 	Nach \autoref{bem:16.1} ist
-	\[\abs{\mathfrak{P}} = \abs{G:N_G\left(P\right)}\Bigl|\abs{G:P},\]
+	\[\abs{\mathfrak{P}} = \abs{G:N_G(P)}\Bigl|\abs{G:P},\]
 	also $\abs{\mathfrak{P}}\not\equiv 0\pmod{p}$.
 	
 	Jede $p$--Untergruppe $Q$ von $G$ operiert auf $\mathfrak{P}$ durch Konjugation:
-	\[\left(gPg^{-1}\right):=xgPg^{-1}x^{-1} = \left(xg\right)P\left(xg\right)^{-1}\ \left(x\in Q,g\in G\right).\]
+	\[(gPg^{-1}):=xgPg^{-1}x^{-1} = (xg)P(xg)^{-1}\ (x\in Q,g\in G).\]
 	Die Länge jeder Bahn ist ein Teiler von $\abs{Q}$, also eine $p$--Potenz.\\
 	Wegen $p\nmid\abs{\mathfrak{P}}$ existiert eine Bahn der Länge $1$, d.\,h. ein $R\in\mathfrak{P}$ mit $xRx^{-1}=R$ für alle $x\in Q$.
-	Dann $Q\leq N_G\left(R\right)$, und $R\taleq N_G\left(R\right)$.\\
-	Dann $QR\leq N_G\left(R\right)\leq G$.
+	Dann $Q\leq N_G(R)$, und $R\unlhd N_G(R)$.\\
+	Dann $QR\leq N_G(R)\leq G$.
 	Dabei: $R\leq QR$, und $\abs{QR:R}=\abs{Q:Q\cap R}\Bigl|\abs{Q}$ ist $p$--Potenz.
 	Andererseits: $\abs{QR:R}\Bigl|\abs{G:R}\not\equiv 0\pmod{p}$.\\
-	Also: $\abs{QR:R}=1$, d.\,h. $Q\leq QR=R\in\mathfrak{P}\subseteq\Syl_p\left(G\right)$.
+	Also: $\abs{QR:R}=1$, d.\,h. $Q\leq QR=R\in\mathfrak{P}\subseteq\Syl_p(G)$.
 	
-	\item[(ii)] In der obigen Situation sei $Q\in\Syl_p\left(G\right)$.
+	\item[(ii)] In der obigen Situation sei $Q\in\Syl_p(G)$.
 	Dann $\abs{Q}=\abs{R}$ und $Q\leq R\in\mathfrak{P}$, d.\,h. $Q=R\in\mathfrak{P}$.\\
 	Also: $Q$ konjugiert zu $P$.
 	
-	\item[(iv)] Aus (ii) folgt $\Syl_p\left(G\right) = \mathfrak{P}$.
-	Daher $\abs{\Syl_p\left(G\right)} = \abs{\mathfrak{P}} = \abs{G:N_G\left(P\right)}\Bigl|\abs{G}$.\\
+	\item[(iv)] Aus (ii) folgt $\Syl_p(G) = \mathfrak{P}$.
+	Daher $\abs{\Syl_p(G)} = \abs{\mathfrak{P}} = \abs{G:N_G(P)}\Bigl|\abs{G}$.\\
 	Damit ist der erste Teil von (iv) bewiesen.
 	
 	Sei jetzt $Q=P$.
-	Wir betrachten wieder die Operation von $Q=P$ auf $\mathfrak{P}=\Syl_p\left(G\right)$.
+	Wir betrachten wieder die Operation von $Q=P$ auf $\mathfrak{P}=\Syl_p(G)$.
 	Jede Bahn hat $p$--Potenzlänge.
 	Ist $\left\{R\right\}$ eine Bahn der Länge $1$, so ist wie oben $P\leq R$, d.\,h. $P=R$.
 	Also gibt es genau eine Bahn der Länge $1$, nämlich $\left\{P\right\}$.\\
-	Wir erhalten: $\abs{\Syl_p\left(G\right)}=\abs{\mathfrak{P}}\equiv 1\pmod{p}$.
+	Wir erhalten: $\abs{\Syl_p(G)}=\abs{\mathfrak{P}}\equiv 1\pmod{p}$.
 \end{enumerate}
 \end{beweis}
 
@@ -107,8 +107,8 @@ Seien $G$ eine endliche Gruppe und $p\in\PZ$.
 % Satz 16.2
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:16.2}
-Sei $G$ eine endliche Gruppe und $N\taleq G$.
-Für $p\in\PZ$ und $P\in\Syl_p\left(G\right)$ ist dann $P\cap N\in\Syl_p\left(N\right)$ und $PN/N\in\Syl_p\left(G/N\right)$.
+Sei $G$ eine endliche Gruppe und $N\unlhd G$.
+Für $p\in\PZ$ und $P\in\Syl_p(G)$ ist dann $P\cap N\in\Syl_p(N)$ und $PN/N\in\Syl_p(G/N)$.
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
@@ -117,33 +117,33 @@ Für $p\in\PZ$ und $P\in\Syl_p\left(G\right)$ ist dann $P\cap N\in\Syl_p\left(N\r
 \begin{beweis}
 Wegen $\abs{P\cap N}\Bigl|\abs{P}$ ist $\abs{P\cap N}$ eine $p$--Potenz.
 Wegen $\abs{N:N\cap P} = \abs{PN:P}\Bigl|\abs{G:P}$ ist $p\nmid\abs{N:N\cap P}$.
-Daher: $P\cap N\in\Syl_p\left(N\right)$.
+Daher: $P\cap N\in\Syl_p(N)$.
 Wegen $\abs{PN/N} = \abs{P/P\cap N}\Bigl|\abs{P}$ ist $\abs{PN/N} = \abs{G:PN}\Bigl|\abs{G:P}$ ist $\abs{G/N:PN/N}\not\equiv 0\pmod{p}$.\\
-Also: $PN/N\in\Syl_p\left(G/N\right)$.
+Also: $PN/N\in\Syl_p(G/N)$.
 \end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
 % Bemerkung 16.2
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:16.2}
-Für $H\leq G$ gilt im Allgemeinen nicht: $H\cap P\in\Syl_p\left(H\right)$.
+Für $H\leq G$ gilt im Allgemeinen nicht: $H\cap P\in\Syl_p(H)$.
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
 % Satz 16.3
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}[Frattini--Argument]\label{satz:16.3}
-Sei $G$ eine endliche Gruppe, $N\taleq G$ und $P\in\Syl_p\left(N\right)$.\\
-Dann ist $G=N\cdot N_G\left(P\right)$.
+Sei $G$ eine endliche Gruppe, $N\unlhd G$ und $P\in\Syl_p(N)$.\\
+Dann ist $G=N\cdot N_G(P)$.
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Für $g\in G$ ist $gPg^{-1}\leq gNg^{-1}=N$, d.\,h. $gPg^{-1}\in\Syl_p\left(N\right)$.\\
+Für $g\in G$ ist $gPg^{-1}\leq gNg^{-1}=N$, d.\,h. $gPg^{-1}\in\Syl_p(N)$.\\
 Nach Sylow (\autoref{satz:16.1}) existiert ein $h\in N$ mit $hgPg^{-1}h^{-1}=P$.
-Daher ist $hg\in N_G\left(P\right)$ und $g=h^{-1}hg\in N\cdot N_G\left(P\right)$.
+Daher ist $hg\in N_G(P)$ und $g=h^{-1}hg\in N\cdot N_G(P)$.
 \end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
@@ -159,42 +159,42 @@ Für $p,q,r\in\PZ$ ist jede Gruppe $G$ de Ordnung $pq$ oder $pqr$ auflösbar.
 \begin{beweis}
 \begin{enumerate}[(i)]
 	\item Sei $\abs{G}=pq$, \OE{} $p>q$ wegen \autoref{satz:15.7}.
-	Nach Sylow (\autoref{satz:16.1}) ist $\abs{\Syl_p\left(G\right)}\Bigl| pq$ und $\abs{\Syl_p\left(G\right)} \equiv 1\pmod{p}$, also $\abs{\Syl_p\left(G\right)} \in \left\{1,q\right\}$.
+	Nach Sylow (\autoref{satz:16.1}) ist $\abs{\Syl_p(G)}\Bigl| pq$ und $\abs{\Syl_p(G)} \equiv 1\pmod{p}$, also $\abs{\Syl_p(G)} \in \left\{1,q\right\}$.
 	Wegen $q<p$ ist $p\nmid q-1$, d.\,h. $q\not\equiv 1\pmod{p}$.\\
-	Daher\randbem{!Wichtiger Trick!} $\abs{\Syl_p\left(G\right)} = 1$, d.\,h. $G$ enthält genau eine $p$--Sylowgruppe $P$.
-	Dann: $\abs{G:N_G\left(P\right)} = 1$, d.\,h. $G=N_G\left(P\right)$, d.\,h. $P\taleq G$.
+	Daher\randbem{!Wichtiger Trick!} $\abs{\Syl_p(G)} = 1$, d.\,h. $G$ enthält genau eine $p$--Sylowgruppe $P$.
+	Dann: $\abs{G:N_G(P)} = 1$, d.\,h. $G=N_G(P)$, d.\,h. $P\unlhd G$.
 	Wegen $\abs{P}=p$ und $\abs{G/P}=q$ sind $P$ und $G/P$ auflösbar, also auch $G$.
 	
 	\item Sei $\abs{G}=p^2q$, \OE{} $q\neq p$ nach \autoref{satz:15.7}.
-	Nach Sylow (\autoref{satz:16.1}) ist $\abs{\Syl_p\left(G\right)}\in\left\{1,q\right\}$ und $\abs{\Syl_p\left(G\right)}\in\left\{1,p,p^2\right\}$.\\
-	Im Fall $\abs{\Syl_p\left(G\right)} = 1$ enthält $G$ genau eine $p$--Sylowgruppe $P$, und wie in (i) ist $P\taleq G$.
+	Nach Sylow (\autoref{satz:16.1}) ist $\abs{\Syl_p(G)}\in\left\{1,q\right\}$ und $\abs{\Syl_p(G)}\in\left\{1,p,p^2\right\}$.\\
+	Im Fall $\abs{\Syl_p(G)} = 1$ enthält $G$ genau eine $p$--Sylowgruppe $P$, und wie in (i) ist $P\unlhd G$.
 	Wegen $\abs{P}=p^2$ und $\abs{G/P}=q$ sind $P$ und $G/P$ auflösbar, also auch $G$.
 	
-	Sei also $\abs{\Syl_p\left(G\right)}=q$.
+	Sei also $\abs{\Syl_p(G)}=q$.
 	Dann: $q\equiv 1\pmod{p}$, d.\,h. $p\mid q-1$.
 	Also $p<q$.
-	Folglich: $q\nmid p-1$, d.\,h. $p\equiv 1\pmod{p}$, d.\,h. $\abs{\Syl_p\left(G\right)}\neq p$.\\
-	Im Fall $\abs{\Syl_p\left(G\right)}=1$ enthält $G$ genau eine $q$--Sylowgruppe $Q$.
-	Wie in (i) ist $Q\taleq G$.
+	Folglich: $q\nmid p-1$, d.\,h. $p\equiv 1\pmod{p}$, d.\,h. $\abs{\Syl_p(G)}\neq p$.\\
+	Im Fall $\abs{\Syl_p(G)}=1$ enthält $G$ genau eine $q$--Sylowgruppe $Q$.
+	Wie in (i) ist $Q\unlhd G$.
 	Wegen $\abs{Q}=q$ und $\abs{G/Q}=p^2$ sind $Q$ und $G/Q$ auflösbar, also auch $G$.\\
-	Also: $\abs{\Syl_p\left(G\right)}=p^2$.
-	Für verschiedene $Q_1,Q_2\in\Syl_p\left(G\right)$ ist $\abs{Q_1\cap Q_2}<\abs{Q_1}=q$, d.\,h. $\abs{Q_1\cap Q_2}=1$.
-	Daher enthalten die $q$--Sylowgruppen von $G$ insgesamt $1+p^2\left(q-1\right)=p^2q-p^2+1$ Elemente.
+	Also: $\abs{\Syl_p(G)}=p^2$.
+	Für verschiedene $Q_1,Q_2\in\Syl_p(G)$ ist $\abs{Q_1\cap Q_2}<\abs{Q_1}=q$, d.\,h. $\abs{Q_1\cap Q_2}=1$.
+	Daher enthalten die $q$--Sylowgruppen von $G$ insgesamt $1+p^2(q-1)=p^2q-p^2+1$ Elemente.
 	Andererseits enthält jede $p$--Sylowgruppe genau $p^2$ Elemente.
 	Daher ist nur noch Platz für eine einzige $p$--Sylowgruppe.
-	Widerspruch zu $\abs{\Syl_p\left(G\right)}=q$.
+	Widerspruch zu $\abs{\Syl_p(G)}=q$.
 	
 	\item Sei $\abs{G}=qpr$ mit $p>q>r$.\\
-	Enhält $G$ genau eine $p$--Sylowgruppe $P$, so ist wie in (i) $P\taleq G$.
+	Enhält $G$ genau eine $p$--Sylowgruppe $P$, so ist wie in (i) $P\unlhd G$.
 	Wegen $\abs{P}=p$ und $\abs{G/P}=qr$ sind $P$ und $G/P$ auflösbar;
 	also auch $G$.
 	
-	Daher können wir $\abs{\Syl_p\left(G\right)}\neq 1$ und analog $\abs{\Syl_q\left(G\right)}\neq 1\neq \abs{\Syl_r\left(G\right)}$ annehmen.
-	Dann: $\abs{\Syl_p\left(G\right)}\equiv 1\pmod{p}$ und $\abs{\Syl_p\left(G\right)}\Bigl| qr$, also $\abs{\Syl_p\left(G\right)}=qr$.
-	Analog ist $\abs{\Syl_q\left(G\right)}\geq p$ und $\abs{\Syl_r\left(G\right)}\geq q$.
+	Daher können wir $\abs{\Syl_p(G)}\neq 1$ und analog $\abs{\Syl_q(G)}\neq 1\neq \abs{\Syl_r(G)}$ annehmen.
+	Dann: $\abs{\Syl_p(G)}\equiv 1\pmod{p}$ und $\abs{\Syl_p(G)}\Bigl| qr$, also $\abs{\Syl_p(G)}=qr$.
+	Analog ist $\abs{\Syl_q(G)}\geq p$ und $\abs{\Syl_r(G)}\geq q$.
 	Wie in (ii) schneiden sich je zwei Sylowgruppen von $G$ trivial.
-	Daher enthält $G$ gneau $qr\left(p-1\right)$ Elemente der Ordnung $p$, mindestens $p\left(q-1\right)$ Elemente der Ordnung $q$ und mindestens $q\left(r-1\right)$ Elemente der Ordnung $r$.\\
-	Also: $pqr=\abs{G}\geq 1+qr\left(p-1\right)+p\left(q-1\right)+q\left(r-1\right) = pqr+\left(p-1\right)\left(q-1\right)>pqr$. Widerspuch!
+	Daher enthält $G$ gneau $qr(p-1)$ Elemente der Ordnung $p$, mindestens $p(q-1)$ Elemente der Ordnung $q$ und mindestens $q(r-1)$ Elemente der Ordnung $r$.\\
+	Also: $pqr=\abs{G}\geq 1+qr(p-1)+p(q-1)+q(r-1) = pqr+(p-1)(q-1)>pqr$. Widerspuch!
 \end{enumerate}
 \end{beweis}
 
@@ -221,15 +221,15 @@ Besitzt $G$ einen Normalteiler $1<N<G$, so sind $N$ und $G/N$ nach \autoref{satz
 Daher ist auch $G$ auflösbar.
 
 Sei also $G$ einfach.
-Dann: $\abs{\Syl_p\left(G\right)}\equiv 1\pmod{p}$ und $\abs{\Syl_p\left(G\right)}\Bigl| q^2$, d.\,h. $\abs{\Syl_p\left(G\right)}=q^2$.
-Ist $P_1\cap P_2=1$ für je 2 verschiedene $P_1,P_2\in\Syl_p\left(G\right)$, so enthalten die $p$--Sylowgruppen insgesamt $q^2\left(p^2-1\right)=\abs{G}-q^2$ von $1$ verschiedene Elemente.
+Dann: $\abs{\Syl_p(G)}\equiv 1\pmod{p}$ und $\abs{\Syl_p(G)}\Bigl| q^2$, d.\,h. $\abs{\Syl_p(G)}=q^2$.
+Ist $P_1\cap P_2=1$ für je 2 verschiedene $P_1,P_2\in\Syl_p(G)$, so enthalten die $p$--Sylowgruppen insgesamt $q^2(p^2-1)=\abs{G}-q^2$ von $1$ verschiedene Elemente.
 Daher ist nur noch Platz für eine einzige $q$--Sylowgruppe $Q$.
-Dann ist aber $Q\taleq G$. Widerspruch!
+Dann ist aber $Q\unlhd G$. Widerspruch!
 
 Es existieren also verschiedene $p$--Sylowgrzuppen $P_1,P_2$ von $G$ mit $D:=P_1\cap P_2 \neq 1$.
 Für $i=1,2$ ist $\abs{P_i}=p^2$, d.\,h. $P_i$ abelsch.
-Insbesondere ist $D\taleq P_i$ und $P_i<N_G\left(D\right)<G$, d.\,h. $\abs{N_G\left(D\right)}=p^2q$.
-Nach Übungsaufgabe 52 ist $N_G\left(D\right)\taleq G$. Widerspruch!
+Insbesondere ist $D\unlhd P_i$ und $P_i<N_G(D)<G$, d.\,h. $\abs{N_G(D)}=p^2q$.
+Nach Übungsaufgabe 52 ist $N_G(D)\unlhd G$. Widerspruch!
 \end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
@@ -246,36 +246,36 @@ Gruppen der Ordnung $1,\ldots,59$ sind auflösbar.
 Sei $G$ Gruppe mit $\abs{G}<60$.
 Nach den früheren Erkenntnissen bleiben nur die Fälle $\abs{G}\in\left\{24,40,48,54,56\right\}$ übrig.
 \begin{enumerate}[(i)]
-	\item Sei $\abs{G}=24$ und $P\in\Syl_2\left(G\right)$, d.\,h. $\abs{P}=8$ und $\abs{G:P}=3$.\\
-	Übungsaufgabe 51 liefert einen Homomorphismus $\rho\colon G\mapsto\Sym\left(G/P\right)\cong\Sym\left(3\right)$ und $K:=\Ker\left(\rho\right)\leq P$, also $\abs{K}\Bigl|\abs{P}=8$.
+	\item Sei $\abs{G}=24$ und $P\in\Syl_2(G)$, d.\,h. $\abs{P}=8$ und $\abs{G:P}=3$.\\
+	Übungsaufgabe 51 liefert einen Homomorphismus $\rho\colon G\mapsto\Sym(G/P)\cong\Sym(3)$ und $K:=\Ker(\rho)\leq P$, also $\abs{K}\Bigl|\abs{P}=8$.
 	Daher ist $K$ auflösbar.
-	Wegen $\abs{G/K}=\abs{\rho\left(G\right)}\Bigl|\abs{\Sym\left(3\right)}=6$ ist $G/K$ auflösbar.\\
+	Wegen $\abs{G/K}=\abs{\rho(G)}\Bigl|\abs{\Sym(3)}=6$ ist $G/K$ auflösbar.\\
 	Also: $G$ auflösbar.
 	
 	\item $\abs{G}=48$: analog.
 	
 	\item $\abs{G}=54=3^2\cdot 2$.
-	Sei $P\in\Syl_3\left(G\right)$.
-	Dann $\abs{P}=27$ und $\abs{G:P}=2$, d.\,h. $P\taleq G$.
+	Sei $P\in\Syl_3(G)$.
+	Dann $\abs{P}=27$ und $\abs{G:P}=2$, d.\,h. $P\unlhd G$.
 	Daher $P$ auflösbar, $G/P$ auflösbar.\\
 	Also: $G$ auflösbar.
 	
 	\item $\abs{G}=40=2^3\cdot 5$.
-	Sei $P\in\Syl_5\left(G\right)$.
-	Wegen $\abs{\Syl_5\left(G\right)}\equiv 1\pmod{5}$ und $\abs{\Syl_5\left(G\right)}\in\left\{1,2,4,8\right\}$ ist $\abs{\Syl_5\left(G\right)}=1$.
-	Daher $P\taleq G$, $P$ auflösbar, $G/P$ auflösbar.\\
+	Sei $P\in\Syl_5(G)$.
+	Wegen $\abs{\Syl_5(G)}\equiv 1\pmod{5}$ und $\abs{\Syl_5(G)}\in\left\{1,2,4,8\right\}$ ist $\abs{\Syl_5(G)}=1$.
+	Daher $P\unlhd G$, $P$ auflösbar, $G/P$ auflösbar.\\
 	Also: $G$ auflösbar.
 	
 	\item $\abs{G}=56=2^3\cdot 7$.
-	Sei $P\in\Syl_7\left(G\right)$.
-	Wegen $\abs{\Syl_7\left(G\right)}\equiv 1\pmod{7}$ und $\abs{\Syl_7\left(G\right)}\in\left\{1,2,4,8\right\}$ ist $\abs{\Syl_7\left(G\right)}\in\left\{1,8\right\}$.
-	Im Fall $\abs{\Syl_7\left(G\right)}=1$ ist $P\taleq G$, $P$ auflösbar, $G/P$ auflösbar.\\
+	Sei $P\in\Syl_7(G)$.
+	Wegen $\abs{\Syl_7(G)}\equiv 1\pmod{7}$ und $\abs{\Syl_7(G)}\in\left\{1,2,4,8\right\}$ ist $\abs{\Syl_7(G)}\in\left\{1,8\right\}$.
+	Im Fall $\abs{\Syl_7(G)}=1$ ist $P\unlhd G$, $P$ auflösbar, $G/P$ auflösbar.\\
 	Also: $G$ auflösbar.
 	
-	Sei also $\abs{\Syl_7\left(G\right)}=8$.
+	Sei also $\abs{\Syl_7(G)}=8$.
 	Da sich je zwei verschiedene $7$--Sylowgruppen von $G$ trivial schneiden, enthalten die $7$--Sylowgruppen von $G$ insgesamt genau $8\cdot 6=48$ von $1$ verschiedene Elemente.
 	Daher ist nur noch Platz für eine einzige $2$--Sylowgruppe $Q$.
-	Dann: $Q\taleq G$, $Q$ auflösbar, $G/Q$ auflösbar.\\
+	Dann: $Q\unlhd G$, $Q$ auflösbar, $G/Q$ auflösbar.\\
 	Also: $G$ auflösbar.
 \end{enumerate}
 \end{beweis}
@@ -284,14 +284,14 @@ Nach den früheren Erkenntnissen bleiben nur die Fälle $\abs{G}\in\left\{24,40,48
 % Satz 16.7
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:16.7}
-$\Alt\left(5\right)$ ist eine einfache Gruppe.
+$\Alt(5)$ ist eine einfache Gruppe.
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Anderenfalls existiert ein Normalteiler $1<N<G:=\Alt\left(5\right)$.
+Anderenfalls existiert ein Normalteiler $1<N<G:=\Alt(5)$.
 Nach \autoref{satz:16.6} sind $N$ und $G/N$ auflösbar, also auch $G$. Widerspruch!
 \end{beweis}
 
@@ -300,8 +300,8 @@ Nach \autoref{satz:16.6} sind $N$ und $G/N$ auflösbar, also auch $G$. Widerspruc
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:16.4}
 \begin{enumerate}[(i)]
-	\item Man kann zeigen, dass $\Alt\left(5\right)$ bis auf Isomorphie die einzige einfache Gruppe der Ordnung $60$ ist.
+	\item Man kann zeigen, dass $\Alt(5)$ bis auf Isomorphie die einzige einfache Gruppe der Ordnung $60$ ist.
 	
-	\item Man kann zeigen, dass $\Alt\left(n\right)$ für alle $n\geq 5$ einfach ist.
+	\item Man kann zeigen, dass $\Alt(n)$ für alle $n\geq 5$ einfach ist.
 \end{enumerate}
 \end{bem}
