--- a/kuelshammer-algebra1/Kapitel4.tex
+++ b/kuelshammer-algebra1/Kapitel4.tex
@@ -2,7 +2,7 @@
 \highl{RSA}\emph{(Rivest, Shamir, Adlemon 1982)} Public Key Cryptography\\\\
 Ausgangspunkt: Personen $A$, $B$, $C$,\ldots wollen miteinander über einen unsicheren Kanal kommunizieren.\\
 Dazu soll jede Nachricht so verschlüsselt werden, dass nur der richtige Empfänger sie entschlüsseln kann. Wie geht das?\\
-Am Anfang wählt jeder Teilnehmer $T$ zwei große Primzahlen $p_T, q_T$ (ca. 100 Stellen) und eine große Zahl $r_T \in \N$, die zu $\varphi\left(p_Tq_T\right) = \left(p_T - 1\right)\left(q_T - 1\right)$ Teilerfremd ist. Mit dem erweitertem euklidischen Algorithmus berechnet er dann ein $s_T \in \N$ mit $r_Ts_T \equiv 1 \pmod{\varphi\left(p_Tq_T\right)}$.\\
+Am Anfang wählt jeder Teilnehmer $T$ zwei große Primzahlen $p_T, q_T$ (ca. 100 Stellen) und eine große Zahl $r_T \in \N$, die zu $\varphi(p_Tq_T) = (p_T - 1)(q_T - 1)$ Teilerfremd ist. Mit dem erweitertem euklidischen Algorithmus berechnet er dann ein $s_T \in \N$ mit $r_Ts_T \equiv 1 \pmod{\varphi(p_Tq_T)}$.\\
 Die Zahlen $p_T$, $q_T$, $s_T$ hält er geheim, die Zahlen $n_T := p_Tq_T$ und $r_T$ kommen in ein allgemein zugängliches Telefonbuch.\\
 \[\text{Schlüssel von } T \colon p_T, q_T, s_T \text{ geheim; } n_T, r_T \text{ offen.}\]
 Will Teilnehmer $A$ an Teilnehmer $B$ eine Nachricht $M$ schicken, so geht er folgendermaßen vor: \\
@@ -14,9 +14,9 @@ $A$ berechnet $M' \in \N$ mit $M' < n_B$ und $M' \equiv M^{r_B} \pmod{n_B}$. Dan
 & & & & \text{Feind} & & & & \\
 \end{array}\]
 Der Empfänger $B$ kann $M'$ entschlüsseln, in dem er $(M')^{s_B}$ berechnet, denn es gilt: \[(M')^{s_B} \equiv M \pmod{n_B}\] Das sieht man folgendermaßen:\\
-Wegen $r_Bs_B \equiv 1 \pmod{\left(p_B - 1\right)\left(q_B - 1\right)}$ existiert ein $t_B \in \N$ mit $r_Bs_B = 1 + t_B\left(p_B - 1\right)\left(q_B - 1\right)$. Also gilt: \[\left(M'^{s_B}\right) = \left(M^{r_B}\right)^{s_B} = M^{1 + t_B\left(p_B - 1\right)\left(q_b - 1\right)} = M\left(M^{r_B - 1}\right)^{t_B\left(q_B - 1\right)} \equiv M \pmod{p_B}\]
+Wegen $r_Bs_B \equiv 1 \pmod{(p_B - 1)(q_B - 1)}$ existiert ein $t_B \in \N$ mit $r_Bs_B = 1 + t_B(p_B - 1)(q_B - 1)$. Also gilt: \[(M'^{s_B}) = (M^{r_B})^{s_B} = M^{1 + t_B(p_B - 1)(q_b - 1)} = M(M^{r_B - 1})^{t_B(q_B - 1)} \equiv M \pmod{p_B}\]
 Im Fall $p_B\nmid M$ folgt aus dem \autoref{satz:3.8} (\textsc{Euler-Fermat}), und im Fall $p_B\mid M$ ist dies trivial.\\
-Analog ist $\left(M'\right)^{s_B} \equiv M \pmod{q_B}$, also auch $\left(M'\right)^{s_B} \equiv M \pmod{p_Bq_B}$.\\
+Analog ist $(M')^{s_B} \equiv M \pmod{q_B}$, also auch $(M')^{s_B} \equiv M \pmod{p_Bq_B}$.\\
 Nehmen wir an, ein "`Feind"' hört die verschlüsselte Nachricht $M'$ ab. Kann er sie entschlüsseln?\\
 \emph{Theoretisch ja}: schließlich muss er "`nur"' $n_B$ in Primfaktoren zerlegen. Dann kennt er $p_B$ und $q_B$, kann also $s_B$ mit dem erweiterten euklidischen Algorithmus berechnen und $M'$ genauso wie $B$ entschlüsseln.\\
 \emph{Praktisch nein}: denn es ist kein Verfahren bekannt, das "`große"' Zahlen "`schnell"' in Primfaktoren zerlegt. Auch sind keine anderen Verfahren zur Entschlüsselung von $M'$ bekannt. Daher ist das RSA Verfahren in der Praxis gut etabliert. (\emph{http://www.rsasecurity.com})
