--- a/kuelshammer-algebra1/Kapitel6.tex
+++ b/kuelshammer-algebra1/Kapitel6.tex
@@ -24,9 +24,9 @@ Gradvergleich liefert $\rho = \sigma$. Dies zeigt, dass die Restklassen $\rho + 
 % Bemerkung 6.2
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:6.2}
-Sei $0 \neq \varphi \in K[X]$. Man zeigt leicht, dass die Kongruenz $modulo \ \varphi$ mit Addition und Multiplikation in $K[X]$ verträglich ist, d.\,h. für $\alpha_1, \alpha_2, \beta_1, \beta_2 \in K[X]$ gilt: \[\alpha_1 \equiv \alpha_2 \pmod{\varphi} \wedge \beta_1 \equiv \beta_2 \pmod{\varphi} \Rightarrow \alpha_1 \mystackrel{+}{\cdot} \beta_1 \equiv \alpha_2 \mystackrel{+}{\cdot} \beta_2 \pmod{\varphi}.\] Dies erlaubt es, auf $K[X] / (\varphi)$ Addition und Multiplikation zu definieren: \[\left[\alpha + (\varphi)\right] \mystackrel{+}{\cdot} \left[\beta + (\varphi)\right] := \alpha \mystackrel{+}{\cdot} \beta + (\varphi) \ \ \ \left(\alpha, \beta \in K[X]\right)\] Man rechnet nach, dass $K[X] / (\varphi)$ mit diesen Verknüpfungen zu einem kommutativen Ring wird, dieser heißt \highl{Restklassenring $modulo \ \varphi$}.\\
+Sei $0 \neq \varphi \in K[X]$. Man zeigt leicht, dass die Kongruenz $modulo \ \varphi$ mit Addition und Multiplikation in $K[X]$ verträglich ist, d.\,h. für $\alpha_1, \alpha_2, \beta_1, \beta_2 \in K[X]$ gilt: \[\alpha_1 \equiv \alpha_2 \pmod{\varphi} \wedge \beta_1 \equiv \beta_2 \pmod{\varphi} \Rightarrow \alpha_1 \mystackrel{+}{\cdot} \beta_1 \equiv \alpha_2 \mystackrel{+}{\cdot} \beta_2 \pmod{\varphi}.\] Dies erlaubt es, auf $K[X] / (\varphi)$ Addition und Multiplikation zu definieren: \[\left[\alpha + (\varphi)\right] \mystackrel{+}{\cdot} \left[\beta + (\varphi)\right] := \alpha \mystackrel{+}{\cdot} \beta + (\varphi) \ \ \ (\alpha, \beta \in K[X])\] Man rechnet nach, dass $K[X] / (\varphi)$ mit diesen Verknüpfungen zu einem kommutativen Ring wird, dieser heißt \highl{Restklassenring $modulo \ \varphi$}.\\
 Nullelement ist $0 + (\varphi)$, Einselement $1 + (\varphi)$.\\
-Außerdem kann man Elemente in $K[X] / (\varphi)$ mit Elementen aus $K$ multiplizieren: \[a\left(\beta + (\varphi)\right) := a\beta + (\varphi) \ \ \ \left(a \in K, \beta \in K[X]\right).\] So wird $K[X] / (\varphi)$ zu einem $K$-Vektorraum. \autoref{bem:6.1} zeigt, dass die Elemente $1 + (\varphi), X + (\varphi), X^2 + (\varphi), \ldots, X^{n - 1} + (\varphi) \ \ (n := \deg\varphi)$ eine $K$-Basis von $K[X] / (\varphi)$ bilden. Insbesondere ist $\dim_K K[X] / (\varphi) = \deg\varphi$.
+Außerdem kann man Elemente in $K[X] / (\varphi)$ mit Elementen aus $K$ multiplizieren: \[a(\beta + (\varphi)) := a\beta + (\varphi) \ \ \ (a \in K, \beta \in K[X]).\] So wird $K[X] / (\varphi)$ zu einem $K$-Vektorraum. \autoref{bem:6.1} zeigt, dass die Elemente $1 + (\varphi), X + (\varphi), X^2 + (\varphi), \ldots, X^{n - 1} + (\varphi) \ \ (n := \deg\varphi)$ eine $K$-Basis von $K[X] / (\varphi)$ bilden. Insbesondere ist $\dim_K K[X] / (\varphi) = \deg\varphi$.
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
@@ -52,7 +52,7 @@ Analog zu $\ZmZ{m}$.
 % Bemerkung 6.3
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:6.3}
-Für $0 \neq \varphi \in K[X]$ gilt nach \autoref{satz:6.1}: \[U\left(K[X] / (\varphi)\right) = \left\{\alpha + (\varphi) \colon \alpha \in K[X], \ggt(\alpha, \varphi) = 1\right\}.\] Der erweiterte euklidische Algorithmus liefert zu $\alpha \in K[X]$ mit $\ggt(\alpha, \varphi) = 1$, Polynome $\beta, \gamma \in K[X]$ mit $\alpha\beta + \varphi\gamma = 1$. Dann: $\alpha\beta \equiv 1 \pmod{\varphi}$, d.\,h. $\left[\alpha + (\varphi)\right]\left[\beta + (\varphi)\right] = 1 + (\varphi).$ Also ist $\left[\alpha + (\varphi)\right]^{-1} = \beta + (\varphi)$.
+Für $0 \neq \varphi \in K[X]$ gilt nach \autoref{satz:6.1}: \[U(K[X] / (\varphi)) = \left\{\alpha + (\varphi) \colon \alpha \in K[X], \ggt(\alpha, \varphi) = 1\right\}.\] Der erweiterte euklidische Algorithmus liefert zu $\alpha \in K[X]$ mit $\ggt(\alpha, \varphi) = 1$, Polynome $\beta, \gamma \in K[X]$ mit $\alpha\beta + \varphi\gamma = 1$. Dann: $\alpha\beta \equiv 1 \pmod{\varphi}$, d.\,h. $\left[\alpha + (\varphi)\right]\left[\beta + (\varphi)\right] = 1 + (\varphi).$ Also ist $\left[\alpha + (\varphi)\right]^{-1} = \beta + (\varphi)$.
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
@@ -71,7 +71,7 @@ Sei $0 \neq \varphi \in K[X]$ normiert, dann gilt: \[K[X] / (\varphi) \text{ Kör
 Wäre $\varphi$ reduzibel, so wäre $\varphi = \alpha\beta$ mit $\alpha, \beta \in K[X]$, $\deg\alpha < \deg\varphi$, $\deg\beta < \deg\varphi$. Dann wäre $\alpha + (\varphi) \neq 0 \neq \beta + (\varphi)$, aber $\left[\alpha + (\varphi)\right]\left[\beta + (\varphi)\right] = \alpha\beta + (\varphi) = \varphi + (\varphi) = 0 + (\varphi) \Rightarrow$ Widersprich!\\
 \item["`$\Leftarrow$"'] Sei $\varphi$ irreduzibel. Dann $\deg\varphi > 0$ und $K[X] / (\varphi) \neq \left\{0\right\}$. Sei $0 \neq \alpha \in K[X]$ mit $\deg\alpha < \deg\varphi$.\\
 Dann: $\varphi\not\mid\alpha$, also $\ggt(\alpha, \varphi) = 1$\\
-Folglich: $\alpha + (\varphi) \in U\left(K[X]/(\varphi)\right)$. Also $K[X] / (\varphi)$ Körper.
+Folglich: $\alpha + (\varphi) \in U(K[X]/(\varphi))$. Also $K[X] / (\varphi)$ Körper.
 \end{itemize}
 \end{beweis}
 
@@ -79,8 +79,8 @@ Folglich: $\alpha + (\varphi) \in U\left(K[X]/(\varphi)\right)$. Also $K[X] / (\
 % Beispiel 6.1
 %%%%%%%%%%%%%%%%%%%
 \begin{bsp}\label{bsp:6.1}
-Sei $p \in \PZ$ und $n \in \N$. Um einen Körper mit $p^n$ Elementen zu konstruieren, genügt es also, ein irreduzibles Polynom vom Grad $n$ in $\F_p[X]$ zu finden. Wir werden später sehen, dass dies für alle $p$, $n$ geht. Im Fall $p = 2$, $n = 3$ ist z.\,B. $\varphi = X^3 + X + 1$ irreduzibel in $\F_2[X]$; denn sonst wäre $\varphi = \left(X - a\right)\left(X^2 + bX + c\right)$ mit $a, b, c \in \F_2$, also $\varphi(a) = 0$. Aber: $\varphi(0) = 1 = \varphi(1)$.\\
-Daher ist $\F_2[X] / \left(X^3 + X + 1\right)$ Körper mit $2^3 = 8$ Elementen. (ÜA: Addition- und Multiplikationstabelle aufstellen!)
+Sei $p \in \PZ$ und $n \in \N$. Um einen Körper mit $p^n$ Elementen zu konstruieren, genügt es also, ein irreduzibles Polynom vom Grad $n$ in $\F_p[X]$ zu finden. Wir werden später sehen, dass dies für alle $p$, $n$ geht. Im Fall $p = 2$, $n = 3$ ist z.\,B. $\varphi = X^3 + X + 1$ irreduzibel in $\F_2[X]$; denn sonst wäre $\varphi = (X - a)(X^2 + bX + c)$ mit $a, b, c \in \F_2$, also $\varphi(a) = 0$. Aber: $\varphi(0) = 1 = \varphi(1)$.\\
+Daher ist $\F_2[X] / (X^3 + X + 1)$ Körper mit $2^3 = 8$ Elementen. (ÜA: Addition- und Multiplikationstabelle aufstellen!)
 \end{bsp}
 
 %%%%%%%%%%%%%%%%%%%
@@ -137,10 +137,10 @@ Für jede doppelte Körpererweiterung $M\mid L\mid K$ gilt: \[\left[M:K\right] = \
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Aus $\left[M:L\right] = \infty$ oder $\left[L:K\right] = \infty$ folgt natürlich $\left[M:K\right] = \infty$. Daher seien $\left[M:L\right]$ und $\left[L:K\right]$ endlich. Wähle $K$-Basis $a_1, \ldots, a_m$ von $L$ und $L$-Basis $b_1, \ldots, b_n$ von $M$. Wir zeigen, dass die Elemente $a_ib_j \ \left(i = 1, \ldots, m; j = 1, \ldots, n\right)$ eine $K$-Basis von $M$ bilden.\\
+Aus $\left[M:L\right] = \infty$ oder $\left[L:K\right] = \infty$ folgt natürlich $\left[M:K\right] = \infty$. Daher seien $\left[M:L\right]$ und $\left[L:K\right]$ endlich. Wähle $K$-Basis $a_1, \ldots, a_m$ von $L$ und $L$-Basis $b_1, \ldots, b_n$ von $M$. Wir zeigen, dass die Elemente $a_ib_j \ (i = 1, \ldots, m; j = 1, \ldots, n)$ eine $K$-Basis von $M$ bilden.\\
 Zum Beweis sei $z \in M$. Dann existieren $y_1, \ldots, y_n \in L$ mit $z = \sum\limits_{j = 1}^{n}y_jb_j$. Für $j = 1, \ldots, n$ existieren Elemente $X_{ij} \in K$ mit $y_j = \sum\limits_{i = 1}^{m}X_{ij}a_i$.\\
 Also: $z = \sum\limits_{i = 1}^{m}\sum\limits_{j = 1}^{n}X_{ij}a_ib_j$\\
-Seien jetzt Elemente $t_{ij} \in K$ gegeben mit $\underbrace{\sum\limits_{i = 1}^{m}\sum\limits_{j = 1}^{n}t_{ij}a_ib_j}_{= \sum\limits_{j = 1}^{n}\underbrace{\left(\sum\limits_{i = 1}^{m}t_{ij}a_i\right)}_{\in L}b_j} = 0$ Da $b_1,\ldots, b_n$ linear unabhängig über $L$ sind, folgt $\sum\limits_{i = 1}^{m}t_{ij}a_i = 0$ für $j = 1, \ldots, n$. Da $a_1, \ldots, a_m$ linear unabhängig über $K$ sind, folgt $t_{ij} = 0$ für alle $i, j$.
+Seien jetzt Elemente $t_{ij} \in K$ gegeben mit $\underbrace{\sum\limits_{i = 1}^{m}\sum\limits_{j = 1}^{n}t_{ij}a_ib_j}_{= \sum\limits_{j = 1}^{n}\underbrace{(\sum\limits_{i = 1}^{m}t_{ij}a_i)}_{\in L}b_j} = 0$ Da $b_1,\ldots, b_n$ linear unabhängig über $L$ sind, folgt $\sum\limits_{i = 1}^{m}t_{ij}a_i = 0$ für $j = 1, \ldots, n$. Da $a_1, \ldots, a_m$ linear unabhängig über $K$ sind, folgt $t_{ij} = 0$ für alle $i, j$.
 \end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
@@ -169,13 +169,13 @@ Seien $K, L$ Körper. Eine Abbildung $f \colon K \mapsto L$ mit $f(a \mystackrel{
 % Beispiel 6.4
 %%%%%%%%%%%%%%%%%%%
 \begin{bsp}\label{bsp:6.4}
-In $\R[X]$ ist $X^2 + 1$ irreduzibel. Daher ist $\R[X]/\left(X^2 + 1\right)$ ein Körper.\randbem{Dies ist eine bessere Methode, um die Komplexen Zahlen einzuführen.} Die Elemente in $\R[X]/\left(X^2 + 1\right)$ haben die Form $a + bX + \left(X^2 + 1\right)$ mit eindeutig bestimmten $a, b \in \R$. Daher gilt: 
+In $\R[X]$ ist $X^2 + 1$ irreduzibel. Daher ist $\R[X]/(X^2 + 1)$ ein Körper.\randbem{Dies ist eine bessere Methode, um die Komplexen Zahlen einzuführen.} Die Elemente in $\R[X]/(X^2 + 1)$ haben die Form $a + bX + (X^2 + 1)$ mit eindeutig bestimmten $a, b \in \R$. Daher gilt: 
 \[\begin{array}{lcl}
-\left[a + bX + \left(X^2 + 1\right)\right]\left[c + dX + \left(X^2 + 1\right)\right] & = & ac + \left(ad + bc\right)X + bd\underbrace{X^2}_{X^2 + 1 - 1} + \left(X^2 + 1\right)\\
-& = & ac + \left(ad + bc\right)X - bd + \left(X^2 + 1\right)\\
-& = & \left(ac - bd\right) + \left(ad + bc)\right)X + \left(X^2 + 1\right)
+\left[a + bX + (X^2 + 1)\right]\left[c + dX + (X^2 + 1)\right] & = & ac + (ad + bc)X + bd\underbrace{X^2}_{X^2 + 1 - 1} + (X^2 + 1)\\
+& = & ac + (ad + bc)X - bd + (X^2 + 1)\\
+& = & (ac - bd) + (ad + bc))X + (X^2 + 1)
 \end{array}\]
-Daher ist die folgende Abbildung ein Isomorphismus von Körpern: \[f \colon \C \mapsto \R[X]/\left(X^2 + 1\right), a + b\operatorname{i} \mapsto a + bX + \left(X^2 + 1\right)\]
+Daher ist die folgende Abbildung ein Isomorphismus von Körpern: \[f \colon \C \mapsto \R[X]/(X^2 + 1), a + b\operatorname{i} \mapsto a + bX + (X^2 + 1)\]
 \end{bsp}
 
 %%%%%%%%%%%%%%%%%%%
@@ -183,7 +183,7 @@ Daher ist die folgende Abbildung ein Isomorphismus von Körpern: \[f \colon \C \m
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:6.7}
 Die \highl{Charakteristik} $p = char(K)$ von $K$ ist definiert durch \[p := \min{\left\{n \in \N \colon \underbrace{1 + 1 + 1 + \ldots + 1}_{Summanden} = 0\right\}},\] falls das Minimum existiert. Anderenfalls sagt man, dass $K$ die Charakteristik $0$ hat, und schreibt: $char(K) = 0$ z.\,B. ist $char(\Q) = char(\R) = char(\C) = 0$, und $char(\F_p) = p$ für $p \in \PZ$.\\
-Für jeden Körper mit $char(K) \neq 0$ ist $p := char(K) \in \PZ$, denn aus $p = ab$ mit $a, b \in \N$ folgt: \[0 = \underbrace{1 + \ldots + 1}_{p Summanden} = \underbrace{\left(1 + \ldots + 1\right)}_{a}\underbrace{\left(1 + \ldots + 1\right)}_{b},\] d.\,h. $\underbrace{1 + \ldots + 1}_{a} = 0$ oder $\underbrace{1 + \ldots + 1}_{b} = 0$
+Für jeden Körper mit $char(K) \neq 0$ ist $p := char(K) \in \PZ$, denn aus $p = ab$ mit $a, b \in \N$ folgt: \[0 = \underbrace{1 + \ldots + 1}_{p Summanden} = \underbrace{(1 + \ldots + 1)}_{a}\underbrace{(1 + \ldots + 1)}_{b},\] d.\,h. $\underbrace{1 + \ldots + 1}_{a} = 0$ oder $\underbrace{1 + \ldots + 1}_{b} = 0$
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
@@ -203,11 +203,11 @@ Für den Primkörper $P$ von $K$ gilt: \randbem{Körper mit Charakteristik $0$ ist 
 \begin{beweis}
 \begin{enumerate}[(i)]
 	\item Für $n \in \N$ sei $n1_K := \underbrace{1 + \ldots + 1}_{n \text{ Summanden}}$.\\
-	Wegen $char(K) = 0$ ist $n1_K \neq 0$ für alle $n \in \N$. Wir setzen $0 \cdot 1_K := 0$ und $(-n)1_K := -(n1_K).$ Dann gilt für $m, n \in \Z \colon \left(m \mystackrel{\pm}{\cdot} n\right)1_K = \left(m1_K\right) \mystackrel{\pm}{\cdot} \left(n1_K\right)$.\\
-	Wir definieren eine Abbildung $f \colon \Q \mapsto K$ durch $f(\frac{m}{n}) := \frac{m1_K}{n1_K} \ \left(m, n \in \Z, n \neq 0\right)$. Dann ist $f$ wohldefiniert, aus $\frac{m}{n} = \frac{m'}{n'}$ folgt nämlich $mn' = m'n$, d.\,h. $\underbrace{\left(mn'\right)1_K}_{\left(m1_K\right)\left(n'1_K\right)} = \underbrace{\left(m'n\right)1_K}_{\left(m'1_K\right)\left(n1_K\right)}$ und damit $\frac{m1_K}{n1_K} = \frac{m'1_K}{n'1_K}$\\
+	Wegen $char(K) = 0$ ist $n1_K \neq 0$ für alle $n \in \N$. Wir setzen $0 \cdot 1_K := 0$ und $(-n)1_K := -(n1_K).$ Dann gilt für $m, n \in \Z \colon (m \mystackrel{\pm}{\cdot} n)1_K = (m1_K) \mystackrel{\pm}{\cdot} (n1_K)$.\\
+	Wir definieren eine Abbildung $f \colon \Q \mapsto K$ durch $f(\frac{m}{n}) := \frac{m1_K}{n1_K} \ (m, n \in \Z, n \neq 0)$. Dann ist $f$ wohldefiniert, aus $\frac{m}{n} = \frac{m'}{n'}$ folgt nämlich $mn' = m'n$, d.\,h. $\underbrace{(mn')1_K}_{(m1_K)(n'1_K)} = \underbrace{(m'n)1_K}_{(m'1_K)(n1_K)}$ und damit $\frac{m1_K}{n1_K} = \frac{m'1_K}{n'1_K}$\\
 	Man rechnet leicht nach, dass $f$ ein Homomorphismus ist. Daher ist $Bld(f)$ ein zu $\Q$ isomorpher Teilkörper von $K$. Nach Definition von $P$ ist $P \subseteq Bld(f)$. Anderenseits ist $1_K \in P$, $1_K + 1_K \in P, \ldots$. Daher: $n1_K \in P$ für $n \in \N$. Also $\frac{m1_K}{n1_K} \in P$ für alle $m, n \in \Z$ mit $n \neq 0$. Daher: $Bld(f) \subseteq P$, d.\,h. $P = Bld(f) \cong \Q$
 	\item Sei $char(K) = p > 0$, also $p \in \PZ$. Wir definieren $n1_K$ für $n \in \Z$ wie in (i). Nach Voraussetzung ist $p1_K = 0$. Wir definieren eine Abbildung $f \colon \ZmZ{p} \mapsto K$ durch $f(a + p\Z) := a1_K \ (a \in \Z)$. Das ist wohldefiniert, ist nämlich $a' \in \Z$ mit $a + p\Z = a' + p\Z$, so existiert ein $z \in \Z$ mit $a' = a +pz$.\\
-	Folglich: $a'1_K = a1_K + \underbrace{\left(p1_K\right)}_{= 0}\left(z1_K\right) = a1_K$. Man rechnet leicht nach, dass $f$ ein Homomorphismus ist. Wie in (i) folgt: \[\ZmZ{p} \cong Bld(f) = P.\]
+	Folglich: $a'1_K = a1_K + \underbrace{(p1_K)}_{= 0}(z1_K) = a1_K$. Man rechnet leicht nach, dass $f$ ein Homomorphismus ist. Wie in (i) folgt: \[\ZmZ{p} \cong Bld(f) = P.\]
 \end{enumerate}.
 \end{beweis}
 
@@ -230,7 +230,7 @@ Folglich: $\left|K\right| = \left|P\right|^n = p^n$.
 % Bemerkung
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:6.8}
-Es gibt also keine Körper mit $6$ oder $10$ Elementen. Anzahl kann nur $p^n \ \left(p \in \PZ\right)$ sein.
+Es gibt also keine Körper mit $6$ oder $10$ Elementen. Anzahl kann nur $p^n \ (p \in \PZ)$ sein.
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
@@ -247,7 +247,7 @@ Genauer gilt: $a^k = a^l \Leftrightarrow k \equiv l \pmod{n}$. Insbesondere gilt
 % Satz 6.6
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:6.6}
-Sei $G$ eine Untergruppe von $\left(K \backslash \left\{0\right\}, \cdot\right)$ mit $\left|G\right| = n < \infty$. Dann existiert ein $a \in G$ mit $a^n = 1$ und $G = \left\{a^m \colon m \in \Z\right\} = \left\{1, a, \ldots, a^{n-1}\right\}$
+Sei $G$ eine Untergruppe von $(K \backslash \left\{0\right\}, \cdot)$ mit $\left|G\right| = n < \infty$. Dann existiert ein $a \in G$ mit $a^n = 1$ und $G = \left\{a^m \colon m \in \Z\right\} = \left\{1, a, \ldots, a^{n-1}\right\}$
 \end{satz}
 
 %%%%%%%%%%%%%%%%%%%
@@ -261,10 +261,10 @@ Sei $G$ eine Untergruppe von $\left(K \backslash \left\{0\right\}, \cdot\right)$
 % Beispiel
 %%%%%%%%%%%%%%%%%%%
 \begin{bsp}\label{bsp:6.5}
-Sei $\left|K\right| = p^n \ \left(p \in \PZ, n \in \N\right)$. Dann existiert ein $a \in K \backslash \left\{0\right\}$ mit $K \backslash \left\{0\right\} = \left\{1, a, a^2, \ldots, a^{p^n-2}\right\}$ und $a^{p^n - 1} = 1$. Man nennt $a$ eine \highl{Primitivwurzel} \randbem{2 eignet sich oft als Primitivwurzel.}in $K$.\\
+Sei $\left|K\right| = p^n \ (p \in \PZ, n \in \N)$. Dann existiert ein $a \in K \backslash \left\{0\right\}$ mit $K \backslash \left\{0\right\} = \left\{1, a, a^2, \ldots, a^{p^n-2}\right\}$ und $a^{p^n - 1} = 1$. Man nennt $a$ eine \highl{Primitivwurzel} \randbem{2 eignet sich oft als Primitivwurzel.}in $K$.\\
 In $\underbrace{\F_{17}}_{\text{Multiplikative Gruppe hat 16 Elemente!}}$ gilt: 
-\[2^0 = 1,\ 2^1 = 2,\ 2^2 = 4,\ 2^3 = 8,\ 2^4 = 16 = -1,\ 2^8 = \left(-1\right)^2 = 1\]
-\[3^0 = 1,\ 3^1 = 3,\ 3^2 = 9,\ 3^4 = -4,\ 3^8 = \left(-4\right)^2 = 16 = -1,\ 3^{16} = \left(-1\right)^2 = 1\]
+\[2^0 = 1,\ 2^1 = 2,\ 2^2 = 4,\ 2^3 = 8,\ 2^4 = 16 = -1,\ 2^8 = (-1)^2 = 1\]
+\[3^0 = 1,\ 3^1 = 3,\ 3^2 = 9,\ 3^4 = -4,\ 3^8 = (-4)^2 = 16 = -1,\ 3^{16} = (-1)^2 = 1\]
 \footnotesize ($\Rightarrow$ Alle Potenzen von $3^0$ - $3^{15}$ sind verschieden im Gegensatz zu $2^0$ - $2^{15}$.)\\ \normalsize
 Daher ist $2$ keine Primitivwurzel, aber $3$.
 \end{bsp}
@@ -273,7 +273,7 @@ Daher ist $2$ keine Primitivwurzel, aber $3$.
 % Definition
 %%%%%%%%%%%%%%%%%%%
 \begin{defi}
-$f \colon K \mapsto K,\ \underbrace{x \mapsto x^p}_{\left(x + y\right)^2 = x^2 + y^2}$ heißt \highl{Frobenius!Endomorphismus}{Frobenius-Endomorphismus} oder nur \highl{Frobenius}.
+$f \colon K \mapsto K,\ \underbrace{x \mapsto x^p}_{(x + y)^2 = x^2 + y^2}$ heißt \highl{Frobenius!Endomorphismus}{Frobenius-Endomorphismus} oder nur \highl{Frobenius}.
 \end{defi}
 
 %%%%%%%%%%%%%%%%%%%
@@ -287,7 +287,7 @@ Sei $char(K) = p > 0$. Dann ist die Abbildung $f \colon K \mapsto K,\ x \mapsto 
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Offenbar ist $f(1) = 1$, und für $x, y \in K$ ist $f(xy) = \left(xy\right)^p = x^py^p = f(x)f(y)$, und $f(x + y) = (x + y)^p = x^p + \binom{p}{1}x^{p-1}y + \ldots + \binom{p}{p-1}xy^{p-1} + y^p$. Für $i = 1, \ldots, p-1$ ist $\binom{p}{i} \in \Z$ und $\binom{p}{i} = \frac{p!}{i!\left(p - i\right)!}$, d.\,h. $p\mid \binom{p}{i}$.\\
+Offenbar ist $f(1) = 1$, und für $x, y \in K$ ist $f(xy) = (xy)^p = x^py^p = f(x)f(y)$, und $f(x + y) = (x + y)^p = x^p + \binom{p}{1}x^{p-1}y + \ldots + \binom{p}{p-1}xy^{p-1} + y^p$. Für $i = 1, \ldots, p-1$ ist $\binom{p}{i} \in \Z$ und $\binom{p}{i} = \frac{p!}{i!(p - i)!}$, d.\,h. $p\mid \binom{p}{i}$.\\
 Daher: $\binom{p}{i}1_K = \underbrace{1 + \ldots + 1}_{p_i \text{ Summanden}} = 0$ und $\binom{p}{i}x^{p-1}y^i = 0$.\\
 Folglich: $(x + y)^p = x^p + y^p = f(x) + f(y)$.
 \end{beweis}
@@ -303,7 +303,7 @@ Ist $K$ endlich, so ist $f$ bijektiv, denn nach \autoref{bem:6.6}(iv) ist $f$ in
 % Satz 6.8
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:6.8}
-Sei $E$ ein endlicher Körper und $\left|E\right| = p^e \ \left(p \in \PZ, e \in \N\right)$.
+Sei $E$ ein endlicher Körper und $\left|E\right| = p^e \ (p \in \PZ, e \in \N)$.
 \begin{enumerate}[(i)]
 	\item Ist $F \subseteq E$ Teilkörper, so ist $\left|F\right| = p^f$ für ein $f \in \N$ mit $f\mid e$.
 	\item Umgekehrt existiert zu jedem positiven Teiler $f$ von $e$ genau ein Teilkörper $F \subseteq E$ mit $\left|F\right| = p^f$, nämlich $F := \left\{x \in E \colon x^{p^f} = x\right\}$.
@@ -325,7 +325,7 @@ Ein Körper $K$ mit $2^{12}$ Elementen hat also Teilkörper mit $2,\ 2^2,\ 2^3,\ 2
 	\item Sei $F \subseteq E$ Teilkörper. Dann: $p = char(E) = char(F)$, also $\left|F\right| = p^f$ für ein $f \in \N$. Sei $n := \left[E:F\right]$.\\
 	Dann: $E \cong F^n$ als $F$-Vektorraum.\\
 	Insbesondere $p^e = \left|E\right| = \left|F\right|^n = p^{f^n}$, d.\,h. $f\mid e$.
-	\item Sei $f \in \N$ mit $f\mid e$. Nach ÜA 5 ist dann: $p^f-1\mid p^e-1$. Nach \autoref{bsp:6.5} existiert ein $a \in E$ mit $a^{p^e-1} = 1$ und $E = \left\{0, 1, a, a^2, \ldots, a^{p^e-2}\right\}$. Die Elemente \[b_i := a^{i\left(p^e-1\right)/\left(p^f-1\right)} \ \left(i = 0, 1, \ldots, p^f-2\right)\] sind paarweise verschieden mit $b_i^{p^f-1} = 1$, d.\,h. $b_i^{p^f} = b_i$. Daher sind $0, b_0, b_1, \ldots, b_{p^f-2}$ genau die Nullstellen von $x^{p^f} - x$ in $E$. Folglich enthält $F := \left\{b \in E \colon b^{p^f} = b\right\}$ genau $p^f$ Elemente. Diese bilden einen Teilkörper von $E$: denn $0, 1 \in F$, und für $b, c \in F$ gilt: $\left(b \mystackrel{\pm}{\cdot} c\right)^{p^f} \overbrace{=}^{\autoref{satz:6.7}} b^{p^f} \pm c^{p^f} = b \mystackrel{\pm}{\cdot} c$, d.\,h. $b \mystackrel{\pm}{\cdot} c \in F$. Analog $\frac{b}{c} \in F$ für $c \neq 0$.\\
+	\item Sei $f \in \N$ mit $f\mid e$. Nach ÜA 5 ist dann: $p^f-1\mid p^e-1$. Nach \autoref{bsp:6.5} existiert ein $a \in E$ mit $a^{p^e-1} = 1$ und $E = \left\{0, 1, a, a^2, \ldots, a^{p^e-2}\right\}$. Die Elemente \[b_i := a^{i(p^e-1)/(p^f-1)} \ (i = 0, 1, \ldots, p^f-2)\] sind paarweise verschieden mit $b_i^{p^f-1} = 1$, d.\,h. $b_i^{p^f} = b_i$. Daher sind $0, b_0, b_1, \ldots, b_{p^f-2}$ genau die Nullstellen von $x^{p^f} - x$ in $E$. Folglich enthält $F := \left\{b \in E \colon b^{p^f} = b\right\}$ genau $p^f$ Elemente. Diese bilden einen Teilkörper von $E$: denn $0, 1 \in F$, und für $b, c \in F$ gilt: $(b \mystackrel{\pm}{\cdot} c)^{p^f} \overbrace{=}^{\autoref{satz:6.7}} b^{p^f} \pm c^{p^f} = b \mystackrel{\pm}{\cdot} c$, d.\,h. $b \mystackrel{\pm}{\cdot} c \in F$. Analog $\frac{b}{c} \in F$ für $c \neq 0$.\\
 	\textsc{Eindeutigkeit:} Ist $F' \subseteq E$ ein weiterer Teilkörper mit $\left|F'\right| = p^f$, so ist $b^{p^f} = b$ für alle $b \in F'$. Nach \autoref{bsp:6.5}. Daher: $F' \subseteq F$, d.\,h. $F' = F$.
 \end{enumerate}.
 \end{beweis}
