--- a/kuelshammer-algebra1/Kapitel7.tex
+++ b/kuelshammer-algebra1/Kapitel7.tex
@@ -24,7 +24,7 @@ Sind alle $b \in L$ algebraisch über $K$, so heißt $L\mid K$ eine \highl{Körpere
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:7.1}
 Sei $b \in L$ algebraisch über $K$.\\
-Wähle Polynom $\mu(b) = 0$, \OE{} $\mu$ normiert. Dann ist $\mu$ eindeutig bestimmt. Ist nämlich $\nu \in K[X] \backslash \left\{0\right\}$ normiert mit $\deg{\nu} = \deg{\mu}$ und $\nu(b) = 0$, so ist $\mu - \nu \in K[X]$ mit $\deg{\mu - \nu} < \deg{\mu}$ und $\left(\mu - \nu\right)(b) = 0$. Also: $\mu - \nu = 0$ nach Wahl von $\mu$. Also: $\mu = \nu$.\\
+Wähle Polynom $\mu(b) = 0$, \OE{} $\mu$ normiert. Dann ist $\mu$ eindeutig bestimmt. Ist nämlich $\nu \in K[X] \backslash \left\{0\right\}$ normiert mit $\deg{\nu} = \deg{\mu}$ und $\nu(b) = 0$, so ist $\mu - \nu \in K[X]$ mit $\deg{\mu - \nu} < \deg{\mu}$ und $(\mu - \nu)(b) = 0$. Also: $\mu - \nu = 0$ nach Wahl von $\mu$. Also: $\mu = \nu$.\\
 Bezeichnung: $\mu$ \highl{Minimalpolynom} von $b$ über $K$.
 \end{bem}
 
@@ -32,7 +32,7 @@ Bezeichnung: $\mu$ \highl{Minimalpolynom} von $b$ über $K$.
 % Beispiel 7.2
 %%%%%%%%%%%%%%%%%%%
 \begin{bsp}\label{bsp:7.2}
-$L = \R, K = \Q, b = \sqrt{2} \Rightarrow \mu = X^2 - 2, \ \left(beachte: \sqrt{2} \notin \Q\right)$
+$L = \R, K = \Q, b = \sqrt{2} \Rightarrow \mu = X^2 - 2, \ (beachte: \sqrt{2} \notin \Q)$
 \end{bsp}
 
 %%%%%%%%%%%%%%%%%%%
@@ -49,11 +49,11 @@ Für $\varphi \in K[X]$ gilt dann: \[\varphi(b) = 0 \Leftrightarrow \mu\mid\varph
 \begin{beweis}
 \begin{itemize}
 \item["`$\Rightarrow$"'] Sei $\varphi \in K[X]$ mit $\varphi(b) = 0$\\
-Schreibe $\delta := \ggt\left(\varphi, \mu\right) = \alpha\varphi + \beta\mu$ mit $\alpha, \beta \in K[X]$.\\
+Schreibe $\delta := \ggt(\varphi, \mu) = \alpha\varphi + \beta\mu$ mit $\alpha, \beta \in K[X]$.\\
 Dann: $\delta(b) = \alpha(b)\underbrace{\varphi(b)}_{= 0} + \beta(b)\underbrace{\mu(b)}_{= 0} = 0$.\\
 Nach Wahl von $\mu$ ist $\deg{(\delta)} = \deg{(\mu)}$.\\
 Da $\delta$, $\mu$ normiert mit $\delta\mid\mu$ sind, folgt $\mu = \delta\mid\varphi$.\\
-\item["`$\Leftarrow$"'] Sei $\mu\mid\varphi$, d.\,h. $\varphi = \mu\nu \ \left(\nu \in K[X]\right)$.\\
+\item["`$\Leftarrow$"'] Sei $\mu\mid\varphi$, d.\,h. $\varphi = \mu\nu \ (\nu \in K[X])$.\\
 Dann: $\varphi(b) = \mu(b) \cdot \nu(b) = 0$.\\
 \end{itemize}
 Seien $\alpha, \beta \in K[X]$ mit $\mu = \alpha\beta$.\\
@@ -66,12 +66,12 @@ Dies zeigt: $\mu$ irreduzibel.
 % Bemerkung 7.2
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:7.2}
-Sei $L\mid K$ eine Körpererweiterung, und seien $b_1, \ldots, b_n \in L$. Mit $K\left(b_1, \ldots, b_n\right)$ bezeichnen wir den Durchschnitt aller Teilkörper von $L$, die $K$ und $b_1, \ldots, b_n$ enthalten.\\
-Nach \autoref{bsp:6.2}(b) ist $K\left(b_1, \ldots, b_n\right)$ ein Teilkörper von $L$. Man sagt, dass es durch Adjunktion\footnote{"`hinzunehmen"'} von $b_1, \ldots, b_n$ zu $K$ entsteht.\\
+Sei $L\mid K$ eine Körpererweiterung, und seien $b_1, \ldots, b_n \in L$. Mit $K(b_1, \ldots, b_n)$ bezeichnen wir den Durchschnitt aller Teilkörper von $L$, die $K$ und $b_1, \ldots, b_n$ enthalten.\\
+Nach \autoref{bsp:6.2}(b) ist $K(b_1, \ldots, b_n)$ ein Teilkörper von $L$. Man sagt, dass es durch Adjunktion\footnote{"`hinzunehmen"'} von $b_1, \ldots, b_n$ zu $K$ entsteht.\\
 Man zeigt leicht:
 \begin{enumerate}[(i)]
-	\item $L\left(b_1, \ldots, b_n\right) = \left(K\left(b_1, \ldots, b_n\right)\right)\left(b_n\right)$
-	\item $K\left(b\right) = \left\{\frac{\varphi(b)}{\psi(b)} \colon \varphi, \psi \in K[X], \psi(b) \neq 0\right\}$ für $b \in L$.
+	\item $L(b_1, \ldots, b_n) = (K(b_1, \ldots, b_n))(b_n)$
+	\item $K(b) = \left\{\frac{\varphi(b)}{\psi(b)} \colon \varphi, \psi \in K[X], \psi(b) \neq 0\right\}$ für $b \in L$.
 \end{enumerate}
 \end{bem}
 
@@ -92,13 +92,13 @@ Dann: $\psi = \varphi + \alpha\mu$ mit $\alpha \in K[X]$.\\
 Folglich: $\psi(b) = \varphi(b) + \alpha(b)\mu(b) = \varphi(b)$. Also $f$ wohldefiniert.\\
 Wegen 
 \[\begin{array}{lcl}
-f\left(\left[\beta + \left(\mu\right)\right] \mystackrel{+}{\cdot} \left[\gamma + \left(\mu\right)\right]\right) & = & f\left(\beta \mystackrel{+}{\cdot} \gamma + \left(\mu\right)\right)\\
-& = & \left(\beta \mystackrel{+}{\cdot} \gamma\right)\left(b\right)\\
+f(\left[\beta + (\mu)\right] \mystackrel{+}{\cdot} \left[\gamma + (\mu)\right]) & = & f(\beta \mystackrel{+}{\cdot} \gamma + (\mu))\\
+& = & (\beta \mystackrel{+}{\cdot} \gamma)(b)\\
 & = & \beta(b) \mystackrel{+}{\cdot} \gamma(b)\\
-& = & f\left(\left[\beta + \left(\mu\right)\right]\right) \mystackrel{+}{\cdot} f\left(\left[\gamma + \left(\mu\right)\right]\right)
+& = & f(\left[\beta + (\mu)\right]) \mystackrel{+}{\cdot} f(\left[\gamma + (\mu)\right])
 \end{array}\] und $f(1) = 1$ ist $f$ ein Körperhomomorphismus.
 
-Wegen $K[X]/\left(\mu\right) = \left\{a_0 + a_1X + \ldots + a_{n-1}X^{n-1} + (\mu) \colon a_0, \ldots, a_{n-1} \in K\right\}$ ist $Bld(f) = \left\{a_0 + a_1b + \ldots + a_{n-1}b^{n-1} \colon a_0, \ldots, a_{n-1} \in K\right\} \subseteq L$ Teilkörper. Wegen $K \subseteq Bld(f)$ und $b \in Bld(f)$ ist $K(b) \subseteq Bld(f)$.\\
+Wegen $K[X]/(\mu) = \left\{a_0 + a_1X + \ldots + a_{n-1}X^{n-1} + (\mu) \colon a_0, \ldots, a_{n-1} \in K\right\}$ ist $Bld(f) = \left\{a_0 + a_1b + \ldots + a_{n-1}b^{n-1} \colon a_0, \ldots, a_{n-1} \in K\right\} \subseteq L$ Teilkörper. Wegen $K \subseteq Bld(f)$ und $b \in Bld(f)$ ist $K(b) \subseteq Bld(f)$.\\
 Andererseits ist $Bld(f)$ in jedem Teilkörper von $L$ enthalten, der $K$ und $b$ enthält. Also ist $Bld(f) \subseteq K(b) \Rightarrow Bld(f) = K(b)$.\\
 Also ist $f$ Körperhomomorphismus.\\
 Offenbar ist $f$ auch $K$-linear. Daher: \[\left[K(b):K\right] = \dim_k K(b) = \dim_k K[X] / (\mu) = \deg{\mu}\].
@@ -120,7 +120,7 @@ Ist also $E$ ein endlicher Körper und $F \subseteq E$ Teilkörper, dann ist $E\mi
 \begin{satz}\label{satz:7.3}
 Sei $L\mid K$ Körpererweiterung.\\
 \begin{enumerate}[(i)]
-	\item Sind $b_1, \ldots, b_n \in L$ algebraisch über $K$, so ist $K\left(b_1, \ldots, b_n\right)\mid K$ algebraisch.
+	\item Sind $b_1, \ldots, b_n \in L$ algebraisch über $K$, so ist $K(b_1, \ldots, b_n)\mid K$ algebraisch.
 	\item Für jede weitere Körpererweiterung $M\mid L$ gilt: \[M\mid K \text{ algebraisch } \Leftrightarrow M\mid L, L\mid K \text{ algebraisch  \footnotesize(Transitivität)\normalsize}\] 
 	\item $F := \left\{b \in L \colon b \text{ algebraisch über K}\right\}$ ist ein Teilkörper von $L$ mit $K \subseteq F \subseteq L$
 \end{enumerate}
@@ -138,17 +138,17 @@ $F$ heißt \highl{Algebraischer Abschluss}{algebraischer Abschluss} von $K$ in $L
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
 \begin{enumerate}[(i)]
-	\item Seien $b_1, \ldots, b_n$ algebraisch über $K$. Nach \autoref{satz:7.2} ist $\left[K(b_1):K\right] < \infty$. Offenbar ist $b_2$ auch algebraisch über $K(b_1)$\footnote{ein etwas größerer Körper als $K$}. Daher ist analog: \[\left[\underbrace{\left(K\left(b_1\right)\right)\left(b_2\right)}_{= K\left(b_1, b_2\right)}:K\left(b_1\right)\right] < \infty\] Gradsatz: $\left[K\left(b_1, b_2\right):K\right] < \infty$. Induktiv folgt: \[\left[K\left(b_1, \ldots, b_n\right):K\right] < \infty.\] Nach \autoref{bsp:7.3} ist $K\left(b_1, \ldots, b_n\right)\mid K$ algebraisch.
+	\item Seien $b_1, \ldots, b_n$ algebraisch über $K$. Nach \autoref{satz:7.2} ist $\left[K(b_1):K\right] < \infty$. Offenbar ist $b_2$ auch algebraisch über $K(b_1)$\footnote{ein etwas größerer Körper als $K$}. Daher ist analog: \[\left[\underbrace{(K(b_1))(b_2)}_{= K(b_1, b_2)}:K(b_1)\right] < \infty\] Gradsatz: $\left[K(b_1, b_2):K\right] < \infty$. Induktiv folgt: \[\left[K(b_1, \ldots, b_n):K\right] < \infty.\] Nach \autoref{bsp:7.3} ist $K(b_1, \ldots, b_n)\mid K$ algebraisch.
 	\item \begin{itemize}
 	\item["`$\Rightarrow$"'] Sei $M\mid K$ algebraisch. Dann ist jedes $b \in M$ algebraisch über $K$,also auch über $L$. Daher ist $M:L$ algebraisch. Ferner ist jedes $b \in L$ algebraisch über $K$ und Daher ist auch $L\mid K$ algebraisch.\\
 	\item["`$\Leftarrow$"'] Seien $M\mid L$, $L\mid K$ algebraisch, und sei $c \in M$.\\
 	Dann exisitiert $b_0, \ldots, b_{n-1} \in L$ mit $c^n + b_{n-1}c^{n-1} + \ldots + b_1c + b_0 = 0$.\\
-	Daher ist $c$ algebraisch über $K\left(b_0, \ldots, b_{n-1}\right)$. Nach \autoref{satz:7.2} ist \[\left[\underbrace{\left(K\left(b_0, \ldots, b_{n-1}\right)\right)\left(c\right)}_{= K\left(b_0, \ldots, b_{n-1}, c\right)}:K\left(b_0, \ldots, b_{n-1}\right)\right] < \infty\]
-	Nach dem Beweis von (i) ist $\left[K\left(b_0, \ldots, b_{n-1}\right):K\right] < \infty$.\\
-	Gradsatz: $\left[K\left(b_0, \ldots, b_{n-1}, c\right):K\right] < \infty$.\\
-	\autoref{bsp:7.3}: $K\left(b_0, \ldots, b_{n-1}, c\right)\mid K$ algebraisch; insbesondere $c$ algebraisch über $K$.
+	Daher ist $c$ algebraisch über $K(b_0, \ldots, b_{n-1})$. Nach \autoref{satz:7.2} ist \[\left[\underbrace{(K(b_0, \ldots, b_{n-1}))(c)}_{= K(b_0, \ldots, b_{n-1}, c)}:K(b_0, \ldots, b_{n-1})\right] < \infty\]
+	Nach dem Beweis von (i) ist $\left[K(b_0, \ldots, b_{n-1}):K\right] < \infty$.\\
+	Gradsatz: $\left[K(b_0, \ldots, b_{n-1}, c):K\right] < \infty$.\\
+	\autoref{bsp:7.3}: $K(b_0, \ldots, b_{n-1}, c)\mid K$ algebraisch; insbesondere $c$ algebraisch über $K$.
 	\item Nach \autoref{bsp:7.1} ist $K \subseteq F$; insbesondere sind $0, 1 \in F$. Seien $b, c \in F$.\\
-	Nach (i) ist $K\left(b, c\right)\mid K$ algebraisch; insbesondere $b \mystackrel{\pm}{\cdot} c \in K\left(b, c\right)$ algebraisch über $K$, also $b \mystackrel{\pm}{\cdot} c \in F$.\\
+	Nach (i) ist $K(b, c)\mid K$ algebraisch; insbesondere $b \mystackrel{\pm}{\cdot} c \in K(b, c)$ algebraisch über $K$, also $b \mystackrel{\pm}{\cdot} c \in F$.\\
 	Analog $\frac{b}{c} \in F$, falls $c \neq 0$.\\
 	Daher: $F$ Teilkörper.
 	\end{itemize}
@@ -160,16 +160,16 @@ $F$ heißt \highl{Algebraischer Abschluss}{algebraischer Abschluss} von $K$ in $L
 %%%%%%%%%%%%%%%%%%%
 \begin{bsp}\label{bsp:7.4}
 Bekanntlich ist $\sqrt{2} \in \R$ algebraisch über $\Q$ mit Minimalpolynom $X^2 - 2$.\\
-Daher: $\left[\Q\left(\sqrt{2}\right):\Q\right] = \deg{\left(X^2 - 2\right)} = 2$.\\
-Sogar: $\Q\left(\sqrt{2}\right) = \left(a + b\sqrt{2} \colon a, b \in \Q\right)$. Für $a + b\sqrt{2} \neq 0$ ist  dabei \[\frac{1}{a + b\sqrt{2}} = \frac{a - b\sqrt{2}}{\left(a + b\sqrt{2}\right)\left(a - b\sqrt{2}\right)} = \frac{a}{a^2 - 2b^2} - \frac{b}{a^2 - 2b^2}\sqrt{2} \in \Q\left(\sqrt{2}\right).\]
-Es ist $\sqrt{3} \notin \Q\left(\sqrt{2}\right)$, denn sonst könnte man $\sqrt{3} = a + b\sqrt{2}$ mit $a, b \in \Q$ schreiben. Dann wäre aber $3 = a^2 + 2\sqrt{2}ab + 2b^2$.\\
+Daher: $\left[\Q(\sqrt{2}):\Q\right] = \deg{(X^2 - 2)} = 2$.\\
+Sogar: $\Q(\sqrt{2}) = (a + b\sqrt{2} \colon a, b \in \Q)$. Für $a + b\sqrt{2} \neq 0$ ist  dabei \[\frac{1}{a + b\sqrt{2}} = \frac{a - b\sqrt{2}}{(a + b\sqrt{2})(a - b\sqrt{2})} = \frac{a}{a^2 - 2b^2} - \frac{b}{a^2 - 2b^2}\sqrt{2} \in \Q(\sqrt{2}).\]
+Es ist $\sqrt{3} \notin \Q(\sqrt{2})$, denn sonst könnte man $\sqrt{3} = a + b\sqrt{2}$ mit $a, b \in \Q$ schreiben. Dann wäre aber $3 = a^2 + 2\sqrt{2}ab + 2b^2$.\\
 Koeffizientenvergleich \randbem{$1, \sqrt{2}$ sind linear unabhängig; $3 = 3 \cdot 1 + 0\sqrt{2}$} liefert: $ab = 0$, d.\,h. $a = 0$ oder $b = 0$.\\
 Im Fall $a = 0$ wäre $3 = 2b^2$, was nicht geht. Im Fall $b = 0$ wäre $3 = a^2$, was auch nicht geht.\\
-Daher ist $\sqrt{3}$ algebraisch über $\Q\left(\sqrt{2}\right)$ mit Minimalpolynom $X^2 - 3$.\\
-Folglich: $\left[\left(\Q\left(\sqrt{2}\right)\right)\left(\sqrt{3}\right):\Q\left(\sqrt{2}\right)\right] = \deg{\left(X^2 - 3\right)} = 2$.\\
-Gradsatz: $\left[\Q\left(\sqrt{2}, \sqrt{3}\right):\Q\right] = 4$. 
+Daher ist $\sqrt{3}$ algebraisch über $\Q(\sqrt{2})$ mit Minimalpolynom $X^2 - 3$.\\
+Folglich: $\left[(\Q(\sqrt{2}))(\sqrt{3}):\Q(\sqrt{2})\right] = \deg{(X^2 - 3)} = 2$.\\
+Gradsatz: $\left[\Q(\sqrt{2}, \sqrt{3}):\Q\right] = 4$. 
 
-Insbesondere $\sqrt{2} + \sqrt{3} \in \Q\left(\sqrt{2}, \sqrt{3}\right)$ ist algebraisch über $\Q$. Was ist das Minimalpolynom von $\sqrt{2} + \sqrt{3}$ über $\Q$? $Q\left(\sqrt{2}\right)$ hat Basis $1, \sqrt{2}$ über $\Q, \Q\left(\sqrt{2}, \sqrt{3}\right):\Q\left(\sqrt{2}\right)$ hat Basis $1, \sqrt{3}$ über $\Q$. Gradsatz: $1, \sqrt{2}, \sqrt{3}, \sqrt{2} \cdot \sqrt{3} = \sqrt{6} \ \Q$-Basis von $\Q\left(\sqrt{2}, \sqrt{3}\right)$.
+Insbesondere $\sqrt{2} + \sqrt{3} \in \Q(\sqrt{2}, \sqrt{3})$ ist algebraisch über $\Q$. Was ist das Minimalpolynom von $\sqrt{2} + \sqrt{3}$ über $\Q$? $Q(\sqrt{2})$ hat Basis $1, \sqrt{2}$ über $\Q, \Q(\sqrt{2}, \sqrt{3}):\Q(\sqrt{2})$ hat Basis $1, \sqrt{3}$ über $\Q$. Gradsatz: $1, \sqrt{2}, \sqrt{3}, \sqrt{2} \cdot \sqrt{3} = \sqrt{6} \ \Q$-Basis von $\Q(\sqrt{2}, \sqrt{3})$.
 \[\left.\begin{array}{lcl}
 b^0 & = & 1\\
 b^1 & = & \sqrt{2} + \sqrt{3}\\
@@ -183,18 +183,18 @@ b^4 & = & 49 + 20\sqrt{6}
 Wir suchen $a_0, a_1, a_2, a_3 \in \Q$ mit
 \[\begin{array}{lcl}
 0 & = & a_0 + a_1b + a_2b^2 + a_3b^3 + b^4\\
-& = & a_0 \cdot 1 + a_1 \left(\sqrt{2} + \sqrt{3}\right) + a_2 \left(5 + 2\sqrt{6}\right) + a_3 \left(11 + 9\sqrt{3}\right) + \left(49 + 20\sqrt{6}\right)\\
-& = & \underbrace{\left(a_0 + 5 \cdot a_2 + 49\right)}_{= 0} + \underbrace{\left(a_1 + 11a_3\right)}_{= 0}\sqrt{2} + \underbrace{\left(a_1 + 9a_3\right)}_{= 0}\sqrt{3} + \underbrace{\left(2a_2 + 20\right)}_{= 0}\sqrt{6}
+& = & a_0 \cdot 1 + a_1 (\sqrt{2} + \sqrt{3}) + a_2 (5 + 2\sqrt{6}) + a_3 (11 + 9\sqrt{3}) + (49 + 20\sqrt{6})\\
+& = & \underbrace{(a_0 + 5 \cdot a_2 + 49)}_{= 0} + \underbrace{(a_1 + 11a_3)}_{= 0}\sqrt{2} + \underbrace{(a_1 + 9a_3)}_{= 0}\sqrt{3} + \underbrace{(2a_2 + 20)}_{= 0}\sqrt{6}
 \end{array}\]
 Also: $a_2 = -10, a_0 = 1, a_1 = a_3 = 0$. Daher: $\mu = 1 - 10X^2 + X^4$.\\
-Folglich: $\left[\Q\left(\sqrt{2} + \sqrt{3}\right):\Q\right] = 4$ und $\Q\left(\sqrt{2}, \sqrt{3}\right) = \Q\left(\sqrt{2} + \sqrt{3}\right)$
+Folglich: $\left[\Q(\sqrt{2} + \sqrt{3}):\Q\right] = 4$ und $\Q(\sqrt{2}, \sqrt{3}) = \Q(\sqrt{2} + \sqrt{3})$
 \end{bsp}
 
 %%%%%%%%%%%%%%%%%%%
 % Satz 7.4
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:7.4}
-Sei $E$ endlicher Körper mit $\left|E\right| = p^n \ \left(p \in \PZ, n \in \N\right)$ und sei $F$ Teilkörper von $E$ (z.\,B.: der Primkörper von $E$).\\
+Sei $E$ endlicher Körper mit $\left|E\right| = p^n \ (p \in \PZ, n \in \N)$ und sei $F$ Teilkörper von $E$ (z.\,B.: der Primkörper von $E$).\\
 Dann ist $E \cong F[X] / (\varphi)$ für ein irreduzibles Polynom $\varphi \in F[X]$ mit $\varphi\mid X^{p^n} - X$.
 \end{satz}
 
@@ -212,8 +212,8 @@ Wegen $b^{p^n} = b$ gilt: $\mu\mid X^{p^n} - X$. \randbem{Minimalpolynom teilt j
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:7.3}
 Sei $K$ ein Körper.\\
-Nach Aufgabe 15 gilt im Polynomring $K[X]$: \[\ggt\left(X^m-1, X^n-1\right) = X^{\ggt(m, n)}-1.\] Mit Aufgabe 5 folgt daraus leicht: 
-\[\ggt\left(X^{q^a}-X, X^{q^b}-X\right) = X^{\ggt(a, b)}-X \ \ \left(a, b, q \in \N\right)\]
+Nach Aufgabe 15 gilt im Polynomring $K[X]$: \[\ggt(X^m-1, X^n-1) = X^{\ggt(m, n)}-1.\] Mit Aufgabe 5 folgt daraus leicht: 
+\[\ggt(X^{q^a}-X, X^{q^b}-X) = X^{\ggt(a, b)}-X \ \ (a, b, q \in \N)\]
 \end{bem}
 
 %%%%%%%%%%%%%%%%%%%
@@ -231,14 +231,14 @@ Dann:\randbem{Formel muss man wissen! Sehr wichtig für Theorie!} \[X^{q^n} - X =
 Sei $\varphi \in K[X]$ irreduzibel mit $d := \deg{\varphi\mid n}$.\\
 Dann ist $K[X] / \varphi$ ein Körper mit $q^d$ Elementen. Für $b := X + (\varphi)$ gilt dann: $b^{q^d} = b$, d.\,h. $0 = b^{q^d} - b = X^{q^d} - X + (\varphi)$.\\
 Folglich: $\varphi\mid X^{q^d} - X\stackrel{\autoref{bem:7.3}}{\mid}X^{q^n} - X$.\\
-Sei umgekehrt $\varphi \in K[X]$ irreduzibel mit $\varphi\mid X^{q^n} - X$ und $d := \deg{\varphi}$. Wie im ersten Teil des Beweises ist $\varphi\mid X^{q^d} - X$. Daher: $\varphi\mid \ggt\left(X^{q^d} - X, X^n - X\right) = X^{q^{\ggt(d, n)}} - X$, d.\,h. $X^{q^{\ggt(d, n)}} - X + (\varphi) = 0$ in $K[X] / (\varphi)$.\\
+Sei umgekehrt $\varphi \in K[X]$ irreduzibel mit $\varphi\mid X^{q^n} - X$ und $d := \deg{\varphi}$. Wie im ersten Teil des Beweises ist $\varphi\mid X^{q^d} - X$. Daher: $\varphi\mid \ggt(X^{q^d} - X, X^n - X) = X^{q^{\ggt(d, n)}} - X$, d.\,h. $X^{q^{\ggt(d, n)}} - X + (\varphi) = 0$ in $K[X] / (\varphi)$.\\
 Jedes Element $K[X] / (\varphi)$ kann man in der folgenden Form schreiben: \[b = a_0 + a_1X + \ldots + a_{d-1}X^{d-1} + (\varphi) \ (a_i \in K).\] Für $a \in K$ ist $a = a^q = a^{q^2} = \ldots$. Daher ist \randbem{alle $b$ sind Nullstellen von $X^{q^{\ggt(d, n)}} - X$} $b^{q^{\ggt(d, n)}} = b$ für alle $b \in K[X]/(\varphi)$. Also $q^d = \left|K[X]/(\varphi)\right| \leq q^{\ggt(d, n)} \leq q^d$, d.\,h. $d = \ggt(d, n)\mid n$.\\
 Folglich genügt zu zeigen, dass kein Primfaktor von $X^{q^n} - X$ mehrfach auftritt. Sei also $\varphi \in K[X]$ irreduzibel mit $\varphi^2\mid X^{q^n} - X$. Schreibe: $X^{q^n} - X = \varphi^2\varphi$ mit $\psi \in K[X]$. Formale Ableitung liefert den Widerspruch: 
 \[\begin{array}{lcl}
-\underbrace{-1}_{\text{Grad }0} & = & \left(X^{q^n} - X\right)'\\
-& = & \left(\varphi^2\psi\right)' + \left(\varphi^2\right)'\psi\\
+\underbrace{-1}_{\text{Grad }0} & = & (X^{q^n} - X)'\\
+& = & (\varphi^2\psi)' + (\varphi^2)'\psi\\
 & = & \varphi^2\psi' + 2\varphi\varphi'\psi\\
-& = & \underbrace{\varphi\left(\psi' + 2\varphi'\psi\right)}_{\text{Grad mindestens }\deg{\varphi}\text{ Widerspruch zu Grad }0}
+& = & \underbrace{\varphi(\psi' + 2\varphi'\psi)}_{\text{Grad mindestens }\deg{\varphi}\text{ Widerspruch zu Grad }0}
 \end{array}\].
 \end{beweis}
 
@@ -247,8 +247,8 @@ Folglich genügt zu zeigen, dass kein Primfaktor von $X^{q^n} - X$ mehrfach auftr
 %%%%%%%%%%%%%%%%%%%
 \begin{bsp}\label{bsp:7.5}
 $\begin{array}[t]{ll}
-q = 2 \colon & X^4 - X = X\left(X - 1\right)\left(X^2 + X + 1\right)\\
-& X^8 - X = X\left(X - 1\right)\left(X^3 + X + 1\right)\left(X^3 + X^2 + 1\right)
+q = 2 \colon & X^4 - X = X(X - 1)(X^2 + X + 1)\\
+& X^8 - X = X(X - 1)(X^3 + X + 1)(X^3 + X^2 + 1)
 \end{array}$\randbem{Siehe \autoref{satz:7.5}}
 \end{bsp}
 
@@ -262,11 +262,11 @@ Bei festem $q$ und "`großem"' $n$ existieren also etwa $\frac{1}{n}q^n$ irreduzi
 Genauer: \randbem{$I_n$ kann nicht $= 0$ sein, Daher gibt es immer irreduzible Polynome zu einem vorgegebenen Grad}
 $\begin{array}[t]{lcl}
 I_1 & = & q,\\ 
-I_2 & = & \frac{1}{2}\left(q^2 - q\right),\\
-I_3 & = & \frac{1}{3}\left(q^3 - q\right),\\
-I_4 & = & \frac{1}{4}\left(q^4 - q^2\right),\\
-I_5 & = & \frac{1}{5}\left(q^5 - q\right),\\
-I_4 & = & \frac{1}{6}\left(q^6 - q^3 - q^2 + q\right), \ldots
+I_2 & = & \frac{1}{2}(q^2 - q),\\
+I_3 & = & \frac{1}{3}(q^3 - q),\\
+I_4 & = & \frac{1}{4}(q^4 - q^2),\\
+I_5 & = & \frac{1}{5}(q^5 - q),\\
+I_4 & = & \frac{1}{6}(q^6 - q^3 - q^2 + q), \ldots
 \end{array}$
 \end{bem}
 
@@ -282,7 +282,7 @@ Zu jedem endlichen Körper $K$ und jedem $n \in \N$ existiert mindestens ein irre
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
 Anderenfalls währe mit dem obigen Bezeichnungen $I_n = 0$, d.\,h. $0 = \sum\limits_{d\mid n}\mu(d)q^{\frac{n}{d}}$. Diese Gleichung hat die Form 
-\[0 = \pm q^{k_1} \pm q^{k_2} \pm \ldots \pm q^{k_r} \text{ mit } k_1 < k_2 < \ldots < k_r\] Wir erhalten so den Widerspruch: $0 \equiv \pm q^{k_1} \pmod{\left(q^{k_2}\right)}$.
+\[0 = \pm q^{k_1} \pm q^{k_2} \pm \ldots \pm q^{k_r} \text{ mit } k_1 < k_2 < \ldots < k_r\] Wir erhalten so den Widerspruch: $0 \equiv \pm q^{k_1} \pmod{(q^{k_2})}$.
 \end{beweis}
 
 %%%%%%%%%%%%%%%%%%%
@@ -311,7 +311,7 @@ Für $p \in \PZ$ und $n \in \N$ bezeichnet man den im wesentlich eindeutig bestim
 % Beispiel 7.6
 %%%%%%%%%%%%%%%%%%%
 \begin{bsp}\label{bsp:7.6}
-$\left[\Q\left(\sqrt{2}\right):\Q\right] = 2 = \left[\Q\left(\sqrt{3}\right):\Q\right]$, aber $\underbrace{\Q\left(\sqrt{2}\right)}_{\text{hier Element mit }a^2 = 2} \not\cong \underbrace{\Q\left(\sqrt{3}\right)}_{\text{hier kein Element mit }a^2 = 2}$, denn in $\Q\left(\sqrt{2}\right)$ exisitiert kein $b$ mit $b^2 = 3$.
+$\left[\Q(\sqrt{2}):\Q\right] = 2 = \left[\Q(\sqrt{3}):\Q\right]$, aber $\underbrace{\Q(\sqrt{2})}_{\text{hier Element mit }a^2 = 2} \not\cong \underbrace{\Q(\sqrt{3})}_{\text{hier kein Element mit }a^2 = 2}$, denn in $\Q(\sqrt{2})$ exisitiert kein $b$ mit $b^2 = 3$.
 \end{bsp}
 
 %%%%%%%%%%%%%%%%%%%
@@ -334,8 +334,8 @@ Schreibe $\mu = X^n + a_{n-1}X^{n-1} + \ldots + a_1X + a_0 \ (a_i \in \F_p)$.\\
 Für jeden Körperautomorphismus $g$ von $\F_{p^n}$ gilt: $g(a) = a$ für $a \in \F_p$, und 
 \[\begin{array}{cl}
 & g(b)^n + a_{n-1}g(b)^{n-1} + \ldots + a_1g(b) + a_0\\
-= & g\left(b^n + a_{n-1}b^{n-1} + \ldots + a_1b + a_0\right)\\
-= & g\left(\underbrace{\mu(b)}_{= 0}\right) = 0
+= & g(b^n + a_{n-1}b^{n-1} + \ldots + a_1b + a_0)\\
+= & g(\underbrace{\mu(b)}_{= 0}) = 0
 \end{array}\]
 Daher ist $g(b)$ eine Nullstelle von $\mu$. Davon gibt es höchstens $n$ Stück. Da $g$ durch $g(b)$ eindeutig bestimmt ist, kann es höchstens $n$ Automorphismen geben.
 \end{beweis}
@@ -344,5 +344,5 @@ Daher ist $g(b)$ eine Nullstelle von $\mu$. Davon gibt es höchstens $n$ Stück. D
 % Bemerkung 7.6
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:7.6}
-Also gilt: $\mu = \left(X - b\right)\left(X - b^p\right) \ldots \left(X - b^{p^{n-1}}\right)$
+Also gilt: $\mu = (X - b)(X - b^p) \ldots (X - b^{p^{n-1}})$
 \end{bem}
