--- a/kuelshammer-algebra1/Kapitel14.tex
+++ b/kuelshammer-algebra1/Kapitel14.tex
@@ -28,8 +28,8 @@ Dann gilt:
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
 \begin{enumerate}[(i)]
-	\item Sei $G$ auflösbar und $G=G_0\unrhd G_1\unrhd\ldots\unrhd G_n = \left\{1\right\}$ wie oben.
-	Dann ist $H = H \cap G_0 \geq H\cap G_1\geq\ldots\geq H\cap G_n = \left\{1\right\}$ eine Folge von Untergruppen von $H$.
+	\item Sei $G$ auflösbar und $G=G_0\unrhd G_1\unrhd\dotsc\unrhd G_n = \left\{1\right\}$ wie oben.
+	Dann ist $H = H \cap G_0 \geq H\cap G_1\geq\dotsc\geq H\cap G_n = \left\{1\right\}$ eine Folge von Untergruppen von $H$.
 	Für $i=1,\ldots,n$ gilt nach dem 1. Isomorphiesatz (\autoref{satz:10.6}): 
 	\[\begin{array}{lcl}
 	H\cap G_i & = & (H\cap G_{i-1})\cap G_i\\
@@ -40,9 +40,9 @@ Dann gilt:
 	\end{array}\]
 	Mit $G_{i-1}/G_i$ ist auch $H\cap G_{i-1}/H\cap G_i$ abelsch.
 	
-	\item Sei $G$ auflösbar und $G=G_0\unrhd G_1\unrhd\ldots\unrhd G_n = \left\{1\right\}$ wie oben.\\
+	\item Sei $G$ auflösbar und $G=G_0\unrhd G_1\unrhd\dotsc\unrhd G_n = \left\{1\right\}$ wie oben.\\
 	Nach dem 1. Isomorphiesatz (\autoref{satz:10.6}) ist
-	\[G/N = G_0N/N \geq G_1N/N\geq\ldots\geq G_nN/N = \left\{1\right\}\]
+	\[G/N = G_0N/N \geq G_1N/N\geq\dotsc\geq G_nN/N = \left\{1\right\}\]
 	eine Folge von Untergruppen von $G/N_0$.
 	Für $i=1,\ldots,n$ hat jedes Element in $G_iN/N$ die Form $xN$ mit $x\in G_i$ und jedes Element in $G_{i-1}N/N$ die From $yN$ mit $y\in G_{i-1}$.
 	Dabei: $(yN)(xN)\underbrace{(yN)^{-1}}_{y^{-1}N} = \underbrace{yxy^{-1}}_{\in G_i}N\in G_iN/N$.\\
@@ -57,11 +57,11 @@ Dann gilt:
 	Mit $G_{i-1}/G_i$ ist auch $(G_{i-1}/N)/(G_iN/N)$ abelsch.
 	
 	\item Seien $N$ und $G/N$ auflösbar.
-	Dann existieren Folgen von Untergruppen $N = N_0 \unrhd N_1 \unrhd \ldots \unrhd N_k = \left\{1\right\}$ und $G/N = G_0/N \unrhd G_1/N \unrhd \ldots \unrhd G_l/N = \left\{1\right\}$ mit folgenden Eigenschaften:\\
+	Dann existieren Folgen von Untergruppen $N = N_0 \unrhd N_1 \unrhd \dotsc \unrhd N_k = \left\{1\right\}$ und $G/N = G_0/N \unrhd G_1/N \unrhd \dotsc \unrhd G_l/N = \left\{1\right\}$ mit folgenden Eigenschaften:\\
 	$N_i\unrhd N_{i-1}$ und $N_{i-1}/N_i$ abelsch $(i=1,\ldots,k)$, $G_j/N \unlhd G_{j-1}/N$ und $\underbrace{(G_{j-1}/N)/(G_j/N)}_{\cong G_{j-1}/G_j}$ abelsch $(j=1,\ldots,l)$.\\
 	Also: $G_j \unlhd G_{j-1}$ und $G_{j-1}/G_j$ abelsch.\\
 	Wir erhalten eine Folge von Untergruppen 
-	\[G = G_0 \unrhd G_1 \unrhd \ldots \unrhd G_l = N = N_0 \unrhd N_1 \unrhd \ldots \unrhd N_k = \left\{1\right\}\]
+	\[G = G_0 \unrhd G_1 \unrhd \dotsc \unrhd G_l = N = N_0 \unrhd N_1 \unrhd \dotsc \unrhd N_k = \left\{1\right\}\]
 	mit den gewünschten Eigenschaften.\\
 	Also: $G$ auflösbar.
 \end{enumerate}
@@ -149,7 +149,7 @@ Daher bilden die Elemente der Form
 \[(a_1,b_1,c_1)(a_2,b_2,c_2)\ldots(a_k,b_k,c_k) \qquad (k\in\N_0, a_i, b_i, c_i \in \left\{1,\ldots,n\right\}\text{ paarweise verschieden})\] eine Untergruppe $G$ von $\Sym(n)$.\\
 Wir nehmen an: $\Sym(n)$ auflösbar.
 Dann ist $G$ auch auflösbar.
-Es existiert also eine Folge von Untergruppen $g = G_0 \unrhd G_1 \unrhd G_2\unrhd \ldots \unrhd G_n = \left\{1\right\}$ wie in \autoref{defi:14.1}.
+Es existiert also eine Folge von Untergruppen $g = G_0 \unrhd G_1 \unrhd G_2\unrhd \dotsc \unrhd G_n = \left\{1\right\}$ wie in \autoref{defi:14.1}.
 \OE{} $G \neq G_1$.\\
 Für paarweise verschiedene $a,b,c,d,e \in \left\{1,\ldots,n\right\}$ gilt:
 \[(a,b,c)=(a,b,d)(c,e,a)(a,b,d)^{-1}(c,e,a)^{-1}.\]
@@ -184,7 +184,7 @@ Daher: $G \leq G_1$, d.\,h. $G=G_1$ $\Rightarrow$ Widerspruch!
 % Satz 14.3
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}\label{satz:14.3}
-Eine endliche Gruppe $G$ ist genau dann auflösbar, wenn eine Folge von Untergruppen $G = G_0 \unrhd G_1 \unrhd \ldots \unrhd G_0 = \left\{1\right\}$ mit der folgenden Eigenschaft:\\
+Eine endliche Gruppe $G$ ist genau dann auflösbar, wenn eine Folge von Untergruppen $G = G_0 \unrhd G_1 \unrhd \dotsc \unrhd G_0 = \left\{1\right\}$ mit der folgenden Eigenschaft:\\
 Für $i=1,\ldots,n$ ist $G_i\unlhd G_{i-1}$ und $G_{i-1}/G_i$ zyklisch (von Primzahlordnung).
 \end{satz}
 
@@ -196,12 +196,12 @@ Für $i=1,\ldots,n$ ist $G_i\unlhd G_{i-1}$ und $G_{i-1}/G_i$ zyklisch (von Primz
 	\item["`$\Leftarrow$"':] Klar, da jede zyklische Gruppe abelsch ist und da Gruppen von Primzahlordnung zyklisch sind.
 	
 	\item["`$\Rightarrow$"':] Sei $G$ auflösbar.
-	Dann existiert eine Folge von Untergruppen $G = G_0 \unrhd G_1 \unrhd \ldots \unrhd G_0 = \left\{1\right\}$ mit der Eigenschaft $G_i \unlhd G_{i-1}$ und $G_{i-1}/G_i$ abelsch für $i=1,\ldots,n$.\\
+	Dann existiert eine Folge von Untergruppen $G = G_0 \unrhd G_1 \unrhd \dotsc \unrhd G_0 = \left\{1\right\}$ mit der Eigenschaft $G_i \unlhd G_{i-1}$ und $G_{i-1}/G_i$ abelsch für $i=1,\ldots,n$.\\
 	Nach \autoref{satz:13.7} existiert eine Folge von Untergruppen
-	\[G_{i-1}/G_i = G_{i-1,0}/G_i \geq G_{i-1,1}/G_i\geq \ldots \geq G_{i-1,k_{i-1}}/G_i = \left\{1\right\}\]
+	\[G_{i-1}/G_i = G_{i-1,0}/G_i \geq G_{i-1,1}/G_i\geq \dotsc \geq G_{i-1,k_{i-1}}/G_i = \left\{1\right\}\]
 	mit $\underbrace{\abs{G_{i-1,j-1}/G_i:G_{i-1,j}/G_i}}_{=\abs{G_{i-1,j-1}:G_{i-1,j}}} \in \PZ$ für alle $j$.
 	Daher ist
-	\[(\ast) \qquad G_{i-1} = G_{i-1,0} \geq G_{i-1,1} \geq \ldots \geq G_{i-1,k_{i-1}} = G_i\]
+	\[(\ast) \qquad G_{i-1} = G_{i-1,0} \geq G_{i-1,1} \geq \dotsc \geq G_{i-1,k_{i-1}} = G_i\]
 	eine Folge von Untergruppen von $G_{i-1}$.\\
 	Da $G_{i-1}/G_i$ abelsch ist, folgt $G_{i-1}/G_i\unlhd G_{i-1,j-1}/G_i$ und $G_{i-1,j} \unlhd G_{i-1,j-1}$ für alle $j$.
 	Wir wissen auch, dass Gruppen von Primzahlordnung zyklisch sind.
@@ -214,7 +214,7 @@ Für $i=1,\ldots,n$ ist $G_i\unlhd G_{i-1}$ und $G_{i-1}/G_i$ zyklisch (von Primz
 %%%%%%%%%%%%%%%%%%%
 \begin{defi}\label{defi:14.2}
 \begin{enumerate}[(i)]
-	\item Eine Körpererweiterung heißt \highl{Körpererweiterng!Radikalerweiterung}{Radikalerweiterung}, wenn eine Folge von Teilkörpern $K = K_0 \subseteq K_1 \subseteq \ldots \subseteq K_r = L$ und $b_i \in K_i$, $n_i\in\N$ existiert mit\randbem{$b_i$ ist $n_i$--te Wurzel}
+	\item Eine Körpererweiterung heißt \highl{Körpererweiterng!Radikalerweiterung}{Radikalerweiterung}, wenn eine Folge von Teilkörpern $K = K_0 \subseteq K_1 \subseteq \dotsc \subseteq K_r = L$ und $b_i \in K_i$, $n_i\in\N$ existiert mit\randbem{$b_i$ ist $n_i$--te Wurzel}
 	\[K_i = K_{i-1}(b_i) \text{ und } b_i^{n_i} \in K_{i-1} \text{ für } i=1,\ldots,r\]
 	
 	\item Ein Polynom $\varphi\in K\left[X\right]$ heißt über $K$ \highl{Polynom!auflösbar, Radikale}{durch Radikale auflösbar}, wenn eine Radikalerweiterung $L\mid K$ derart existiert, dass $\varphi$ in $L\left[X\right]$ in Lineafaktoren zerfällt.
@@ -240,7 +240,7 @@ Dann existiert eine Radikal- und Galoiserweiterung $M\mid K$ mit $L\subseteq M$.
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Sei $K = K_0 \subseteq K_1 \subseteq \ldots \subseteq K_r = L$ mit $K_i = K_{i-1}(b_i)$ und $b_i^{n_i} \in K_{i-1}$ wie oben.\\
+Sei $K = K_0 \subseteq K_1 \subseteq \dotsc \subseteq K_r = L$ mit $K_i = K_{i-1}(b_i)$ und $b_i^{n_i} \in K_{i-1}$ wie oben.\\
 Dann: $L = K(b_1,\ldots,b_r)$ und $\left[L:K\right] < \infty$. Für $i=1,\ldots,r$ sie $\mu_i$ das Minimalpolynom von $b_i$ über $K$.
 Außerdem sei $N$ Zerfällungskörper von $\mu := \mu_1\ldots\mu_r$ über $L$.
 Dann ist $N$ auch Zerfällungskörper von $\mu$ über $K$.
@@ -248,10 +248,10 @@ Wegen $\chr K = 0$ ist also $N\mid K$ eine Galoiserweiterung.\\
 Schreibe: $G:= \Gal(N\mid K) = \left\{\sigma_1 = id_N,\sigma_2,\ldots,\sigma_s\right\}$.\\
 Setze: $K_{ij} := K(\sigma_1(b_1),\ldots,\sigma_s(b_1),\ldots,\sigma_1(b_{i-1}),\ldots,\sigma_s(b_{i-1}),\sigma_1(b_i),\ldots,\sigma_j(b_i))$ $(i=1,\ldots,r,j=1,\ldots,s)$.\\
 Dann: $\begin{array}[t]{lclclclcl}
-	K & \subseteq & K_{11} & \subseteq & K_{12} & \subseteq & \ldots & \subseteq & K_{1s}\\
-	& \subseteq & K_{21} & \subseteq & K_{22} & \subseteq & \ldots & \subseteq & K_{2s}\\
+	K & \subseteq & K_{11} & \subseteq & K_{12} & \subseteq & \dotsc & \subseteq & K_{1s}\\
+	& \subseteq & K_{21} & \subseteq & K_{22} & \subseteq & \dotsc & \subseteq & K_{2s}\\
 	& \vdots &&&&&&\vdots&\\
-	& \subseteq & K_{r1} & \subseteq & K_{r2} & \subseteq & \ldots & \subseteq & K_{rs} = M
+	& \subseteq & K_{r1} & \subseteq & K_{r2} & \subseteq & \dotsc & \subseteq & K_{rs} = M
 	\end{array}$\\
 	Für $i = 1,\ldots,r$ ist $K_{is} = K(\sigma(b_k)\colon k=1,\ldots,i,\sigma\in G)$.\\
 	Für $\tau\in G$ ist $\tau(K_{is}) \subseteq K_{is}$.
@@ -278,10 +278,10 @@ Dann ist $\Gal(K\mid K)$ auflösbar.
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-\randbem{Aussagen von $\Gal(M\mid K)$ schwer; deswegen Umweg über Adjunktion von $\zeta$ (dann vorheriges Kapitel anwenden).} Sei $K = K_0 \subseteq K_1 \subseteq \ldots \subseteq K_r = L$ mit $K_i = K_{i-1}(b_i)$ und $b_i^{n_i}\in K_{i-1}$ wie oben.
+\randbem{Aussagen von $\Gal(M\mid K)$ schwer; deswegen Umweg über Adjunktion von $\zeta$ (dann vorheriges Kapitel anwenden).} Sei $K = K_0 \subseteq K_1 \subseteq \dotsc \subseteq K_r = L$ mit $K_i = K_{i-1}(b_i)$ und $b_i^{n_i}\in K_{i-1}$ wie oben.
 Sei $n := n_1\ldots n_r$ und $M$ Zerfällungskörper von $X^n-1$ über $L$.
 Wie üblich bilden die Nullstellen von $X^n-1$ in $M$ eine zyklische Gruppe $\left\langle \zeta\right\rangle$ der Ordnung $n$.
-Wegen $K\subseteq K(\zeta)\subseteq K_1(\zeta) \subseteq \ldots \subseteq K_r(\zeta) = L(\zeta) = M$, $\zeta^n = 1 \in K$ und $K_i(\zeta) = K_{i-1}(\zeta,b_i)$ und $b_i^{n_i} \in K_{i-1} \subseteq K_{i-1}(\zeta)$ für alle $i$ ist $M\mid K$ Radikalerweiterung.
+Wegen $K\subseteq K(\zeta)\subseteq K_1(\zeta) \subseteq \dotsc \subseteq K_r(\zeta) = L(\zeta) = M$, $\zeta^n = 1 \in K$ und $K_i(\zeta) = K_{i-1}(\zeta,b_i)$ und $b_i^{n_i} \in K_{i-1} \subseteq K_{i-1}(\zeta)$ für alle $i$ ist $M\mid K$ Radikalerweiterung.
 
 Da $L\mid K$ Galoiserweiterung ist, ist $L$ Zerfällungskörper eines Polynomes $\varphi\in K\left[X\right]$ über $K$.
 Dann ist $M\mid K$Zerfällungskörper von $(X^n-1)\varphi \in K\left[X\right]$ über $K$.
@@ -307,7 +307,7 @@ Nach \autoref{satz:11.4} ist $\Gal(M\mid K_i(\zeta)) \unlhd \Gal(M\mid K_{i-1}(\
 \[\Gal(M\mid K_{i-1}(\zeta))/\Gal(M\mid K_i(\zeta)) \cong \Gal(K_i(\zeta)\mid K_{i-1}(\zeta))\]
 ist zyklisch.\\
 Wir erhalten so eine Folge von Untergruppen
-\[\Gal(M\mid K) \geq \Gal(M\mid K(\zeta)) \geq \Gal(M\mid K_1(\zeta)) \geq \ldots \geq \Gal(M\mid \underbrace{K_r(\zeta)}_{=M}) = \left\{1\right\}\]
+\[\Gal(M\mid K) \geq \Gal(M\mid K(\zeta)) \geq \Gal(M\mid K_1(\zeta)) \geq \dotsc \geq \Gal(M\mid \underbrace{K_r(\zeta)}_{=M}) = \left\{1\right\}\]
 dabei ist jedes Glied Normalteiler im vorangehenden Glied, und die entsprechende Faktorgruppe ist abelsch.
 Daher ist $\Gal(M\mid K)$ auflösbar.
 \end{beweis}
@@ -323,7 +323,7 @@ Wir werden im Folgenden zeigen, dass das Polynom $X^5-4x+2$ über $\Q$ nicht durc
 % Satz 14.6
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}[Eisenstein Kriterium]\label{satz:14.6}
-Sei $\alpha = X^n + a_{n-1}X^{n-1} + \ldots + a_1X+a_0\in\Z\left[X\right]$, und sei $p\in\PZ$ mit $p\mid a_0,\ldots,p\mid a_{n-1},p^2\nmid a_0$.\\
+Sei $\alpha = X^n + a_{n-1}X^{n-1} + \dotsc + a_1X+a_0\in\Z\left[X\right]$, und sei $p\in\PZ$ mit $p\mid a_0,\ldots,p\mid a_{n-1},p^2\nmid a_0$.\\
 Dann ist $\alpha$ irreduzibel in $\Q\left[X\right]$.
 \end{satz}
 
@@ -335,14 +335,14 @@ Annahme: $\alpha$ reduzibel in $\Q\left[X\right]$.\\
 Dann existiert $\beta,\gamma \in\Z\left[X\right]$ mit $\alpha = \beta\gamma$ und $\deg\beta < n > \deg\gamma$, \OE{}$\beta,\gamma$ normiert.
 Schreibe
 \[\begin{array}{lcl}
-\beta & = & X^k + b_{k-1}X^{k-1} + \ldots + b_1X + b_0,\\
-\gamma & = & X^l + c_{l-1}X^{l-1} + \ldots + c_1X + c_0 \qquad (b_i,c_j\in\Z).
+\beta & = & X^k + b_{k-1}X^{k-1} + \dotsc + b_1X + b_0,\\
+\gamma & = & X^l + c_{l-1}X^{l-1} + \dotsc + c_1X + c_0 \qquad (b_i,c_j\in\Z).
 \end{array}\]
 Wegen $p^2\nmid a_0 = b_0c_0$ ist $p\nmid b_0$ oder $p\nmid c_0$, \OE{} $p\nmid c_0$.
 Wegen $p\nmid a_0 = b_0c_0$ ist $p\nmid b_0$.
 Sei $p\mid b_1,\ldots,p\mid b_{i-1},p\nmid b$ $(1 \leq i \leq k < n)$.
 Dann
-\[p\mid a_i = \underbrace{b_0c_i + b_1c_{i-1}+\ldots}_{\equiv 0\pmod{p}}+\underbrace{b_ic_0}_{\not\equiv 0\pmod{p}}\]
+\[p\mid a_i = \underbrace{b_0c_i + b_1c_{i-1}+\dotsc}_{\equiv 0\pmod{p}}+\underbrace{b_ic_0}_{\not\equiv 0\pmod{p}}\]
 Widerspruch!
 \end{beweis}
 
@@ -359,9 +359,9 @@ $X^3-4x+2$ ist irreduzibel in $\Q\left[X\right]$.
 \begin{satz}\label{satz:14.7}
 Sei $f\colon K\mapsto\widetilde{K}$, $a\mapsto\widetilde{a}$, ein Isomorphismus von Körpern.\\
 Sei 
-\[\varphi = a_nX^n+a_{n-1}X^{n-1}+\ldots+a_1X + a_0\in K\left[X\right]\] 
+\[\varphi = a_nX^n+a_{n-1}X^{n-1}+\dotsc+a_1X + a_0\in K\left[X\right]\] 
 und sei 
-\[\widetilde{\varphi}:=\widetilde{a}_nX^n + \widetilde{a}_{n-1}X^{n-1}+\ldots+\widetilde{a}_1X+\widetilde{a}_0 \in \widetilde{K}\left[X\right]\] 
+\[\widetilde{\varphi}:=\widetilde{a}_nX^n + \widetilde{a}_{n-1}X^{n-1}+\dotsc+\widetilde{a}_1X+\widetilde{a}_0 \in \widetilde{K}\left[X\right]\] 
 das entsprechende Polynom in $\widetilde{K}\left[X\right]$.\\
 Sei $L$ Zerfällungskörper von $\varphi$ über $K$, und sei $\widetilde{L}$ Zerfällungskörper von $\widetilde{\varphi}$ über $\widetilde{K}$.\\
 Dann kann man $f$ zu einem Isomorphismus $g\colon L\mapsto\widetilde{L}$\randbem{d.\,h. Zerfällungskörper sind isomorph.} fortsetzen.
@@ -409,7 +409,7 @@ Dann enthält $G$ ein Element der Ordnung $p$.
 % Beweis
 %%%%%%%%%%%%%%%%%%%
 \begin{beweis}
-Sei $M:= \left\{(g_1,\ldots,g_p)\in G^p\colon g_1\cdot\ldots\cdot g_p = 1\right\}$.\\
+Sei $M:= \left\{(g_1,\ldots,g_p)\in G^p\colon g_1\cdot\dotsc\cdot g_p = 1\right\}$.\\
 Dann: $\abs{M} = \abs{G}^{p-1}\equiv 0\pmod{p}$.\\
 Wir definieren eine Relation $\sim$ auf $M$ durch:
 \[(g_1,\ldots,g_p)\sim(h_1,\ldots,h_p):\Leftrightarrow \exists i\in\left\{1,\ldots,p\right\}\colon (h_1,\ldots,h_p)=(g_i,\ldots,g_p,g_1,\ldots,g_{i-1})\]
@@ -445,10 +445,10 @@ Sei $\Phi(g) := \left\{\left\{i,j\right\}\colon 1\leq i<j\leq n, g(i)>g(j)\right
 (Die Elemente in $\Phi(g)$ heißen \highl{Inversionen} oder \highl{Fehlstände} und $l(g)$ heißt die \highl{L"ange}{Länge} von $g$.)
 Wir argumentieren nach $l(g)$.
 
-Im Fall $l(g) = 0$ ist $\Phi(g) = \varnothing$, d.\,h. $g(1)<g(2)<g(3)<\ldots<g(n)$ und daher $g=1$.
+Im Fall $l(g) = 0$ ist $\Phi(g) = \varnothing$, d.\,h. $g(1)<g(2)<g(3)<\dotsc<g(n)$ und daher $g=1$.
 
 Sei $l(g) > 0$.
-Im Fall $\left\{k, k+1\right\} \notin \Phi(g)$ für $k=1,\ldots,n-1$ wäre wieder $g(1)<g(2)<\ldots<g(n)$, d.\,h. $g=1$ und $l(g) = 0$. Widerspruch!
+Im Fall $\left\{k, k+1\right\} \notin \Phi(g)$ für $k=1,\ldots,n-1$ wäre wieder $g(1)<g(2)<\dotsc<g(n)$, d.\,h. $g=1$ und $l(g) = 0$. Widerspruch!
 
 Also existiert ein $k\in\left\{1,\ldots,n-1\right\}$ mit $\left\{k,k+1\right\} \in \Phi(g)$.
 Man zeigt leicht:
